--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=No hi ha ítems guardats
 NoSavedSearches_t=No hi ha cerques guardades
 NoSavedTags_t=No hi ha etiquetes guardades
 NoScript_t=Per a un ús òptim d'aquest lloc web cal tenir JavaScript activat
-NotBoolean_t=no
 Of_t=de
 OpensInNewWindow_t=S'obre a una finestra nova
-OrBoolean_t=o
 Page_t=Pàgina
 PartnerExplain_t=És la xarxa de socis que han col·laborat en fer possible Europeana i que representen Europeana als seus països i associacions professionals.
 Partner_t=Soci
 Partners_t=Socis
-PasswordChoose_t=Escolliu una contrasenya
-PasswordExplain_t=Les contrasenyes han de tenir entre 6 i 30 caràcters
 Password_t=Contrasenya
 PeopleAreCurrentlyThinkingAbout_t=La gent pensa actualment en
-PersonalPage=La Meva Europeana
-PickUserName_t=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
-PleaseFollowTheLinkProvided_t=Si us plau, seguiu l'enllaç del correu electrònic i completeu el procés de registre
-Previous_t=Anterior
-Privacy_t=Privacitat
-Provider_t=Proveïdor
-RefineYourSearch_t=Afineu la vostra cerca
 RegisterAgain_t=Registreu-vos una altra vegada
-Register_t=Registreu-vos
-RegistrationFailed_t=S'ha produït un error mentre us registraveu. Si us plau, intenteu-lo de nou
-RelatedContent_t=Contingut relacionat
-RememberMe_t=Recordeu-me en aquest ordinador
-Remove_t=Eliminar
-RepeatPassword_t=Repetiu la contrasenya
 RequiredField_t=És un camp obligatori
 Reset_t=Reinicialitzar
 Results_t=Resultats
-ReturnToResults_t=Tornar als resultats
-SaveThisSearch_t=Guardar aquesta cerca
-SaveToPersonalPage=Guardar a la Meva Europeana
-SavedItems_t=Ítems guardats
-SavedSearches_t=Cerques guardades
-SavedTags_t=Etiquetes guardades
-SearchSavedFailed_t=Guardar la cerca ha fallat
-SearchSaved_t=Cerca guardada
-Search_t=Cerca
 Sector_t=Sector
-SeeAllRelatedItems_t=Veure tots els ítems relacionats
-SendUsFeedback_t=Envieu-nos comentaris
-Send_t=Enviar
-ShareWithAFriend_t=Compartir amb un amic
-ShareYourIdeas_t=Compartiu les vostres idees
-ShowAll_t=Mostrar tot
-SignIn_t=Inscriure's
-Sitemap_t=Mapa del lloc
-Sound_t=So
 Sounds_t=Sons
 StrorylineCredits_t=Guió i crèdits
-Subject_t=Matèria
-TagAdded_t=Etiqueta afegida
-TagAdditionFailed_t=Afegir etiqueta ha fallat
-Tagging_t=Etiquetatge
-TermsAndConditions_t=Termes i condicions
-Text_t=Text
 Texts_t=Textos
 ThisIsEuropeana_t=Això és Europeana
 ThoughtLab_t=Laboratori del pensament
 TimelineNavigator_t=Navegador cronològic
 Timeline_t=Cronologia
-Title_t=Títol
 UserConductAgree_t=Entenc que la Meva Europeana em dóna l'oportunitat de crear etiquetes per a qualsevol ítem que desitgi. Estic d'acord en no crear etiquetes que puguin ser considerades difamatòries, perjudicials, amenaçadores, il•legals, abusives, infamatòries, il•lícites, assetjadores, pornogràfiques, obscenes, fraudulentes, que envaeixin la privacitat o els drets de publicitat, odioses, racials o ètniques o de qualsevol mena que puguin ser objectables. En fer clic en aquesta casella accepto complir aquest acord, i entenc que si no ho faig, la meva condició de membre de la Meva Europeana es donarà per finalitzada. CLIQUEU PER ACCEPTAR
 UserConduct_t=Conducta de l'usuari
-UserInformation_t=Informació de l'usuari
-UserNameChoose_t=Escolliu un nom d'usuari
-UserNameExplain_t=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
-UserTags_t=Etiquetes d'usuari
-UsernameInUse_t=és en ús. Si us plau, escolliu un altre nom d'usuari
-Username_t=Nom d'usuari
-UsingEuropeana_t=Utilitzar Europeana
 Video_t=Video
-Videos_t=Videos
-ViewAsXML_t=Visualització en XML
-ViewInOriginalContext_t=Veure en el context original
-ViewWithLabels_t=Visualització amb etiquetes
-ViewWithoutLabels_t=Visualització sense etiquetes
 ViewingRelatedItems_t=Esteu visualitzant ítems relacionats
-YouHaveSearchFor_t=Heu cercat
 _action.add.annotation=null
 _action.add.tag=Afegir una etiqueta
 _action.advanced.search=Cerca avançada
@@ -146,7 +91,21 @@ _action.alt.more.info=Cliqueu per més informació
 _action.alt.next.page=Cliqueu aquí per anar a la pàgina següent de resultats
 _action.alt.previous.page=cliqueu aquí per anar a la pàgina anterior de resultats
 _action.alt.table.view=Visualització en taula
+_action.personalpage=La Meva Europeana
+_action.previous=Anterior
+_action.refine.your.search=Afineu la vostra cerca
+_action.return.to.results=Tornar als resultats
+_action.save.this.search=Guardar aquesta cerca
+_action.save.to.mine=Guardar a la Meva Europeana
+_action.search=Cerca
+_action.seeallrelateditems=Veure tots els ítems relacionats
+_action.send=Enviar
+_action.share.with.friend=Compartir amb un amic
+_action.videos=Videos
+_action.view.in.original.context=Veure en el context original
 _boolean.and=i
+_boolean.not=no
+_boolean.or=o
 _facet.by.collection=null
 _facet.by.country=Per país
 _facet.by.date=Per data
@@ -155,14 +114,34 @@ _facet.by.provider=Per proveïdor
 _facet.by.type=Per tipus
 _facet.by.user.tag=Per etiqueta d'usuari
 _facet.by.year=null
+_failure.search.saved=Guardar la cerca ha fallat
 _header.actions=Accions
+_header.relatedcontent=Contingut relacionat
 _mine.date.saved=Data guardada
 _mine.delete=Esborrar
+_mine.saved.items=Ítems guardats
+_mine.saved.searches=Cerques guardades
+_mine.saved.tags=Etiquetes guardades
+_mine.user.information=Informació de l'usuari
+_mine.username=Nom d'usuari
 _option.any.field=Qualsevol camp
 _prompt.email.address=Adreça de correu electrònic
+_prompt.provider=Proveïdor
 _register.email.has.been.sent=S'ha enviat un correu electrònic a l'adreça següent
+_register.password.choose=Escolliu una contrasenya
+_register.password.explain=Les contrasenyes han de tenir entre 6 i 30 caràcters
+_register.pick.user.name=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
+_register.please.follow.link=Si us plau, seguiu l'enllaç del correu electrònic i completeu el procés de registre
+_register.register=Registreu-vos
+_register.registration.failed=S'ha produït un error mentre us registraveu. Si us plau, intenteu-lo de nou
+_register.repeat.password=Repetiu la contrasenya
+_register.username.choose=Escolliu un nom d'usuari
+_register.username.explain=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
 _search.field.creator=Creador
 _search.field.date=Data
+_search.option.subject=Matèria
+_search.option.title=Títol
+_success.search.saved=Cerca guardada
 _unused.about.us=Qui som
 _unused.accessibility=Accessibilitat
 _unused.add=Afegir
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Un agregador recull material d'un conjunt de contrib
 _unused.altprint=Imprimir aquesta pàgina
 _unused.aplacetoshareideas=un lloc per a la inspiració i les idees. Cerqueu entre col·leccions culturals d'Europa, connecteu-vos a camins d'altres usuaris i compartiu els vostres descobriments.
 _unused.browse.through.time=Navegueu pel temps
+_unused.privacy=Privacitat
+_unused.remember.me=Recordeu-me en aquest ordinador
+_unused.remove=Eliminar
+_unused.send.feedback=Envieu-nos comentaris
+_unused.share.your.ideas=Compartiu les vostres idees
+_unused.show.all=Mostrar tot
+_unused.sign.in=Inscriure's
+_unused.site.map=Mapa del lloc
+_unused.sound=So
+_unused.tag.added=Etiqueta afegida
+_unused.tag.addition.failed=Afegir etiqueta ha fallat
+_unused.tagging=Etiquetatge
+_unused.terms.and.conditions=Termes i condicions
+_unused.text=Text
+_unused.username.in.use=és en ús. Si us plau, escolliu un altre nom d'usuari
+_unused.usertags=Etiquetes d'usuari
+_unused.using.europeana=Utilitzar Europeana
+_unused.view.as.xml=Visualització en XML
+_unused.view.with.labels=Visualització amb etiquetes
+_unused.view.without.labels=Visualització sense etiquetes
+_unused.you.have.search.for=Heu cercat
 albania_t=Albània
 armenia_t=Armènia
 austria_t=Àustria
