--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Keine gespeicherten Objekte
 NoSavedSearches_t=Keine gespeicherten Suchanfragen
 NoSavedTags_t=Keine gespeicherten Tags
 NoScript_t=Um diese Seite optimal nutzen zu können, müssen Sie Javascript aktiviert haben
-NotBoolean_t=nicht
 Of_t=von
 OpensInNewWindow_t=In neuem Fenster öffnen
-OrBoolean_t=oder
 Page_t=Seite
 PartnerExplain_t=Dies ist das Netzwerk derjenigen Partner, die für den Aufbau der Europeana zusammengearbeitet haben und die Europeana in ihren Ländern und professionellen Organisationen vertreten.
 Partner_t=Partner
 Partners_t=Partner
-PasswordChoose_t=Wählen Sie ein Passwort
-PasswordExplain_t=Passwörter müssen 6-30 Zeichen haben
 Password_t=Passwort
 PeopleAreCurrentlyThinkingAbout_t=Zurzeit wird nachgedacht über
-PersonalPage=My Personal Page
-PickUserName_t=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
-PleaseFollowTheLinkProvided_t=Bitte folgen Sie dem Link in der E-Mail, um die Registrierung abzuschließen.
-Previous_t=Vorige
-Privacy_t=Datenschutz
-Provider_t=Anbieter
-RefineYourSearch_t=Suche verfeinern
 RegisterAgain_t=Wieder registrieren
-Register_t=Registrierung
-RegistrationFailed_t=Bei der Bearbeitung Ihrer Registrierung ist ein Fehler aufgetreten. Bitte versuchen Sie es noch einmal
-RelatedContent_t=Ähnlicher Inhalt
-RememberMe_t=Auf diesem Computer merken
-Remove_t=Entfernen
-RepeatPassword_t=Passwort wiederholen
 RequiredField_t=Dies ist ein obligatorisches Feld
 Reset_t=Reset
 Results_t=Ergebnisse
-ReturnToResults_t=Zurück zur Ergebnisliste
-SaveThisSearch_t=Diese Suche speichern
-SaveToPersonalPage=In My Personal Page speichern
-SavedItems_t=Gespeicherte Objekte
-SavedSearches_t=Gespeicherte Suchanfragen
-SavedTags_t=Gespeicherte Tags
-SearchSavedFailed_t=Speichern der Suche fehlgeschlagen
-SearchSaved_t=Suche gespeichert
-Search_t=Suche
 Sector_t=Bereich
-SeeAllRelatedItems_t=Alle ähnlichen Objekte anschauen
-SendUsFeedback_t=Schicken Sie uns Ihr Feedback
-Send_t=Senden
-ShareWithAFriend_t=An einen Freund schicken
-ShareYourIdeas_t=Teilen Sie Ihre Ideen
-ShowAll_t=Alles anzeigen
-SignIn_t=Anmelden
-Sitemap_t=Sitemap
-Sound_t=Ton
 Sounds_t=Töne
 StrorylineCredits_t=Inhalt und Beteiligte
-Subject_t=Thema
-TagAdded_t=Tag hinzugefügt
-TagAdditionFailed_t=Tag hinzufügen fehlgeschlagen
-Tagging_t=Tagging
-TermsAndConditions_t=Benutzungsbedingungen
-Text_t=Text
 Texts_t=Texte
 ThisIsEuropeana_t=Das ist Europeana
 ThoughtLab_t=Denklabor
 TimelineNavigator_t=Zeitstrahl-Navigator
 Timeline_t=Zeitstrahl
-Title_t=Titel
 UserConductAgree_t=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird. HIER KLICKEN UM ZUZUSTIMMEN
 UserConduct_t=Nutzerverhalten
-UserInformation_t=Nutzerinformation
-UserNameChoose_t=Wählen Sie einen Benutzernamen
-UserNameExplain_t=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
-UserTags_t=Nutzertags
-UsernameInUse_t=ist schon vergeben. Bitte wählen Sie einen anderen Benutzernamen.
-Username_t=Nutzername
-UsingEuropeana_t=Europeana nutzen
 Video_t=Video
-Videos_t=Videos
-ViewAsXML_t=In XML ansehen
-ViewInOriginalContext_t=Im Originalzusammenhang ansehen
-ViewWithLabels_t=Mit Labels ansehen
-ViewWithoutLabels_t=Ohne Labels ansehen
 ViewingRelatedItems_t=Sie betrachten ähnliche Objekte
-YouHaveSearchFor_t=Sie haben nach...gesucht
 _action.add.annotation=Annotation hinzufügen
 _action.add.tag=Tag hinzufügen
 _action.advanced.search=Erweiterte Suche
@@ -146,7 +91,21 @@ _action.alt.more.info=Für weitere Informationen hier klicken
 _action.alt.next.page=Für die nächste Seite hier klicken
 _action.alt.previous.page=Für die vorige Seite hier klicken
 _action.alt.table.view=Miniaturansicht
+_action.personalpage=My Personal Page
+_action.previous=Vorige
+_action.refine.your.search=Suche verfeinern
+_action.return.to.results=Zurück zur Ergebnisliste
+_action.save.this.search=Diese Suche speichern
+_action.save.to.mine=In My Personal Page speichern
+_action.search=Suche
+_action.seeallrelateditems=Alle ähnlichen Objekte anschauen
+_action.send=Senden
+_action.share.with.friend=An einen Freund schicken
+_action.videos=Videos
+_action.view.in.original.context=Im Originalzusammenhang ansehen
 _boolean.and=und
+_boolean.not=nicht
+_boolean.or=oder
 _facet.by.collection=null
 _facet.by.country=nach Land
 _facet.by.date=nach Datum
@@ -155,14 +114,34 @@ _facet.by.provider=nach Anbieter
 _facet.by.type=nach Typ
 _facet.by.user.tag=nach Nutzertag
 _facet.by.year=null
+_failure.search.saved=Speichern der Suche fehlgeschlagen
 _header.actions=Aktionen
+_header.relatedcontent=Ähnlicher Inhalt
 _mine.date.saved=Datum gespeichert
 _mine.delete=Löschen
+_mine.saved.items=Gespeicherte Objekte
+_mine.saved.searches=Gespeicherte Suchanfragen
+_mine.saved.tags=Gespeicherte Tags
+_mine.user.information=Nutzerinformation
+_mine.username=Nutzername
 _option.any.field=Alle Felder
 _prompt.email.address=E-Mailadresse
+_prompt.provider=Anbieter
 _register.email.has.been.sent=Eine E-Mail wurde an folgende Adresse gesendet
+_register.password.choose=Wählen Sie ein Passwort
+_register.password.explain=Passwörter müssen 6-30 Zeichen haben
+_register.pick.user.name=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
+_register.please.follow.link=Bitte folgen Sie dem Link in der E-Mail, um die Registrierung abzuschließen.
+_register.register=Registrierung
+_register.registration.failed=Bei der Bearbeitung Ihrer Registrierung ist ein Fehler aufgetreten. Bitte versuchen Sie es noch einmal
+_register.repeat.password=Passwort wiederholen
+_register.username.choose=Wählen Sie einen Benutzernamen
+_register.username.explain=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
 _search.field.creator=Urheber
 _search.field.date=Datum
+_search.option.subject=Thema
+_search.option.title=Titel
+_success.search.saved=Suche gespeichert
 _unused.about.us=Wir über uns
 _unused.accessibility=Zugänglichkeit
 _unused.add=Hinzufügen
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Ein Aggregator sammelt Material von einer ganzen Rei
 _unused.altprint=Diese Seite drucken
 _unused.aplacetoshareideas=ein Ort für Inspiration und Ideen. Durchsuchen Sie die kulturellen Sammlungen Europas, verbinden Sie sich mit den Suchwegen anderer und teilen Sie Ihre Entdeckungen.
 _unused.browse.through.time=Durch die Zeit browsen
+_unused.privacy=Datenschutz
+_unused.remember.me=Auf diesem Computer merken
+_unused.remove=Entfernen
+_unused.send.feedback=Schicken Sie uns Ihr Feedback
+_unused.share.your.ideas=Teilen Sie Ihre Ideen
+_unused.show.all=Alles anzeigen
+_unused.sign.in=Anmelden
+_unused.site.map=Sitemap
+_unused.sound=Ton
+_unused.tag.added=Tag hinzugefügt
+_unused.tag.addition.failed=Tag hinzufügen fehlgeschlagen
+_unused.tagging=Tagging
+_unused.terms.and.conditions=Benutzungsbedingungen
+_unused.text=Text
+_unused.username.in.use=ist schon vergeben. Bitte wählen Sie einen anderen Benutzernamen.
+_unused.usertags=Nutzertags
+_unused.using.europeana=Europeana nutzen
+_unused.view.as.xml=In XML ansehen
+_unused.view.with.labels=Mit Labels ansehen
+_unused.view.without.labels=Ohne Labels ansehen
+_unused.you.have.search.for=Sie haben nach...gesucht
 albania_t=Albanien
 armenia_t=Armenien
 austria_t=Österreich
