--- a/portal/src/main/resources/i18n/messages_el.properties
+++ b/portal/src/main/resources/i18n/messages_el.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Μη αποθηκευμένα τεκμήρια
 NoSavedSearches_t=Μη αποθηκευμένες έρευνες
 NoSavedTags_t=Μη αποθηκευμένες ετικέτες
 NoScript_t=Για να κάνετε τη βέλτιστη χρήση αυτού του δικτυακού τόπου, χρειάζεται να έχετε ενεργοποιήσει το JavaScript
-NotBoolean_t=όχι
 Of_t=του
 OpensInNewWindow_t=Ανοίγει νέο παράθυρο
-OrBoolean_t=ή
 Page_t=Σελίδα
 PartnerExplain_t=Αυτό είναι το δίκτυο εταίρων, οι οποίοι συνεργάστηκαν για να δημιουργηθεί η Europeana και οι οποίοι εκπροσωπούν τη Europeana στις χώρες τους και στις επαγγελματικές ενώσεις.
 Partner_t=Εταίρος
 Partners_t=Εταίροι
-PasswordChoose_t=Επιλέξτε κωδικό πρόσβασης
-PasswordExplain_t=Οι κωδικοί πρόσβασης πρέπει να έχουν μήκος 6-30 χαρακτήρων
 Password_t=Κωδικός πρόσβασης
 PeopleAreCurrentlyThinkingAbout_t=Οι άνθρωποι τώρα σκέπτονται γι'αυτό
-PersonalPage=Η Europeana μου
-PickUserName_t=Το όνομα χρήστη θα εμφανιστεί όταν συνδεθείτε
-PleaseFollowTheLinkProvided_t=Παρακαλούμε να ακολουθήσετε το σύνδεσμο που δίδεται στο ηλ-ταχυδρομείο και ολοκληρώστε τη διαδικασία εγγραφής
-Previous_t=Προηγούμενο
-Privacy_t=Προστασία της ιδιωτικής ζωής
-Provider_t=Πάροχος
-RefineYourSearch_t=Επαναπροσδιορίστε την έρευνά σας
 RegisterAgain_t=Εγγραφή εκ νέου
-Register_t=Εγγραφή
-RegistrationFailed_t=Ένα σφάλμα εμφανίστηκε κατά την προσπάθεια επεξεργασίας της εγγραφής σας. Παρακαλούμε προσπαθήστε ξανά
-RelatedContent_t=Σχετικό περιεχόμενο
-RememberMe_t=Απομνημόνευση σ' αυτόν τον υπολογιστή
-Remove_t=Μετακίνηση
-RepeatPassword_t=Επαναλάβετε τον κωδικό πρόσβασης
 RequiredField_t=Αυτό είναι απαιτούμενο πεδίο
 Reset_t=Επανεκκίνηση
 Results_t=Αποτελέσματα
-ReturnToResults_t=Επιστροφή στα αποτελέσματα
-SaveThisSearch_t=Αποθήκευση αυτής της έρευνας
-SaveToPersonalPage=Αποθήκευση στη Europeana μου
-SavedItems_t=Αποθηκευμένα τεκμήρια
-SavedSearches_t=Αποθηκευμένες έρευνες
-SavedTags_t=Αποθηκευμένες ετικέτες
-SearchSavedFailed_t=Αποτυχία αποθήκευσης της έρευνας
-SearchSaved_t=Η έρευνα αποθηκεύτηκε
-Search_t=Έρευνα
 Sector_t=Τομέας
-SeeAllRelatedItems_t=Δείτε όλα τα σχετικά τεκμήρια
-SendUsFeedback_t=Στείλτε μας ανάδραση
-Send_t=Αποστολή
-ShareWithAFriend_t=Μοιραστείτε το με ένα φίλο
-ShareYourIdeas_t=Μοιραστείτε τις ιδέες σας
-ShowAll_t=Εμφάνιση όλων
-SignIn_t=Υπογραφή
-Sitemap_t=Χάρτης πλοήγησης
-Sound_t=Ήχος
 Sounds_t=Ήχοι
 StrorylineCredits_t=Λωρίδα ιστορίας και ονόματα συντελεστών
-Subject_t=Θέμα
-TagAdded_t=Προστέθηκε ετικέτα
-TagAdditionFailed_t=Αποτυχία προσθήκης ετικέτας
-Tagging_t=Τοποθέτηση ετικετών
-TermsAndConditions_t=Όροι και συνθήκες
-Text_t=Κείμενο
 Texts_t=Κείμενα
 ThisIsEuropeana_t=Αυτή είναι η Europeana
 ThoughtLab_t=Εργαστήριο σκέψης
 TimelineNavigator_t=Πλοηγός λωρίδας χρόνου
 Timeline_t=Λωρίδα χρόνου
-Title_t=Τίτλος
 UserConductAgree_t=Κατανοώ ότι η Europeana μου, μού δίνει την ευκαιρία να δημιουργήσω ετικέτες για όποιο τεκμήριο επιθυμώ. Δεσμεύομαι ότι δεν θα δημιουργήσω ετικέτες που μπορούν να θεωρηθούν δυσφημιστικές, επιζήμιες, απειλητικές, παράνομες, συκοφαντικές, παραβατικές, υβριστικές, εμπρηστικές, παρενοχλητικές, πορνογραφικές, ανήθικες, δόλιες, παρεμβατικές στα δικαιώματα της ιδιωτικής μου ζωής ή δημοσιότητας, που προκαλούν μίσος ή ρατσισμό, εθνικά ή με άλλο τρόπο αποδοκιμαστέες. Πατώντας αυτό το τετραγωνίδιο δεσμεύομαι να τηρήσω αυτή τη συμφωνία και κατανοώ ότι αν δεν το κάνω, τα δικαιώματά μου ως μέλος της Europeana μου θα τερματιστούν. ΠΑΤΗΣΤΕ ΓΙΑ ΝΑ ΣΥΜΦΩΝΗΣΕΤΕ
 UserConduct_t=Συμπεριφορά χρήστη
-UserInformation_t=Πληροφορίες για τον χρήστη
-UserNameChoose_t=Επιλέξτε ένα όνομα χρήστη
-UserNameExplain_t=Το όνομα χρήστη θα εμφανιστεί όταν συνδεθείτε
-UserTags_t=Ετικέτες χρηστών
-UsernameInUse_t=χρησιμοποιείται. Παρακαλούμε να επιλέξετε άλλο όνομα χρήστη
-Username_t=Όνομα χρήστη
-UsingEuropeana_t=Χρησιμοποιώντας τη Europeana
 Video_t=Βίντεο
-Videos_t=Βίντεο
-ViewAsXML_t=Εμφάνιση ως XML
-ViewInOriginalContext_t=Εμφάνιση στα αρχικά συμφραζόμενα
-ViewWithLabels_t=Εμφάνιση με τίτλους
-ViewWithoutLabels_t=Εμφάνιση χωρίς τίτλους
 ViewingRelatedItems_t=Βλέπετε σχετικά τεκμήρια
-YouHaveSearchFor_t=Έχετε αναζητήσει για
 _action.add.annotation=null
 _action.add.tag=Προσθήκη ετικέτας
 _action.advanced.search=Σύνθετη έρευνα
@@ -146,7 +91,21 @@ _action.alt.more.info=Πατήστε εδώ για περισσότερες πλ
 _action.alt.next.page=πατήστε εδώ για την επόμενη σελίδα αποτελεσμάτων
 _action.alt.previous.page=πατήστε εδώ για την προηγούμενη σελίδα αποτελεσμάτων
 _action.alt.table.view=Εμφάνιση πίνακα
+_action.personalpage=Η Europeana μου
+_action.previous=Προηγούμενο
+_action.refine.your.search=Επαναπροσδιορίστε την έρευνά σας
+_action.return.to.results=Επιστροφή στα αποτελέσματα
+_action.save.this.search=Αποθήκευση αυτής της έρευνας
+_action.save.to.mine=Αποθήκευση στη Europeana μου
+_action.search=Έρευνα
+_action.seeallrelateditems=Δείτε όλα τα σχετικά τεκμήρια
+_action.send=Αποστολή
+_action.share.with.friend=Μοιραστείτε το με ένα φίλο
+_action.videos=Βίντεο
+_action.view.in.original.context=Εμφάνιση στα αρχικά συμφραζόμενα
 _boolean.and=και
+_boolean.not=όχι
+_boolean.or=ή
 _facet.by.collection=null
 _facet.by.country=Κατά χώρα
 _facet.by.date=Κατά ημερομηνία
@@ -155,14 +114,34 @@ _facet.by.provider=Κατά πάροχο
 _facet.by.type=Κατά τύπο
 _facet.by.user.tag=Κατά ετικέτα χρήστη
 _facet.by.year=null
+_failure.search.saved=Αποτυχία αποθήκευσης της έρευνας
 _header.actions=Δράσεις
+_header.relatedcontent=Σχετικό περιεχόμενο
 _mine.date.saved=Η ημερομηνία αποθηκεύτηκε
 _mine.delete=Διαγραφή
+_mine.saved.items=Αποθηκευμένα τεκμήρια
+_mine.saved.searches=Αποθηκευμένες έρευνες
+_mine.saved.tags=Αποθηκευμένες ετικέτες
+_mine.user.information=Πληροφορίες για τον χρήστη
+_mine.username=Όνομα χρήστη
 _option.any.field=Οποιοδήποτε πεδίο
 _prompt.email.address=Διεύθυνση ηλ-ταχυδρομείου
+_prompt.provider=Πάροχος
 _register.email.has.been.sent=Ένα μήνυμα ηλ-ταχυδρομείου έχει αποσταλεί στην ακόλουθη διεύθυνση
+_register.password.choose=Επιλέξτε κωδικό πρόσβασης
+_register.password.explain=Οι κωδικοί πρόσβασης πρέπει να έχουν μήκος 6-30 χαρακτήρων
+_register.pick.user.name=Το όνομα χρήστη θα εμφανιστεί όταν συνδεθείτε
+_register.please.follow.link=Παρακαλούμε να ακολουθήσετε το σύνδεσμο που δίδεται στο ηλ-ταχυδρομείο και ολοκληρώστε τη διαδικασία εγγραφής
+_register.register=Εγγραφή
+_register.registration.failed=Ένα σφάλμα εμφανίστηκε κατά την προσπάθεια επεξεργασίας της εγγραφής σας. Παρακαλούμε προσπαθήστε ξανά
+_register.repeat.password=Επαναλάβετε τον κωδικό πρόσβασης
+_register.username.choose=Επιλέξτε ένα όνομα χρήστη
+_register.username.explain=Το όνομα χρήστη θα εμφανιστεί όταν συνδεθείτε
 _search.field.creator=Δημιουργός
 _search.field.date=Ημερομηνία
+_search.option.subject=Θέμα
+_search.option.title=Τίτλος
+_success.search.saved=Η έρευνα αποθηκεύτηκε
 _unused.about.us=Για μας
 _unused.accessibility=Προσβασιμότητα
 _unused.add=Προσθήκη
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Ένας 'συγκεντρωτής' συλλέγει
 _unused.altprint=Εκτύπωση αυτής της σελίδας
 _unused.aplacetoshareideas=ένας χώρος για έμπνευση και ιδέες. Ερευνήστε στις πολιτιστικές συλλογές της Ευρώπης, συνδεθείτε με τα μονοπάτια άλλων χρηστών και μοιραστείτε τις ανακαλύψεις σας.
 _unused.browse.through.time=Χρονολογική φυλλομέτρηση
+_unused.privacy=Προστασία της ιδιωτικής ζωής
+_unused.remember.me=Απομνημόνευση σ' αυτόν τον υπολογιστή
+_unused.remove=Μετακίνηση
+_unused.send.feedback=Στείλτε μας ανάδραση
+_unused.share.your.ideas=Μοιραστείτε τις ιδέες σας
+_unused.show.all=Εμφάνιση όλων
+_unused.sign.in=Υπογραφή
+_unused.site.map=Χάρτης πλοήγησης
+_unused.sound=Ήχος
+_unused.tag.added=Προστέθηκε ετικέτα
+_unused.tag.addition.failed=Αποτυχία προσθήκης ετικέτας
+_unused.tagging=Τοποθέτηση ετικετών
+_unused.terms.and.conditions=Όροι και συνθήκες
+_unused.text=Κείμενο
+_unused.username.in.use=χρησιμοποιείται. Παρακαλούμε να επιλέξετε άλλο όνομα χρήστη
+_unused.usertags=Ετικέτες χρηστών
+_unused.using.europeana=Χρησιμοποιώντας τη Europeana
+_unused.view.as.xml=Εμφάνιση ως XML
+_unused.view.with.labels=Εμφάνιση με τίτλους
+_unused.view.without.labels=Εμφάνιση χωρίς τίτλους
+_unused.you.have.search.for=Έχετε αναζητήσει για
 albania_t=Αλβανία
 armenia_t=Αρμενία
 austria_t=Αυστρία
