--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Salvestatud objekte ei ole
 NoSavedSearches_t=Salvestatud päringuid ei ole
 NoSavedTags_t=Salvestatud märksõnu ei ole
 NoScript_t=Selle veebilehe optimaalseks kasutamiseks on vaja aktiveerida JavaScript
-NotBoolean_t=mitte
 Of_t=of
 OpensInNewWindow_t=Avaneb uues aknas
-OrBoolean_t=või
 Page_t=Lehekülg
 PartnerExplain_t=Need on partnerid, kelle koostöös Europeana sündis, ja kes esindavad Europeanat oma riikides ning erialaorganisatsioonides
 Partner_t=Partner
 Partners_t=Partnerid
-PasswordChoose_t=Valige salasõna
-PasswordExplain_t=Salasõna pikkus peab olema 6-30 tähemärki
 Password_t=Salasõna
 PeopleAreCurrentlyThinkingAbout_t=Hetkel kasutajate mõtetes
-PersonalPage=Minu Europeana
-PickUserName_t=Kasutajanime näidatakse pärast sisselogimist
-PleaseFollowTheLinkProvided_t=Palun klõpsa e-kirjas antud lingile ja vii registreerimine lõpule
-Previous_t=Eelmine
-Privacy_t=Privaatsus
-Provider_t=Objekti valdaja
-RefineYourSearch_t=Täpsusta päringut
 RegisterAgain_t=Taasregistreerumine
-Register_t=Registreeru
-RegistrationFailed_t=Sinu registreeringu töötlemisel tekkis viga. Palun proovi uuesti
-RelatedContent_t=Sarnased objektid
-RememberMe_t=Mäleta mind selles arvutis
-Remove_t=Eemalda
-RepeatPassword_t=Korrake salasõna
 RequiredField_t=Selle välja täitmine on kohustuslik
 Reset_t=Alusta uuesti
 Results_t=Tulemused
-ReturnToResults_t=Tagasi tulemuste juurde
-SaveThisSearch_t=Salvesta see päring
-SaveToPersonalPage=Salvesta Minu Europeanasse
-SavedItems_t=Salvestatud objektid
-SavedSearches_t=Salvestatud päringud
-SavedTags_t=Salvestatud märksõnad
-SearchSavedFailed_t=Päringu salvestamine ebaõnnestus
-SearchSaved_t=Päring on salvestatud
-Search_t=Otsi
 Sector_t=Valdkond
-SeeAllRelatedItems_t=Vaata kõiki sarnaseid objekte
-SendUsFeedback_t=Andke meile tagasisidet
-Send_t=Saada
-ShareWithAFriend_t=Jagamine sõbraga
-ShareYourIdeas_t=Jagage oma mõtteid
-ShowAll_t=Näita kõiki
-SignIn_t=Sisselogimine
-Sitemap_t=Veebilehe kaart
-Sound_t=Heli
 Sounds_t=Helifailid
 StrorylineCredits_t=Süžee ja lõputiitrid
-Subject_t=Teema
-TagAdded_t=Märksõna lisatud
-TagAdditionFailed_t=Märksõna lisamine ebaõnnestus
-Tagging_t=Märksõnastamine
-TermsAndConditions_t=Kasutustingimused
-Text_t=Tekst
 Texts_t=Tekstid
 ThisIsEuropeana_t=See on Europeana
 ThoughtLab_t=Mõttelabor
 TimelineNavigator_t=Ajateljel liikumine
 Timeline_t=Ajatelg
-Title_t=Pealkiri
 UserConductAgree_t=Ma olen teadlik, et Minu Europeana annab mulle võimalusi lisada kõigile objektidele märksõnu. Ma luban käesolevaga, et ei lisa märksõnu, mida võib tõlgendada laimavate, kahjulike, ähvardavate, ebaseaduslike, solvavate, ahistavate, pornograafiliste, labaste, rahvuslikku või rassivaenu õhutavate, kellegi privaatsust ja muid õigusi rikkuvate või muul viisil ebakohastena. Sellele nupule klõpsates kinnitan ma oma nõustumist eelnevalt öelduga. Nende reeglite eiramine toob kaasa Minu Europeana kasutajatunnuse kustutamise. OLEN NÕUS
 UserConduct_t=Sisekorra eeskiri
-UserInformation_t=Kasutajaandmed
-UserNameChoose_t=Vali kasutajanimi
-UserNameExplain_t=Kui olete sisse loginud, näidatakse Teie kasutajanime
-UserTags_t=Kasutajate märksõnad
-UsernameInUse_t=on juba kasutusel. Palun valige teistsugune kasutajanimi
-Username_t=Kasutajanimi
-UsingEuropeana_t=Europeana kasutamine
 Video_t=Video
-Videos_t=Videod
-ViewAsXML_t=Vaata XML-vormingus
-ViewInOriginalContext_t=Objekti vaatamine tema algses asukohas
-ViewWithLabels_t=Vaata koos siltidega
-ViewWithoutLabels_t=Vaata ilma siltideta
 ViewingRelatedItems_t=Seotud objektide vaatamine
-YouHaveSearchFor_t=Otsiti
 _action.add.annotation=null
 _action.add.tag=Märksõna lisamine
 _action.advanced.search=Kompleksotsing
@@ -146,7 +91,21 @@ _action.alt.more.info=Rohkem teavet
 _action.alt.next.page=Järgmine tulemuste lehekülg
 _action.alt.previous.page=Eelmine tulemuste lehekülg
 _action.alt.table.view=Vaata tabelina
+_action.personalpage=Minu Europeana
+_action.previous=Eelmine
+_action.refine.your.search=Täpsusta päringut
+_action.return.to.results=Tagasi tulemuste juurde
+_action.save.this.search=Salvesta see päring
+_action.save.to.mine=Salvesta Minu Europeanasse
+_action.search=Otsi
+_action.seeallrelateditems=Vaata kõiki sarnaseid objekte
+_action.send=Saada
+_action.share.with.friend=Jagamine sõbraga
+_action.videos=Videod
+_action.view.in.original.context=Objekti vaatamine tema algses asukohas
 _boolean.and=ja
+_boolean.not=mitte
+_boolean.or=või
 _facet.by.collection=null
 _facet.by.country=Riikide järgi
 _facet.by.date=Ajaliselt
@@ -155,14 +114,34 @@ _facet.by.provider=Materjali valdaja järgi
 _facet.by.type=Tüübi järgi
 _facet.by.user.tag=Kasutajate lisatud märksõnade järgi
 _facet.by.year=null
+_failure.search.saved=Päringu salvestamine ebaõnnestus
 _header.actions=Tegevused
+_header.relatedcontent=Sarnased objektid
 _mine.date.saved=Kuupäev salvestatud
 _mine.delete=Kustuta
+_mine.saved.items=Salvestatud objektid
+_mine.saved.searches=Salvestatud päringud
+_mine.saved.tags=Salvestatud märksõnad
+_mine.user.information=Kasutajaandmed
+_mine.username=Kasutajanimi
 _option.any.field=Mistahes väli
 _prompt.email.address=E-posti aadress
+_prompt.provider=Objekti valdaja
 _register.email.has.been.sent=E-kiri on saadetud järgmisele aadressile
+_register.password.choose=Valige salasõna
+_register.password.explain=Salasõna pikkus peab olema 6-30 tähemärki
+_register.pick.user.name=Kasutajanime näidatakse pärast sisselogimist
+_register.please.follow.link=Palun klõpsa e-kirjas antud lingile ja vii registreerimine lõpule
+_register.register=Registreeru
+_register.registration.failed=Sinu registreeringu töötlemisel tekkis viga. Palun proovi uuesti
+_register.repeat.password=Korrake salasõna
+_register.username.choose=Vali kasutajanimi
+_register.username.explain=Kui olete sisse loginud, näidatakse Teie kasutajanime
 _search.field.creator=Autor
 _search.field.date=Kuupäev
+_search.option.subject=Teema
+_search.option.title=Pealkiri
+_success.search.saved=Päring on salvestatud
 _unused.about.us=Meist
 _unused.accessibility=Juurdepääs
 _unused.add=Lisa
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Vahendaja kogub materjali andmete valdajatelt, avald
 _unused.altprint=Lehekülje trükkimine
 _unused.aplacetoshareideas=koht ideede ja inspiratsiooni saamiseks. Otsige Europeana kogudest, järgige teiste kasutajate käidud radu ja jagage oma avastusi.
 _unused.browse.through.time=Sirvimine läbi aja
+_unused.privacy=Privaatsus
+_unused.remember.me=Mäleta mind selles arvutis
+_unused.remove=Eemalda
+_unused.send.feedback=Andke meile tagasisidet
+_unused.share.your.ideas=Jagage oma mõtteid
+_unused.show.all=Näita kõiki
+_unused.sign.in=Sisselogimine
+_unused.site.map=Veebilehe kaart
+_unused.sound=Heli
+_unused.tag.added=Märksõna lisatud
+_unused.tag.addition.failed=Märksõna lisamine ebaõnnestus
+_unused.tagging=Märksõnastamine
+_unused.terms.and.conditions=Kasutustingimused
+_unused.text=Tekst
+_unused.username.in.use=on juba kasutusel. Palun valige teistsugune kasutajanimi
+_unused.usertags=Kasutajate märksõnad
+_unused.using.europeana=Europeana kasutamine
+_unused.view.as.xml=Vaata XML-vormingus
+_unused.view.with.labels=Vaata koos siltidega
+_unused.view.without.labels=Vaata ilma siltideta
+_unused.you.have.search.for=Otsiti
 albania_t=Albaania
 armenia_t=Armeenia
 austria_t=Austria
