--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Ei tallennettuja kohteita
 NoSavedSearches_t=Ei tallennettuja hakuja
 NoSavedTags_t=Ei tallennetuja tageja
 NoScript_t=Saadaksesi tästä sivustosta parhaan mahdollisen hyödyn sinulla täytyy olla käytössä JavaScript
-NotBoolean_t=ei
 Of_t=mistä:
 OpensInNewWindow_t=Avaa uudessa ikkunassa
-OrBoolean_t=tai
 Page_t=Sivu
 PartnerExplain_t=Tämä on Europeanan aikaansaamiseksi yhteistyötä tehneiden ja maissaan sekä ammattilaisten järjestöissä Europeanaa edustavien kumppanien verkosto.
 Partner_t=Kumppani
 Partners_t=Kumppanit
-PasswordChoose_t=Valitse salasana
-PasswordExplain_t=Salasanan tulee olla 6 - 30 merkkiä pitkä
 Password_t=Salasana
 PeopleAreCurrentlyThinkingAbout_t=Juuri nyt käyttäjiä kiinnostaa
-PersonalPage=Minun Europeanani
-PickUserName_t=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
-PleaseFollowTheLinkProvided_t=Rekisteröidy sähköpostissa olevan linkin kautta
-Previous_t=Edellinen
-Privacy_t=Tietosuoja
-Provider_t=Julkaisija
-RefineYourSearch_t=Tarkenna hakua
 RegisterAgain_t=Rekisteröidy uudestaan
-Register_t=Rekisteröityminen
-RegistrationFailed_t=Rekisteröitymisesi käsittelyssä on tapahtunut virhe. Yritä uudelleen
-RelatedContent_t=Tähän liittyvä sisältö
-RememberMe_t=Muista tunnukset
-Remove_t=Poista
-RepeatPassword_t=Toista salasana
 RequiredField_t=Tämä on pakollinen kenttä
 Reset_t=Päivitä
 Results_t=Tulokset
-ReturnToResults_t=Palaa tuloksiin
-SaveThisSearch_t=Tallenna tämä haku
-SaveToPersonalPage=Tallenna minun Europeanaani
-SavedItems_t=Tallennetut kohteet
-SavedSearches_t=Tallennetut haut
-SavedTags_t=Tallennetut tagit
-SearchSavedFailed_t=Haun tallentaminen epäonnistui
-SearchSaved_t=Haku tallennettu
-Search_t=Haku
 Sector_t=Sektori
-SeeAllRelatedItems_t=Katso kaikki tähän liittyvät kohteet
-SendUsFeedback_t=Lähetä meille palautetta
-Send_t=Lähetä
-ShareWithAFriend_t=Jaa ystävälle
-ShareYourIdeas_t=Jaa ideoitasi
-ShowAll_t=Näytä kaikki
-SignIn_t=Kirjaudu sisään
-Sitemap_t=Sivukartta
-Sound_t=Äänite
 Sounds_t=Äänitteet
 StrorylineCredits_t=Juoni ja meriitit
-Subject_t=Aihe
-TagAdded_t=Tagi lisätty
-TagAdditionFailed_t=Tagin lisääminen epäonnistui
-Tagging_t=tagging (avainsanojen vapaa määrittely)
-TermsAndConditions_t=Käyttöehdot
-Text_t=Teksti
 Texts_t=Tekstit
 ThisIsEuropeana_t=Mikä Europeana on
 ThoughtLab_t=Ideahautomo
 TimelineNavigator_t=Aikajananavigaattori
 Timeline_t=Aikajana
-Title_t=Nimi
 UserConductAgree_t=Ymmärrän, että "Minun Europeanani" antaa mahdollisuuden luoda tageja mistä tahansa aiheesta. Sitoudun siihen, että en luo tageja, joita voi pitää herjaavina, vahingollisina, uhkaavina, lainvastaisina, loukkaavina, kajoavina, solvaavina, yllyttävinä, häiritsevinä, pornografisina, rivoina, valheellisina, yksityisiä tai julkisia oikeuksia loukkaavina, vastenmielisinä tai rotuun tai etniseen alkuperään liittyvistä syistä ei-toivottuina. Klikkaamalla tätä laatikkoa sitoudun tähän sopimukseen ja ymmärrän, että jos en niin tee, niin jäsenyyteni "Minun Europeanaani" lakkautetaan. HYVÄKSY KLIKKAAMALLA
 UserConduct_t=Käyttäjämenettely
-UserInformation_t=Tiedot käyttäjästä
-UserNameChoose_t=Valitse käyttäjätunnus
-UserNameExplain_t=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
-UserTags_t=Käyttäjätagit (vapaasti määritellyt avainsanat)
-UsernameInUse_t=on käytössä. Valitse toinen käyttäjätunnus
-Username_t=Käyttäjätunnus
-UsingEuropeana_t=Näin käytät Europeanaa
 Video_t=Video
-Videos_t=Videot
-ViewAsXML_t=Tarkastele XML-muodossa
-ViewInOriginalContext_t=Tarkastele alkuperäisessä yhteydessä
-ViewWithLabels_t=Otsikkonäyttö
-ViewWithoutLabels_t=Näyttö ilman otsikkoja
 ViewingRelatedItems_t=Muita tähän liittyviä kohteita
-YouHaveSearchFor_t=Olet tehnyt haun:
 _action.add.annotation=null
 _action.add.tag=Lisää tagi
 _action.advanced.search=Tarkennettu haku
@@ -146,7 +91,21 @@ _action.alt.more.info=Lisätietoja saat klikkaamalla tästä
 _action.alt.next.page=Seuraavan sivun tulokset saat näkyviin klikkaamalla tästä
 _action.alt.previous.page=Edellisen sivun tulokset saat näkyviin klikkaamalla tästä
 _action.alt.table.view=Taulukkonäkymä
+_action.personalpage=Minun Europeanani
+_action.previous=Edellinen
+_action.refine.your.search=Tarkenna hakua
+_action.return.to.results=Palaa tuloksiin
+_action.save.this.search=Tallenna tämä haku
+_action.save.to.mine=Tallenna minun Europeanaani
+_action.search=Haku
+_action.seeallrelateditems=Katso kaikki tähän liittyvät kohteet
+_action.send=Lähetä
+_action.share.with.friend=Jaa ystävälle
+_action.videos=Videot
+_action.view.in.original.context=Tarkastele alkuperäisessä yhteydessä
 _boolean.and=ja
+_boolean.not=ei
+_boolean.or=tai
 _facet.by.collection=null
 _facet.by.country=Maan mukaan
 _facet.by.date=Aikamääreen mukaan
@@ -155,14 +114,34 @@ _facet.by.provider=Julkaisijan mukaan
 _facet.by.type=Lajin mukaan
 _facet.by.user.tag=Käyttäjän tagin (vapaasti määritelty avainsana) mukaan
 _facet.by.year=null
+_failure.search.saved=Haun tallentaminen epäonnistui
 _header.actions=Tapahtumat
+_header.relatedcontent=Tähän liittyvä sisältö
 _mine.date.saved=Ajankohta tallennettu
 _mine.delete=Hylkää
+_mine.saved.items=Tallennetut kohteet
+_mine.saved.searches=Tallennetut haut
+_mine.saved.tags=Tallennetut tagit
+_mine.user.information=Tiedot käyttäjästä
+_mine.username=Käyttäjätunnus
 _option.any.field=Kaikki kentät
 _prompt.email.address=Sähköpostiosoite
+_prompt.provider=Julkaisija
 _register.email.has.been.sent=Sähköposti on lähetetty osoitteeseen
+_register.password.choose=Valitse salasana
+_register.password.explain=Salasanan tulee olla 6 - 30 merkkiä pitkä
+_register.pick.user.name=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
+_register.please.follow.link=Rekisteröidy sähköpostissa olevan linkin kautta
+_register.register=Rekisteröityminen
+_register.registration.failed=Rekisteröitymisesi käsittelyssä on tapahtunut virhe. Yritä uudelleen
+_register.repeat.password=Toista salasana
+_register.username.choose=Valitse käyttäjätunnus
+_register.username.explain=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
 _search.field.creator=Tekijä
 _search.field.date=Aika
+_search.option.subject=Aihe
+_search.option.title=Nimi
+_success.search.saved=Haku tallennettu
 _unused.about.us=Tietoa meistä
 _unused.accessibility=Saavutettavuus
 _unused.add=Lisää
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Aggregaattori kerää aineistoa useilta muilta osall
 _unused.altprint=Tulosta tämä sivu
 _unused.aplacetoshareideas=paikka elämyksille ja ideoille. Hae Euroopan kulttuuriaarteiden kokoelmista, liity käyttäjien yhteisöön ja jaa kokemuksesi muiden kanssa.
 _unused.browse.through.time=Selaa aikakausittain
+_unused.privacy=Tietosuoja
+_unused.remember.me=Muista tunnukset
+_unused.remove=Poista
+_unused.send.feedback=Lähetä meille palautetta
+_unused.share.your.ideas=Jaa ideoitasi
+_unused.show.all=Näytä kaikki
+_unused.sign.in=Kirjaudu sisään
+_unused.site.map=Sivukartta
+_unused.sound=Äänite
+_unused.tag.added=Tagi lisätty
+_unused.tag.addition.failed=Tagin lisääminen epäonnistui
+_unused.tagging=tagging (avainsanojen vapaa määrittely)
+_unused.terms.and.conditions=Käyttöehdot
+_unused.text=Teksti
+_unused.username.in.use=on käytössä. Valitse toinen käyttäjätunnus
+_unused.usertags=Käyttäjätagit (vapaasti määritellyt avainsanat)
+_unused.using.europeana=Näin käytät Europeanaa
+_unused.view.as.xml=Tarkastele XML-muodossa
+_unused.view.with.labels=Otsikkonäyttö
+_unused.view.without.labels=Näyttö ilman otsikkoja
+_unused.you.have.search.for=Olet tehnyt haun:
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Itävalta
