--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Nincs mentett elem
 NoSavedSearches_t=Nincs mentett keresés
 NoSavedTags_t=Nincs mentett címke
 NoScript_t=A honlap optimális használatához a JavaScript aktiválása szükséges
-NotBoolean_t=nem
 Of_t=:
 OpensInNewWindow_t=Megnyitás új abalakban
-OrBoolean_t=vagy
 Page_t=Oldal
 PartnerExplain_t=Ez az a partneri együttműködés, amelyben azok a könyvtárak vesznek részt, amelyek közreműködtek a Europeana létrehozásában, valamint képviselik a Europeanát országukban és a szakmai szervezetekben.
 Partner_t=Partner
 Partners_t=Partnerek
-PasswordChoose_t=Válasszon jelszót!
-PasswordExplain_t=A jelszónak 6-30 karakter hosszúnak kell lennie.
 Password_t=Jelszó
 PeopleAreCurrentlyThinkingAbout_t=Az emberek jelenleg erre gondolnak
-PersonalPage=Az én Europeanám
-PickUserName_t=A felhasználóneve akkor jelenik meg, ha bejelentkezik.
-PleaseFollowTheLinkProvided_t=Kérjük, kattintson az alábbi linkre a regisztráció befejezéséhez!
-Previous_t=Előző
-Privacy_t=Adatvédelem
-Provider_t=Szolgáltató
-RefineYourSearch_t=Szűkítse a keresést
 RegisterAgain_t=Új regisztráció
-Register_t=Regisztráció
-RegistrationFailed_t=A regisztráció során hiba történt. Kérjük, próbálja meg újra.
-RelatedContent_t=Kapcsolódó tartalom
-RememberMe_t=Emlékezzen rám ezen a számítógépen
-Remove_t=Törlés
-RepeatPassword_t=Jelszó megismétlése
 RequiredField_t=Ez egy kötelező mező.
 Reset_t=Törlés
 Results_t=Eredmények
-ReturnToResults_t=Visszatérés az eredményekhez
-SaveThisSearch_t=Keresés mentése
-SaveToPersonalPage=Mentés Az én Europeanámba
-SavedItems_t=Mentett elemek
-SavedSearches_t=Mentett keresések
-SavedTags_t=Mentett címkék
-SearchSavedFailed_t=A keresés mentése sikertelen.
-SearchSaved_t=Mentett keresés
-Search_t=Keresés
 Sector_t=Terület
-SeeAllRelatedItems_t=Az összes kapcsolódó elem megtekintése
-SendUsFeedback_t=Írjon nekünk!
-Send_t=Küldés
-ShareWithAFriend_t=Megosztás egy baráttal
-ShareYourIdeas_t=Ossza meg gondolatait
-ShowAll_t=Az összes megtekintése
-SignIn_t=Bejelentkezés
-Sitemap_t=Honlaptérkép
-Sound_t=Hang
 Sounds_t=Hanganyagok
 StrorylineCredits_t=Történet és stáblista
-Subject_t=Téma
-TagAdded_t=Címke hozzáadva
-TagAdditionFailed_t=A címke hozzáadása sikertelen.
-Tagging_t=Címkézés
-TermsAndConditions_t=A szolgáltatás feltételei
-Text_t=Szöveg
 Texts_t=Szövegek
 ThisIsEuropeana_t=Ez az Europeana
 ThoughtLab_t=Gondolatok
 TimelineNavigator_t=Eligazodás az időrendben
 Timeline_t=Időrend
-Title_t=Cím
 UserConductAgree_t=Tudom, hogy Az én Europeánám lehetővé teszi, hogy bármely digitális dokumentumhoz címkét hozzak létre. Megígérem, hogy nem hozok létre olyan címkét, amely sértő, károsító, fenyegető, törvénytelen, rágalmazó, gyalázkodó, zaklató, pornográf, obszcén, tisztességtelen, sérti a magán vagy közösségi jogokat, gyűlölködő, és faji, etnikai vagy egyéb okból elítélendő. A négyzetre történő kattintással elfogadom, hogy betartom ezt a megállapodást. Amennyiben ettől eltérek, Az én Europeanámban való tagságom megszűnik. KLIKKELJEN AZ ELFOGADÁSHOZ
 UserConduct_t=Felhasználói magatartás
-UserInformation_t=Felhasználói információ
-UserNameChoose_t=Válasszon felhasználónevet!
-UserNameExplain_t=A felhasználónevét bejelentkezéskor fogjuk megjeleníteni.
-UserTags_t=Felhasználói címkék
-UsernameInUse_t=használatban van. Kérjük, hogy válasszon másik felhasználónevet.
-Username_t=A felhasználónév
-UsingEuropeana_t=Az Europeana használata
 Video_t=Videó
-Videos_t=Videók
-ViewAsXML_t=XML nézet
-ViewInOriginalContext_t=Eredeti kontextus
-ViewWithLabels_t=Feliratos nézet
-ViewWithoutLabels_t=Felirat nélküli nézet
 ViewingRelatedItems_t=A kapcsolódó elemek megtekintése
-YouHaveSearchFor_t=Keresés
 _action.add.annotation=null
 _action.add.tag=Címke hozzáadása
 _action.advanced.search=Összetett keresés
@@ -146,7 +91,21 @@ _action.alt.more.info=További információk
 _action.alt.next.page=Következő
 _action.alt.previous.page=Előző
 _action.alt.table.view=Táblázatos megjelenítés
+_action.personalpage=Az én Europeanám
+_action.previous=Előző
+_action.refine.your.search=Szűkítse a keresést
+_action.return.to.results=Visszatérés az eredményekhez
+_action.save.this.search=Keresés mentése
+_action.save.to.mine=Mentés Az én Europeanámba
+_action.search=Keresés
+_action.seeallrelateditems=Az összes kapcsolódó elem megtekintése
+_action.send=Küldés
+_action.share.with.friend=Megosztás egy baráttal
+_action.videos=Videók
+_action.view.in.original.context=Eredeti kontextus
 _boolean.and=és
+_boolean.not=nem
+_boolean.or=vagy
 _facet.by.collection=null
 _facet.by.country=Ország
 _facet.by.date=Dátum
@@ -155,14 +114,34 @@ _facet.by.provider=Szolgáltató
 _facet.by.type=Típus
 _facet.by.user.tag=Felhasználói címke
 _facet.by.year=null
+_failure.search.saved=A keresés mentése sikertelen.
 _header.actions=Műveletek
+_header.relatedcontent=Kapcsolódó tartalom
 _mine.date.saved=Dátum mentése
 _mine.delete=Törlés
+_mine.saved.items=Mentett elemek
+_mine.saved.searches=Mentett keresések
+_mine.saved.tags=Mentett címkék
+_mine.user.information=Felhasználói információ
+_mine.username=A felhasználónév
 _option.any.field=Bármely kulcsszó
 _prompt.email.address=E-mail címek
+_prompt.provider=Szolgáltató
 _register.email.has.been.sent=E-mailt küldtünk az alábbi címre:
+_register.password.choose=Válasszon jelszót!
+_register.password.explain=A jelszónak 6-30 karakter hosszúnak kell lennie.
+_register.pick.user.name=A felhasználóneve akkor jelenik meg, ha bejelentkezik.
+_register.please.follow.link=Kérjük, kattintson az alábbi linkre a regisztráció befejezéséhez!
+_register.register=Regisztráció
+_register.registration.failed=A regisztráció során hiba történt. Kérjük, próbálja meg újra.
+_register.repeat.password=Jelszó megismétlése
+_register.username.choose=Válasszon felhasználónevet!
+_register.username.explain=A felhasználónevét bejelentkezéskor fogjuk megjeleníteni.
 _search.field.creator=Létrehozó
 _search.field.date=Dátum
+_search.option.subject=Téma
+_search.option.title=Cím
+_success.search.saved=Mentett keresés
 _unused.about.us=Rólunk
 _unused.accessibility=Elérhetőség
 _unused.add=Hozzáad
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*A szolgáltató összegyűjti a közreműködőktől
 _unused.altprint=Nyomtatás
 _unused.aplacetoshareideas=- teret ad a gondolatoknak és inspirációknak. Keressen Európa kulturális gyűjteményeiben, kapcsolódjon más felhasználók keresési útvonalaihoz, és ossza meg felefdezéseit!
 _unused.browse.through.time=Idő szerinti keresés
+_unused.privacy=Adatvédelem
+_unused.remember.me=Emlékezzen rám ezen a számítógépen
+_unused.remove=Törlés
+_unused.send.feedback=Írjon nekünk!
+_unused.share.your.ideas=Ossza meg gondolatait
+_unused.show.all=Az összes megtekintése
+_unused.sign.in=Bejelentkezés
+_unused.site.map=Honlaptérkép
+_unused.sound=Hang
+_unused.tag.added=Címke hozzáadva
+_unused.tag.addition.failed=A címke hozzáadása sikertelen.
+_unused.tagging=Címkézés
+_unused.terms.and.conditions=A szolgáltatás feltételei
+_unused.text=Szöveg
+_unused.username.in.use=használatban van. Kérjük, hogy válasszon másik felhasználónevet.
+_unused.usertags=Felhasználói címkék
+_unused.using.europeana=Az Europeana használata
+_unused.view.as.xml=XML nézet
+_unused.view.with.labels=Feliratos nézet
+_unused.view.without.labels=Felirat nélküli nézet
+_unused.you.have.search.for=Keresés
 albania_t=Albánia
 armenia_t=Örményország
 austria_t=Ausztria
