--- a/portal/src/main/resources/i18n/messages_is.properties
+++ b/portal/src/main/resources/i18n/messages_is.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Engin skjöl voru vistuð
 NoSavedSearches_t=Engar leitir voru vistaðar
 NoSavedTags_t=Engar tilvísanir voru vistaðar
 NoScript_t=Til þess að þessi vefur virki sem skildi þarft þú að leyfa notkun á Java forritum.
-NotBoolean_t=ekki
 Of_t=af
 OpensInNewWindow_t=Opnast í nýjum glugga
-OrBoolean_t=eða
 Page_t=Siða
 PartnerExplain_t=Þetta er net samstarfsaðila sem  vinna að því byggja upp Europeana  og eru einnig fulltrúar Europeana  í heimalandi sínu eða  hagsmunasamtökum.
 Partner_t=Samstarfsaðili
 Partners_t=Samstarfsaðilar
-PasswordChoose_t=Veldu lykilorð
-PasswordExplain_t=Lykilorð verður að vera 6-60 stafir að lengd
 Password_t=Aðgangsorð
 PeopleAreCurrentlyThinkingAbout_t=Núna hugsa menn einkum um
-PersonalPage=Mitt Europeana
-PickUserName_t=Notendanafnið þitt birtist þegar þú hefur lokið innskráningu
-PleaseFollowTheLinkProvided_t=Smelltu á tengilinn í tölvupóstinum til að ljúka skráningarferlinu
-Previous_t=Fyrri
-Privacy_t=Gagnaleynd
-Provider_t=Gagnaveita
-RefineYourSearch_t=Þrengri leit
 RegisterAgain_t=Skráðu þig aftur
-Register_t=Skráning
-RegistrationFailed_t=Við úrvinnslu á skráningarupplýsingum fannst villa. Vinsamlegast reynið aftur
-RelatedContent_t=Tengt efni
-RememberMe_t=Vistaðu lykilorðið á þessari tölvu
-Remove_t=Taka burt
-RepeatPassword_t=Endurtaka lykilorð
 RequiredField_t=Þetta svið verður að fylla út
 Reset_t=Endurstilla
 Results_t=Niðurstöður
-ReturnToResults_t=Til baka í niðurstöður
-SaveThisSearch_t=Vista þessa leit
-SaveToPersonalPage=Vista í Mínu Europeana
-SavedItems_t=Vistuð eintök
-SavedSearches_t=Vistaðar leitir
-SavedTags_t=Vistaðar tilvísanir
-SearchSavedFailed_t=Vistun á leit mistókst
-SearchSaved_t=Leit vistuð
-Search_t=Leita
 Sector_t=Tegund
-SeeAllRelatedItems_t=Sjá allt tengt efni
-SendUsFeedback_t=Sendu okkur athugasemdir
-Send_t=Senda
-ShareWithAFriend_t=Deildu með vini
-ShareYourIdeas_t=Deildu hugmyndum þínum
-ShowAll_t=Sýna allt
-SignIn_t=Innskráning
-Sitemap_t=Veftré
-Sound_t=Hljóð
 Sounds_t=Hljóð
 StrorylineCredits_t=Storyline and credits
-Subject_t=Efni
-TagAdded_t=Tilvísun bætt við
-TagAdditionFailed_t=Það mistókst að bæta tilvísun við
-Tagging_t=Tilvísanir
-TermsAndConditions_t=Skilyrði
-Text_t=Texti
 Texts_t=Textar
 ThisIsEuropeana_t=Þetta er Europeana
 ThoughtLab_t=Hugmyndasmiðja
 TimelineNavigator_t=Vafra með tímalínu
 Timeline_t=Tímaás
-Title_t=Titill
 UserConductAgree_t=Ég geri mér grein fyrir að Mitt  Europeana gefur mér kost á að búa  til tilvísanir fyrir hvaða eintak  sem er. Ég samþykki að búa ekki  til tilvísanir sem líta má á sem  róg, skaðlegar, hótandi,  ólöglegar, ærumeiðandi, yfirgangssamar, móðgandi, æsandi,  ögrandi, klámfengin, ruddaleg,  sviksamleg, í bága við friðhelgi  einkalífs eða útgáfurétt,  hatursfull eða sýni uppruna eða  kynþætti óvirðingu. Með því að  smella á þennan reit samþykki ég  að fylgja þessu samkomulagi og  geri mér grein fyrir að geri ég  það ekki mun aðild minni að Mínu  Europeana verða sagt upp. Smelltu  hér til að samþykkja.
 UserConduct_t=Hegðun Notanda
-UserInformation_t=Notendaupplýsingar
-UserNameChoose_t=Veldu notendanafn
-UserNameExplain_t=Notendanafnið þitt birtist þegar þú hefur skráð þig inn
-UserTags_t=Notendatilvísanir
-UsernameInUse_t=er þegar í notkun. Vinsamlegast veljið annað notandanafn
-Username_t=Notendanafn
-UsingEuropeana_t=Hvernig er Europeana notað
 Video_t=Myndband
-Videos_t=Myndbönd
-ViewAsXML_t=Skoða XML
-ViewInOriginalContext_t=Skoða í upprunalegu samhengi
-ViewWithLabels_t=Skoða merki
-ViewWithoutLabels_t=Fela merki
 ViewingRelatedItems_t=Þú ert að horfa á skyld eintök
-YouHaveSearchFor_t=Þú leitaðir að
 _action.add.annotation=null
 _action.add.tag=Bæta við tilvísun
 _action.advanced.search=Ítarleit
@@ -146,7 +91,21 @@ _action.alt.more.info=Smelltu til að fá meiri upplýsingar
 _action.alt.next.page=smelltu hér til að sjá næstu síðu í niðurstöðum
 _action.alt.previous.page=smelltu hér til að sjá fyrri síðu í niðurstöðum
 _action.alt.table.view=Skpða töflu
+_action.personalpage=Mitt Europeana
+_action.previous=Fyrri
+_action.refine.your.search=Þrengri leit
+_action.return.to.results=Til baka í niðurstöður
+_action.save.this.search=Vista þessa leit
+_action.save.to.mine=Vista í Mínu Europeana
+_action.search=Leita
+_action.seeallrelateditems=Sjá allt tengt efni
+_action.send=Senda
+_action.share.with.friend=Deildu með vini
+_action.videos=Myndbönd
+_action.view.in.original.context=Skoða í upprunalegu samhengi
 _boolean.and=og
+_boolean.not=ekki
+_boolean.or=eða
 _facet.by.collection=null
 _facet.by.country=Eftir landi
 _facet.by.date=Eftir dagsetningu
@@ -155,14 +114,34 @@ _facet.by.provider=Eftir gagnaveitu
 _facet.by.type=Eftir tegund
 _facet.by.user.tag=Eftir tilvísun notanda
 _facet.by.year=null
+_failure.search.saved=Vistun á leit mistókst
 _header.actions=Aðgerðir
+_header.relatedcontent=Tengt efni
 _mine.date.saved=Vistuð dagsetning
 _mine.delete=Eyða
+_mine.saved.items=Vistuð eintök
+_mine.saved.searches=Vistaðar leitir
+_mine.saved.tags=Vistaðar tilvísanir
+_mine.user.information=Notendaupplýsingar
+_mine.username=Notendanafn
 _option.any.field=Öll svið
 _prompt.email.address=Netfang
+_prompt.provider=Gagnaveita
 _register.email.has.been.sent=Tölvupóstur var sendur á þetta netfang
+_register.password.choose=Veldu lykilorð
+_register.password.explain=Lykilorð verður að vera 6-60 stafir að lengd
+_register.pick.user.name=Notendanafnið þitt birtist þegar þú hefur lokið innskráningu
+_register.please.follow.link=Smelltu á tengilinn í tölvupóstinum til að ljúka skráningarferlinu
+_register.register=Skráning
+_register.registration.failed=Við úrvinnslu á skráningarupplýsingum fannst villa. Vinsamlegast reynið aftur
+_register.repeat.password=Endurtaka lykilorð
+_register.username.choose=Veldu notendanafn
+_register.username.explain=Notendanafnið þitt birtist þegar þú hefur skráð þig inn
 _search.field.creator=Höfundur
 _search.field.date=Dagsetning
+_search.option.subject=Efni
+_search.option.title=Titill
+_success.search.saved=Leit vistuð
 _unused.about.us=Um okkur
 _unused.accessibility=Aðgangur
 _unused.add=Bæta við
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Safnari safnar efni frá öðrum  efnisveitendum, bi
 _unused.altprint=Prenta þessa síðu
 _unused.aplacetoshareideas=vefur fyrir hugljómun og hugmyndir. Leitaðu í menningarsöfnum Evrópu, hafðu samband við aðra notendur og deildu með þeim því sem þú finnur.
 _unused.browse.through.time=Fletta í tímaröð
+_unused.privacy=Gagnaleynd
+_unused.remember.me=Vistaðu lykilorðið á þessari tölvu
+_unused.remove=Taka burt
+_unused.send.feedback=Sendu okkur athugasemdir
+_unused.share.your.ideas=Deildu hugmyndum þínum
+_unused.show.all=Sýna allt
+_unused.sign.in=Innskráning
+_unused.site.map=Veftré
+_unused.sound=Hljóð
+_unused.tag.added=Tilvísun bætt við
+_unused.tag.addition.failed=Það mistókst að bæta tilvísun við
+_unused.tagging=Tilvísanir
+_unused.terms.and.conditions=Skilyrði
+_unused.text=Texti
+_unused.username.in.use=er þegar í notkun. Vinsamlegast veljið annað notandanafn
+_unused.usertags=Notendatilvísanir
+_unused.using.europeana=Hvernig er Europeana notað
+_unused.view.as.xml=Skoða XML
+_unused.view.with.labels=Skoða merki
+_unused.view.without.labels=Fela merki
+_unused.you.have.search.for=Þú leitaðir að
 albania_t=Albaníu
 armenia_t=Armeníu
 austria_t=Austurríki
