--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Nessun oggetto salvato
 NoSavedSearches_t=Nessuna ricerca salvata
 NoSavedTags_t=Nessun tag salvato
 NoScript_t=Per un uso ottimale di questo sito è necessario aver attivato JavaScript
-NotBoolean_t=non
 Of_t=di
 OpensInNewWindow_t=Apri in un'altra finestra
-OrBoolean_t=o
 Page_t=Pagina
 PartnerExplain_t=Questa è la rete dei partner che hanno collaborato alla realizzazione di Europeana e che la rappresentano nei propri paesi e associazioni professionali.
 Partner_t=Partner
 Partners_t=I partner
-PasswordChoose_t=Scegliere una password
-PasswordExplain_t=La password deve contenere da 6 a 30 caratteri
 Password_t=Password
 PeopleAreCurrentlyThinkingAbout_t=Si sta riflettendo su
-PersonalPage=My Personal Page
-PickUserName_t=Lo username apparirà una volta entrati nel sistema
-PleaseFollowTheLinkProvided_t=Seguire il link inviato per e-mail per terminare uil processo di registrazione
-Previous_t=Precedente
-Privacy_t=Privacy
-Provider_t=Fornitore
-RefineYourSearch_t=Raffina la ricerca
 RegisterAgain_t=Registrati di nuovo
-Register_t=Registrati
-RegistrationFailed_t=Si è verificato un errore durante il processo di registrazione. Per favore riprovare
-RelatedContent_t=Contenuti correlati
-RememberMe_t=Ricordami su questo computer
-Remove_t=Rimuovi
-RepeatPassword_t=Ripeti la password
 RequiredField_t=Questo campo è obbligatorio
 Reset_t=Reset
 Results_t=Risultati
-ReturnToResults_t=Tornare ai risultati
-SaveThisSearch_t=Salva questa ricerca
-SaveToPersonalPage=Salva in My Personal Page
-SavedItems_t=Oggetti salvati
-SavedSearches_t=Ricerche salvate
-SavedTags_t=Tag salvati
-SearchSavedFailed_t=Salvataggio ricerca fallito
-SearchSaved_t=Ricerca salvata
-Search_t=Cerca
 Sector_t=Settore
-SeeAllRelatedItems_t=Vedi tutti gli oggetti correlati
-SendUsFeedback_t=Inviaci i tuoi commenti
-Send_t=Invia
-ShareWithAFriend_t=Condividi
-ShareYourIdeas_t=Condividi le tue idee
-ShowAll_t=Mostra tutti
-SignIn_t=Registrarsi
-Sitemap_t=Mappa del sito
-Sound_t=Suono
 Sounds_t=Suoni
 StrorylineCredits_t=Piano e crediti
-Subject_t=Soggetto
-TagAdded_t=Tag aggiunto
-TagAdditionFailed_t=Etichettatura non riuscita
-Tagging_t=Contrassegna
-TermsAndConditions_t=Termini e condizioni d'uso
-Text_t=Testo
 Texts_t=Testi
 ThisIsEuropeana_t=Europeana
 ThoughtLab_t=Pensatoio
 TimelineNavigator_t=Navigatore cronologico
 Timeline_t=Cronologia
-Title_t=Titolo
 UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
 UserConduct_t=User Conduct
-UserInformation_t=Informazioni utente
-UserNameChoose_t=Scegliere uno username
-UserNameExplain_t=Lo username apparirà una volta entrati nel sistema
-UserTags_t=Tag dell'utente
-UsernameInUse_t=non è disponibile. Sceglierne un altro
-Username_t=Username
-UsingEuropeana_t=Come usare Europeana
 Video_t=Video
-Videos_t=Video
-ViewAsXML_t=Visualizza come XML
-ViewInOriginalContext_t=Vedi nel contesto originale
-ViewWithLabels_t=Visualizza con le etichette
-ViewWithoutLabels_t=Visualizza senza etichette
 ViewingRelatedItems_t=Stai visualizzando gli oggetti correlati
-YouHaveSearchFor_t=Hai cercato
 _action.add.annotation=null
 _action.add.tag=Aggiungi un tag
 _action.advanced.search=Ricerca avanzata
@@ -146,7 +91,21 @@ _action.alt.more.info=Cliccare qui per ulteriori informazioni
 _action.alt.next.page=Cliccare qui per visualizzare la successiva pagina dei risultati
 _action.alt.previous.page=Cliccare qui per visualizzare la precedente pagina dei risultati
 _action.alt.table.view=Vedi la tabella
+_action.personalpage=My Personal Page
+_action.previous=Precedente
+_action.refine.your.search=Raffina la ricerca
+_action.return.to.results=Tornare ai risultati
+_action.save.this.search=Salva questa ricerca
+_action.save.to.mine=Salva in My Personal Page
+_action.search=Cerca
+_action.seeallrelateditems=Vedi tutti gli oggetti correlati
+_action.send=Invia
+_action.share.with.friend=Condividi
+_action.videos=Video
+_action.view.in.original.context=Vedi nel contesto originale
 _boolean.and=e
+_boolean.not=non
+_boolean.or=o
 _facet.by.collection=null
 _facet.by.country=Per paese
 _facet.by.date=Per data
@@ -155,14 +114,34 @@ _facet.by.provider=Per fonte
 _facet.by.type=Per tipo
 _facet.by.user.tag=Per tag utente
 _facet.by.year=null
+_failure.search.saved=Salvataggio ricerca fallito
 _header.actions=Azioni
+_header.relatedcontent=Contenuti correlati
 _mine.date.saved=Dati salvati
 _mine.delete=Cancella
+_mine.saved.items=Oggetti salvati
+_mine.saved.searches=Ricerche salvate
+_mine.saved.tags=Tag salvati
+_mine.user.information=Informazioni utente
+_mine.username=Username
 _option.any.field=Tutti i campi
 _prompt.email.address=Indirizzo e-mail
+_prompt.provider=Fornitore
 _register.email.has.been.sent=E' stata inviata una e-mail al seguente indirizzo
+_register.password.choose=Scegliere una password
+_register.password.explain=La password deve contenere da 6 a 30 caratteri
+_register.pick.user.name=Lo username apparirà una volta entrati nel sistema
+_register.please.follow.link=Seguire il link inviato per e-mail per terminare uil processo di registrazione
+_register.register=Registrati
+_register.registration.failed=Si è verificato un errore durante il processo di registrazione. Per favore riprovare
+_register.repeat.password=Ripeti la password
+_register.username.choose=Scegliere uno username
+_register.username.explain=Lo username apparirà una volta entrati nel sistema
 _search.field.creator=Creatore
 _search.field.date=Data
+_search.option.subject=Soggetto
+_search.option.title=Titolo
+_success.search.saved=Ricerca salvata
 _unused.about.us=Chi siamo
 _unused.accessibility=Accessibilità
 _unused.add=Aggiungi
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*An aggregator collects material from a range of othe
 _unused.altprint=Stampa questa pagina
 _unused.aplacetoshareideas=un luogo per le idee e l'ispirazione. Ricerca le collezioni culturali europee, collegati ai percorsi degli altri utenti e condividi le tue scoperte
 _unused.browse.through.time=Naviga attraverso il tempo
+_unused.privacy=Privacy
+_unused.remember.me=Ricordami su questo computer
+_unused.remove=Rimuovi
+_unused.send.feedback=Inviaci i tuoi commenti
+_unused.share.your.ideas=Condividi le tue idee
+_unused.show.all=Mostra tutti
+_unused.sign.in=Registrarsi
+_unused.site.map=Mappa del sito
+_unused.sound=Suono
+_unused.tag.added=Tag aggiunto
+_unused.tag.addition.failed=Etichettatura non riuscita
+_unused.tagging=Contrassegna
+_unused.terms.and.conditions=Termini e condizioni d'uso
+_unused.text=Testo
+_unused.username.in.use=non è disponibile. Sceglierne un altro
+_unused.usertags=Tag dell'utente
+_unused.using.europeana=Come usare Europeana
+_unused.view.as.xml=Visualizza come XML
+_unused.view.with.labels=Visualizza con le etichette
+_unused.view.without.labels=Visualizza senza etichette
+_unused.you.have.search.for=Hai cercato
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Austria
