--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Nėra išsaugota
 NoSavedSearches_t=Paieška neišsaugota
 NoSavedTags_t=Nėra išsaugotų žymenų
 NoScript_t=Norint naudotis šiuo tinklalapiu, būtina turėti aktyvuotą JavaScript
-NotBoolean_t=ne
 Of_t={preposition, gram.}
 OpensInNewWindow_t=Atidaro naujame lange
-OrBoolean_t=arba
 Page_t=Puslapis
 PartnerExplain_t=Tai Europeana partnerių tinklas, prisidėjusių prie jos veikimo ir atstovaujančių Europeana savo valstybėse bei profesinėse asociacijose.
 Partner_t=Partneris
 Partners_t=Partneriai
-PasswordChoose_t=Pasirinkite slaptažodį
-PasswordExplain_t=Slaptažodį turi sudaryti 6-30 ženklų
 Password_t=Slaptažodis
 PeopleAreCurrentlyThinkingAbout_t=Šiuo metu žmonės galvoja apie
-PersonalPage=Mano Europeana
-PickUserName_t=Prisijungimo metu bus pateikiamas jūsų vartotojo vardas
-PleaseFollowTheLinkProvided_t=Prašome naudotis elektroniniame laiške pateiktąja nuoroda ir užbaigti registraciją
-Previous_t=Ankstesnis
-Privacy_t=Privatumas
-Provider_t=Tiekėjas
-RefineYourSearch_t=Atnaujinti paiešką
 RegisterAgain_t=Registruotis dar kartą
-Register_t=Registruotis
-RegistrationFailed_t=Registracijos metu įvyko klaida. Bandykite dar kartą
-RelatedContent_t=Susijęs turinys
-RememberMe_t=Įsidėmėti mane šiame kompiuteryje
-Remove_t=Naikinti
-RepeatPassword_t=Pakartokite slaptažodį
 RequiredField_t=Šį lauką būtina užpildyti
 Reset_t=Į pradžią
 Results_t=Rezultatai
-ReturnToResults_t=Grįžti į rezultatus
-SaveThisSearch_t=Išsaugoti šią paiešką
-SaveToPersonalPage=Išsaugoti į ManoEuropeana
-SavedItems_t=Išsaugoti vienetai
-SavedSearches_t=Išsaugotos užklausos
-SavedTags_t=Išsaugoti žymenys
-SearchSavedFailed_t=Paieškos išsaugojimas nepavyko
-SearchSaved_t=Išsaugota paieška
-Search_t=Paieška
 Sector_t=Sektorius
-SeeAllRelatedItems_t=Žiūrėti visus susijusius vienetus
-SendUsFeedback_t=Siųskite savo komentarus
-Send_t=Siųsti
-ShareWithAFriend_t=Dalinkitės su draugu
-ShareYourIdeas_t=Pasidalinkite savo idėjomis
-ShowAll_t=Rodyti viską
-SignIn_t=Prisijungti
-Sitemap_t=Svetainės struktūra
-Sound_t=Garsas
 Sounds_t=Garso medžiaga
 StrorylineCredits_t=Pagrindinė linija ir kreditai
-Subject_t=Dalykas
-TagAdded_t=Pridėtas žymuo
-TagAdditionFailed_t=Žymens pridėti nepavyko
-Tagging_t=Žymenų pateikimas
-TermsAndConditions_t=Sąlygos
-Text_t=Tekstas
 Texts_t=Tekstai
 ThisIsEuropeana_t=Tai Europeana
 ThoughtLab_t=Minčių laboratorija
 TimelineNavigator_t=Laiko skalės navigatorius
 Timeline_t=Laiko skalė
-Title_t=Antraštė
 UserConductAgree_t=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta. SPUSTELĖKITE NORĖDAMI PATVIRTINTI SUTIKIMĄ
 UserConduct_t=vartotojo elgesio tvarka
-UserInformation_t=Vartotojo informacija
-UserNameChoose_t=Pasirinkite vartotojo vardą
-UserNameExplain_t=Jūsų vartotojo vardas bus parodomas jums prisijungiant
-UserTags_t=Vartotojo žymenys
-UsernameInUse_t=jau naudojamas. Pasirinkite kitą vartotojo vardą
-Username_t=Vartotojo vardas
-UsingEuropeana_t=Naudojant Europeana
 Video_t=Video
-Videos_t=Video
-ViewAsXML_t=Žiūrėti kaip XML
-ViewInOriginalContext_t=Žiūrėti originalų kontekstą
-ViewWithLabels_t=Žiūrėti etiketes
-ViewWithoutLabels_t=Žiūrėti be etikečių
 ViewingRelatedItems_t=Žiūrite susijusius vienetus
-YouHaveSearchFor_t=Atlikote paiešką
 _action.add.annotation=null
 _action.add.tag=Pridėti žymenį
 _action.advanced.search=Patikslintoji paieška
@@ -146,7 +91,21 @@ _action.alt.more.info=Spausti čia, norint daugiau informacijos
 _action.alt.next.page=Spausti čia, norint matyti rezultatų kitą puslapį
 _action.alt.previous.page=Spausti čia, norint matyti rezultatų ankstesnį puslapį
 _action.alt.table.view=Lentelės peržiūra
+_action.personalpage=Mano Europeana
+_action.previous=Ankstesnis
+_action.refine.your.search=Atnaujinti paiešką
+_action.return.to.results=Grįžti į rezultatus
+_action.save.this.search=Išsaugoti šią paiešką
+_action.save.to.mine=Išsaugoti į ManoEuropeana
+_action.search=Paieška
+_action.seeallrelateditems=Žiūrėti visus susijusius vienetus
+_action.send=Siųsti
+_action.share.with.friend=Dalinkitės su draugu
+_action.videos=Video
+_action.view.in.original.context=Žiūrėti originalų kontekstą
 _boolean.and=ir
+_boolean.not=ne
+_boolean.or=arba
 _facet.by.collection=null
 _facet.by.country=Pagal valstybę
 _facet.by.date=Pagal datą
@@ -155,14 +114,34 @@ _facet.by.provider=Pagal tiekėją
 _facet.by.type=Pagal tipą
 _facet.by.user.tag=Pagal vartotojo žymenį
 _facet.by.year=null
+_failure.search.saved=Paieškos išsaugojimas nepavyko
 _header.actions=Veiksmai
+_header.relatedcontent=Susijęs turinys
 _mine.date.saved=Išsaugota data
 _mine.delete=Trinti
+_mine.saved.items=Išsaugoti vienetai
+_mine.saved.searches=Išsaugotos užklausos
+_mine.saved.tags=Išsaugoti žymenys
+_mine.user.information=Vartotojo informacija
+_mine.username=Vartotojo vardas
 _option.any.field=Bet kuris laukas
 _prompt.email.address=Elektroninio pašto adresas
+_prompt.provider=Tiekėjas
 _register.email.has.been.sent=Elektroninis laiškas išsiųstas šiuo adresu
+_register.password.choose=Pasirinkite slaptažodį
+_register.password.explain=Slaptažodį turi sudaryti 6-30 ženklų
+_register.pick.user.name=Prisijungimo metu bus pateikiamas jūsų vartotojo vardas
+_register.please.follow.link=Prašome naudotis elektroniniame laiške pateiktąja nuoroda ir užbaigti registraciją
+_register.register=Registruotis
+_register.registration.failed=Registracijos metu įvyko klaida. Bandykite dar kartą
+_register.repeat.password=Pakartokite slaptažodį
+_register.username.choose=Pasirinkite vartotojo vardą
+_register.username.explain=Jūsų vartotojo vardas bus parodomas jums prisijungiant
 _search.field.creator=Kūrėjas
 _search.field.date=Data
+_search.option.subject=Dalykas
+_search.option.title=Antraštė
+_success.search.saved=Išsaugota paieška
 _unused.about.us=Apie mus
 _unused.accessibility=Prieiga
 _unused.add=Įtraukite
@@ -170,6 +149,27 @@ _unused.aggregator.explain=Agregatas surenka medžiagą iš daugelio bendradarbi
 _unused.altprint=Spausdinti šį puslapį
 _unused.aplacetoshareideas=vieta mintims ir idėjoms. Ieškokite Europos kultūros ištekliuose, susisiekite su kitu vartotoju ir ir pasidalinkite patirtimi.
 _unused.browse.through.time=Peržiūra per tam tikrą laiką
+_unused.privacy=Privatumas
+_unused.remember.me=Įsidėmėti mane šiame kompiuteryje
+_unused.remove=Naikinti
+_unused.send.feedback=Siųskite savo komentarus
+_unused.share.your.ideas=Pasidalinkite savo idėjomis
+_unused.show.all=Rodyti viską
+_unused.sign.in=Prisijungti
+_unused.site.map=Svetainės struktūra
+_unused.sound=Garsas
+_unused.tag.added=Pridėtas žymuo
+_unused.tag.addition.failed=Žymens pridėti nepavyko
+_unused.tagging=Žymenų pateikimas
+_unused.terms.and.conditions=Sąlygos
+_unused.text=Tekstas
+_unused.username.in.use=jau naudojamas. Pasirinkite kitą vartotojo vardą
+_unused.usertags=Vartotojo žymenys
+_unused.using.europeana=Naudojant Europeana
+_unused.view.as.xml=Žiūrėti kaip XML
+_unused.view.with.labels=Žiūrėti etiketes
+_unused.view.without.labels=Žiūrėti be etikečių
+_unused.you.have.search.for=Atlikote paiešką
 albania_t=Albanija
 armenia_t=Armėnija
 austria_t=Austrija
