--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Nav saglabātu objektu
 NoSavedSearches_t=Nav saglabātu meklējumu
 NoSavedTags_t=Nav saglabātu tagu
 NoScript_t=Lai izmantotu visas šīs vietnes iespējas, jums nepieciešams aktivizēt Java skriptu.
-NotBoolean_t=ne
 Of_t=no
 OpensInNewWindow_t=Atveras jaunā logā
-OrBoolean_t=vai
 Page_t=Lappuse
 PartnerExplain_t=Šis ir partneru tīkls, kuri sadarbojās Europeana tapšanā un kuri pārstāv Europeanu savās valstīs un profesionālajās apvienībās.
 Partner_t=Partneris
 Partners_t=Partneri
-PasswordChoose_t=Izvēlēties paroli
-PasswordExplain_t=Parolei jābūt no 6-30 rakstu zīmēm
 Password_t=Parole
 PeopleAreCurrentlyThinkingAbout_t=Šobrīd citi domā par
-PersonalPage=Mana Europeana
-PickUserName_t=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
-PleaseFollowTheLinkProvided_t=Lūdzu izvēlēties e-pastā norādīto saiti, lai pabeigtu reģistrāciju
-Previous_t=Iepriekšējais
-Privacy_t=Privātums
-Provider_t=Piegādātājs
-RefineYourSearch_t=Precizēt meklēšanu
 RegisterAgain_t=Reģistrēties atkārtoti
-Register_t=Piereģistrēties
-RegistrationFailed_t=Apstrādājot jūsu reģistrācijas datus, radusies kļūda. Lūdzu mēģiniet vēlreiz
-RelatedContent_t=Saistītais saturs
-RememberMe_t=Atcerēties mani šajā datorā
-Remove_t=Aizvākt
-RepeatPassword_t=Atkārtot paroli
 RequiredField_t=Šis lauks ir obligāts
 Reset_t=Notīrīt
 Results_t=Rezultāti
-ReturnToResults_t=Atpakaļ uz rezultātiem
-SaveThisSearch_t=Saglabāt šo meklējumu
-SaveToPersonalPage=Saglabāt Mana Europeana
-SavedItems_t=Saglabātie objekti
-SavedSearches_t=Saglabātie meklējumi
-SavedTags_t=Saglabātie tagi
-SearchSavedFailed_t=Meklējuma saglabāšana neizdevās
-SearchSaved_t=Meklējums saglabāts
-Search_t=Meklēt
 Sector_t=Sektors
-SeeAllRelatedItems_t=Aplūkot visus saistītos objektus
-SendUsFeedback_t=Nosūtīt atsauksmi
-Send_t=Nosūtīt
-ShareWithAFriend_t=Dalies ar draugu
-ShareYourIdeas_t=Dalies ar idejām
-ShowAll_t=Parādīt visus
-SignIn_t=Pieslēgties
-Sitemap_t=Lapas karte
-Sound_t=Skaņa
 Sounds_t=Skaņa
 StrorylineCredits_t=Sižets un resursa veidotāji.
-Subject_t=Priekšmets
-TagAdded_t=Tags pievienots
-TagAdditionFailed_t=Tagu pievienot neizdevās
-Tagging_t=Tagošana
-TermsAndConditions_t=Nosacījumi
-Text_t=Teksts
 Texts_t=Teksti
 ThisIsEuropeana_t=Šī ir Europeana
 ThoughtLab_t=Domu laboratorija
 TimelineNavigator_t=Laika joslas navigācija
 Timeline_t=Laika josla
-Title_t=Nosaukums
 UserConductAgree_t=Es saprotu, ka Mana Europeana dod man iespēju izveidot tagus jebkuram manis izvēlētam objektam. Es piekrītu neveidot tagus, kas var tikt uzskatīti par aizskarošiem, kaitējošiem, draudus saturošiem, nelikumīgiem, aizskarošiem, apmelojošiem, aizvainojošiem, uzbrūkošiem, agresīviem, pornogrāfiskiem, neķītriem, melīgiem, privātās vai sabiedrības tiesības aizskarošiem, naidīgiem, rasistiskiem, kā arī etniski vai kā citādi aizskarošiem. Uzklikšķinot uz šīs pogas, es piekrītu ievērot šo vienošanos un apzinos, ka pretējā gadījumā mana dalība Mana Europeana tiks apturēta. Piekrītu.
 UserConduct_t=Lietotāju uzvedība
-UserInformation_t=Informācija lietotājiem
-UserNameChoose_t=Izvēlēties lietotāja vārdu
-UserNameExplain_t=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
-UserTags_t=Lietotāju tagi
-UsernameInUse_t=jau ir izmantots. Lūdzu izvēlieties citu.
-Username_t=Lietotāja vārds
-UsingEuropeana_t=Europeana lietošana
 Video_t=Video
-Videos_t=Video
-ViewAsXML_t=Skatīt kā XML
-ViewInOriginalContext_t=Skatīt oriģinālkontekstā
-ViewWithLabels_t=Skatīt ar iezīmēm
-ViewWithoutLabels_t=Skatīt bez iezīmēm
 ViewingRelatedItems_t=Jūs aplūkojat saistītus objektus
-YouHaveSearchFor_t=Jūs meklējāt pēc
 _action.add.annotation=null
 _action.add.tag=Pievienot tagu
 _action.advanced.search=Izvērstā meklēšana
@@ -146,7 +91,21 @@ _action.alt.more.info=Saņemt papildus informāciju
 _action.alt.next.page=uz nākošajiem rezultātiem
 _action.alt.previous.page=uz iepriekšējiem rezultātiem
 _action.alt.table.view=Tabulas skats
+_action.personalpage=Mana Europeana
+_action.previous=Iepriekšējais
+_action.refine.your.search=Precizēt meklēšanu
+_action.return.to.results=Atpakaļ uz rezultātiem
+_action.save.this.search=Saglabāt šo meklējumu
+_action.save.to.mine=Saglabāt Mana Europeana
+_action.search=Meklēt
+_action.seeallrelateditems=Aplūkot visus saistītos objektus
+_action.send=Nosūtīt
+_action.share.with.friend=Dalies ar draugu
+_action.videos=Video
+_action.view.in.original.context=Skatīt oriģinālkontekstā
 _boolean.and=un
+_boolean.not=ne
+_boolean.or=vai
 _facet.by.collection=null
 _facet.by.country=Pēc valsts
 _facet.by.date=Pēc datuma
@@ -155,14 +114,34 @@ _facet.by.provider=Pēc piegādātāja
 _facet.by.type=Pēc tipa
 _facet.by.user.tag=Pēc lietotāju tagiem
 _facet.by.year=null
+_failure.search.saved=Meklējuma saglabāšana neizdevās
 _header.actions=Darbības
+_header.relatedcontent=Saistītais saturs
 _mine.date.saved=Saglabāšanas datums
 _mine.delete=Izdzēst
+_mine.saved.items=Saglabātie objekti
+_mine.saved.searches=Saglabātie meklējumi
+_mine.saved.tags=Saglabātie tagi
+_mine.user.information=Informācija lietotājiem
+_mine.username=Lietotāja vārds
 _option.any.field=Jebkurš lauks
 _prompt.email.address=E-pasta adrese
+_prompt.provider=Piegādātājs
 _register.email.has.been.sent=E-pasts tika nosūtīts uz sekojošu adresi
+_register.password.choose=Izvēlēties paroli
+_register.password.explain=Parolei jābūt no 6-30 rakstu zīmēm
+_register.pick.user.name=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
+_register.please.follow.link=Lūdzu izvēlēties e-pastā norādīto saiti, lai pabeigtu reģistrāciju
+_register.register=Piereģistrēties
+_register.registration.failed=Apstrādājot jūsu reģistrācijas datus, radusies kļūda. Lūdzu mēģiniet vēlreiz
+_register.repeat.password=Atkārtot paroli
+_register.username.choose=Izvēlēties lietotāja vārdu
+_register.username.explain=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
 _search.field.creator=Autors
 _search.field.date=Datums
+_search.option.subject=Priekšmets
+_search.option.title=Nosaukums
+_success.search.saved=Meklējums saglabāts
 _unused.about.us=Par mums
 _unused.accessibility=Piekļuve
 _unused.add=Pievienot
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Agregators savāc materiālus no virknes citu satura
 _unused.altprint=Izdrukāt lappusi
 _unused.aplacetoshareideas=vieta iedvesmai un idejām. Meklē Eiropas kultūras kolekcijās, ieskaties citu lietotāju meklējumos un dalies savos atklājumos.
 _unused.browse.through.time=Pārlūkot laikā
+_unused.privacy=Privātums
+_unused.remember.me=Atcerēties mani šajā datorā
+_unused.remove=Aizvākt
+_unused.send.feedback=Nosūtīt atsauksmi
+_unused.share.your.ideas=Dalies ar idejām
+_unused.show.all=Parādīt visus
+_unused.sign.in=Pieslēgties
+_unused.site.map=Lapas karte
+_unused.sound=Skaņa
+_unused.tag.added=Tags pievienots
+_unused.tag.addition.failed=Tagu pievienot neizdevās
+_unused.tagging=Tagošana
+_unused.terms.and.conditions=Nosacījumi
+_unused.text=Teksts
+_unused.username.in.use=jau ir izmantots. Lūdzu izvēlieties citu.
+_unused.usertags=Lietotāju tagi
+_unused.using.europeana=Europeana lietošana
+_unused.view.as.xml=Skatīt kā XML
+_unused.view.with.labels=Skatīt ar iezīmēm
+_unused.view.without.labels=Skatīt bez iezīmēm
+_unused.you.have.search.for=Jūs meklējāt pēc
 albania_t=Albānija
 armenia_t=Armēnija
 austria_t=Austrija
