--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Ebda oġġett issejvjat
 NoSavedSearches_t=Ebda tiftixa ssejvjata
 NoSavedTags_t=Ebda tikketta ssejvjata
 NoScript_t=Għal użu aqwa minn dan is-sit, irid ikollok il-JavaScript attivat
-NotBoolean_t=mhux
 Of_t=minn
 OpensInNewWindow_t=Jinfetaħ f'tieqa ġdida
-OrBoolean_t=jew
 Page_t=Paġna
 PartnerExplain_t=Dan huwa n-netwerk ta' kontributuri msiħbin li kkollaboraw sabiex l-Europeana jsir realtà, u li jirrappreżentaw l-Europeana fil-pajjiżi u l-assoċjazzjonijiet professjonali tagħhom.
 Partner_t=Imsiħbin
 Partners_t=Sħab
-PasswordChoose_t=Agħżel password
-PasswordExplain_t=Il-passwords iridu jkunu twal minn 6 sa 30 karattru
 Password_t=Password
 PeopleAreCurrentlyThinkingAbout_t=Bħalissa n-nies qed jaħsbu dwar
-PersonalPage=L-Europeana Tiegħi
-PickUserName_t=Meta tidħol jintwera ismek ta' użatur
-PleaseFollowTheLinkProvided_t=Segwi l-link provduta fl-ittre u spiċċa l-proċess ta' reġistrazzjoni
-Previous_t=Ta' qabel
-Privacy_t=Privatezza
-Provider_t=Provditur
-RefineYourSearch_t=Irfina t-tiftixa tiegħek
 RegisterAgain_t=Erġa' rreġistra
-Register_t=Irreġistra
-RegistrationFailed_t=Sar żball waqt li r-reġistrazzjoni tiegħek kienet qed tipprova tiġi pproċessata. Jekk jogħġbok erġa' pprova.
-RelatedContent_t=Kontenut relatat
-RememberMe_t=Ftakarni fuq dan il-kompjuter
-Remove_t=Neħħi
-RepeatPassword_t=Irrepeti l-password
 RequiredField_t=Dan qasam meħtieġ
 Reset_t=Issettja mill-ġdid
 Results_t=Riżultati
-ReturnToResults_t=Erġa' lura għar-riżultati
-SaveThisSearch_t=Issejvja din it-tiftixa
-SaveToPersonalPage=Issejvja f'L-Europeana Tiegħi
-SavedItems_t=Oġġetti ssejvjati
-SavedSearches_t=Tiftixiet issejvjati
-SavedTags_t=Tikketti ssejvjati
-SearchSavedFailed_t=L-issejvjar tat-tiftixa falla
-SearchSaved_t=It-tiftixa ssejvjata
-Search_t=Fittex
 Sector_t=Settur
-SeeAllRelatedItems_t=Ara l-oġġetti kollha relatati
-SendUsFeedback_t=Ibgħat għidilna x'taħseb
-Send_t=Ibgħat
-ShareWithAFriend_t=Aqsam ma' ħabib
-ShareYourIdeas_t=Aqsam l-ideat tiegħek
-ShowAll_t=Uri kollox
-SignIn_t=Idħol
-Sitemap_t=Mappa tas-sit
-Sound_t=Ħoss
 Sounds_t=Ħsejjes
 StrorylineCredits_t=Plott u ismijiet tal-aħħar
-Subject_t=Suġġett
-TagAdded_t=It-tikketta miżjuda
-TagAdditionFailed_t=Iż-żieda tat-tikketta falliet
-Tagging_t=Tikkettjar
-TermsAndConditions_t=Termini u kundizzjonijiet
-Text_t=Test
 Texts_t=Testi
 ThisIsEuropeana_t=Dan l-Europeana
 ThoughtLab_t=Laboratorju tal-ideat
 TimelineNavigator_t=Navigatur tal-linja kronoloġika
 Timeline_t=Linja kronoloġika
-Title_t=Titlu
 UserConductAgree_t=Nifhem li L-Europeana Tiegħi jagħtini l-opportunità li noħloq tikketti għal kwalunkwe oġġett li nixtieq. Naqbel li ma noħloq ebda tikketta li tista' titqies libelluża, dannuża, ta' theddida, illeġittima, defamatorja, trażgredenti, abbużiva, xewwiexa, fastidjuża, pornografika, oxxena, frodulenti, li tinvadi d-drittijiet tal-privatezza jew tal-pubbliċità, odjuża, jew oġġezzjonabbli razzjalment, etnikament jew b'xi mod ieħor. Meta qed nikklikkja dil-kaxxa naqbel li nimxi ma' dan il-ftehim, u nifhem li fin-nuqqas is-sħubija tiegħi f'L-Europeana Tiegħi tiġi mitmuma. IKKLIKKJA BIEX TAQBEL
 UserConduct_t=Kondotta tal-Użaturi
-UserInformation_t=Informazzjoni fuq l-użatur
-UserNameChoose_t=Agħżel isem ta' użatur
-UserNameExplain_t=Meta tidħol jintwera ismek ta' użatur
-UserTags_t=Tikketti tal-użaturi
-UsernameInUse_t=qed jintuża. Jekk jogħġbok agħżel isem ieħor ta' użatur
-Username_t=Isem ta' użatur
-UsingEuropeana_t=Manwal tal-Europeana
 Video_t=Vidjow
-Videos_t=Vidjows
-ViewAsXML_t=Ara bħala XML
-ViewInOriginalContext_t=Ara fil-kuntest oriġinali
-ViewWithLabels_t=Ara bit-tikketti
-ViewWithoutLabels_t=Ara bla tikketti
 ViewingRelatedItems_t=Qed tara oġġetti relatati
-YouHaveSearchFor_t=Fittixt
 _action.add.annotation=null
 _action.add.tag=Żid tikketta
 _action.advanced.search=Tiftix avvanzat
@@ -146,7 +91,21 @@ _action.alt.more.info=Ikklikkja hawn għal aktar informazzjoni
 _action.alt.next.page=Ikklikkja hawn għall-paġna segwenti tar-riżultati
 _action.alt.previous.page=ikklikkja hawn għall-paġna preċedenti tar-riżultati
 _action.alt.table.view=Dehra għamla ta' tabella
+_action.personalpage=L-Europeana Tiegħi
+_action.previous=Ta' qabel
+_action.refine.your.search=Irfina t-tiftixa tiegħek
+_action.return.to.results=Erġa' lura għar-riżultati
+_action.save.this.search=Issejvja din it-tiftixa
+_action.save.to.mine=Issejvja f'L-Europeana Tiegħi
+_action.search=Fittex
+_action.seeallrelateditems=Ara l-oġġetti kollha relatati
+_action.send=Ibgħat
+_action.share.with.friend=Aqsam ma' ħabib
+_action.videos=Vidjows
+_action.view.in.original.context=Ara fil-kuntest oriġinali
 _boolean.and=u
+_boolean.not=mhux
+_boolean.or=jew
 _facet.by.collection=null
 _facet.by.country=Bil-pajjiż
 _facet.by.date=Bid-data
@@ -155,14 +114,34 @@ _facet.by.provider=Bil-provditur
 _facet.by.type=Bit-tip
 _facet.by.user.tag=Bit-tikketta tal-użatur
 _facet.by.year=null
+_failure.search.saved=L-issejvjar tat-tiftixa falla
 _header.actions=Azzjonijiet
+_header.relatedcontent=Kontenut relatat
 _mine.date.saved=Data tal-issejvjar
 _mine.delete=Ħassar
+_mine.saved.items=Oġġetti ssejvjati
+_mine.saved.searches=Tiftixiet issejvjati
+_mine.saved.tags=Tikketti ssejvjati
+_mine.user.information=Informazzjoni fuq l-użatur
+_mine.username=Isem ta' użatur
 _option.any.field=Kwalunkwe qasam
 _prompt.email.address=Indirizz elettroniku
+_prompt.provider=Provditur
 _register.email.has.been.sent=Intbgħatet ittre fl-indirizz li ġej
+_register.password.choose=Agħżel password
+_register.password.explain=Il-passwords iridu jkunu twal minn 6 sa 30 karattru
+_register.pick.user.name=Meta tidħol jintwera ismek ta' użatur
+_register.please.follow.link=Segwi l-link provduta fl-ittre u spiċċa l-proċess ta' reġistrazzjoni
+_register.register=Irreġistra
+_register.registration.failed=Sar żball waqt li r-reġistrazzjoni tiegħek kienet qed tipprova tiġi pproċessata. Jekk jogħġbok erġa' pprova.
+_register.repeat.password=Irrepeti l-password
+_register.username.choose=Agħżel isem ta' użatur
+_register.username.explain=Meta tidħol jintwera ismek ta' użatur
 _search.field.creator=Ħallieq
 _search.field.date=Data
+_search.option.subject=Suġġett
+_search.option.title=Titlu
+_success.search.saved=It-tiftixa ssejvjata
 _unused.about.us=Dwarna
 _unused.accessibility=L-aċċessibilità
 _unused.add=Żid
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Aggregatur jiġbor il-materjal mingħand għażla ta
 _unused.altprint=Stampa din il-paġna
 _unused.aplacetoshareideas=post ta' ispirazzjoni u ideat. Fittex fil-ġabriet kulturali tal-Ewropa, aqbad ma' mogħdijiet ta' użaturi oħra u aqsam is-sejbiet tiegħek.
 _unused.browse.through.time=Qalleb kronoloġikament
+_unused.privacy=Privatezza
+_unused.remember.me=Ftakarni fuq dan il-kompjuter
+_unused.remove=Neħħi
+_unused.send.feedback=Ibgħat għidilna x'taħseb
+_unused.share.your.ideas=Aqsam l-ideat tiegħek
+_unused.show.all=Uri kollox
+_unused.sign.in=Idħol
+_unused.site.map=Mappa tas-sit
+_unused.sound=Ħoss
+_unused.tag.added=It-tikketta miżjuda
+_unused.tag.addition.failed=Iż-żieda tat-tikketta falliet
+_unused.tagging=Tikkettjar
+_unused.terms.and.conditions=Termini u kundizzjonijiet
+_unused.text=Test
+_unused.username.in.use=qed jintuża. Jekk jogħġbok agħżel isem ieħor ta' użatur
+_unused.usertags=Tikketti tal-użaturi
+_unused.using.europeana=Manwal tal-Europeana
+_unused.view.as.xml=Ara bħala XML
+_unused.view.with.labels=Ara bit-tikketti
+_unused.view.without.labels=Ara bla tikketti
+_unused.you.have.search.for=Fittixt
 albania_t=L-Albanija
 armenia_t=L-Armenja
 austria_t=L-Awstrija
