--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -60,85 +60,30 @@ NoSavedItems_t=Geen opgeslagen items
 NoSavedSearches_t=Geen opgeslagen zoekopdrachten
 NoSavedTags_t=Geen opgeslagen tags
 NoScript_t=Om optimaal gebruik te kunnen maken van deze website, dient JavaScript op uw computer geactiveerd te zijn.
-NotBoolean_t=niet
 Of_t=van
 OpensInNewWindow_t=Opent in een nieuw venster
-OrBoolean_t=of
 Page_t=Pagina
 PartnerExplain_t=Dit is het netwerk van partners die hebben bijgedragen aan de totstandkoming van Europeana en die Europeana vertegenwoordigen in hun eigen land en bij beroepsverenigingen.
 Partner_t=Partner
 Partners_t=Partners
-PasswordChoose_t=Kies een wachtwoord
-PasswordExplain_t=Wachtwoorden dienen 6-30 karakters lang te zijn
 Password_t=Wachtwoord
 PeopleAreCurrentlyThinkingAbout_t=Mensen denken momenteel aan
-PersonalPage=Mijn Europeana
-PickUserName_t=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
-PleaseFollowTheLinkProvided_t=Volg de link in de email om de registratie af te ronden
-Previous_t=Vorige
-Privacy_t=Privacy
-Provider_t=Aanbieder
-RefineYourSearch_t=Zoekopdracht verfijnen
 RegisterAgain_t=Registreer opnieuw
-Register_t=Registreren
-RegistrationFailed_t=Een fout is opgetreden tijdens het verwerken van uw registratie. Probeert het opnieuw
-RelatedContent_t=Gerelateerde content
-RememberMe_t=Onthoud mij op deze computer
-Remove_t=Verwijder
-RepeatPassword_t=Herhaal wachtwoord
 RequiredField_t=Dit is een verplicht veld
 Reset_t=Reset
 Results_t=Resultaten
-ReturnToResults_t=Terug naar resultaten
-SaveThisSearch_t=Bewaar deze zoekopdracht
-SaveToPersonalPage=Bewaar in Mijn Europeana
-SavedItems_t=Bewaarde items
-SavedSearches_t=Bewaarde zoekopdrachten
-SavedTags_t=Bewaarde tags
-SearchSavedFailed_t=Zoekopdracht opslaan mislukt
-SearchSaved_t=Zoekopdracht bewaard
-Search_t=Zoek
 Sector_t=Sector
-SeeAllRelatedItems_t=Bekijk alle gerelateerde items
-SendUsFeedback_t=Stuur ons feedback
-Send_t=Verstuur
-ShareWithAFriend_t=Deel met een vriend
-ShareYourIdeas_t=Deel jouw ideeën
-ShowAll_t=Toon alles
-SignIn_t=Log in
-Sitemap_t=Sitemap
-Sound_t=Geluid
 Sounds_t=Geluiden
 StrorylineCredits_t=Storyline en credits
-Subject_t=Onderwerp
-TagAdded_t=Tags toevoegen
-TagAdditionFailed_t=Tag toevoegen mislukt
-Tagging_t=Tagging
-TermsAndConditions_t=Algemene voorwaarden
-Text_t=Teksten
 Texts_t=Teksten
 ThisIsEuropeana_t=Dit is Europeana
 ThoughtLab_t=Denklab
 TimelineNavigator_t=Tijdslijn navigatie
 Timeline_t=Tijdslijn
-Title_t=Titel
 UserConductAgree_t=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn lidmaatschap zal worden beëindigd. AANKLIKKEN OM AKKOORD TE GAAN
 UserConduct_t=Gebruikersgedrag
-UserInformation_t=Gebruikersinformatie
-UserNameChoose_t=Kies een gebruikersnaam
-UserNameExplain_t=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
-UserTags_t=Gebruikerstag(s)
-UsernameInUse_t=Is in gebruik. Kies een andere gebruikernaam
-Username_t=Gebruikersnaam
-UsingEuropeana_t=Gebruik Europeana
 Video_t=Video
-Videos_t=Videos
-ViewAsXML_t=Bekijk als XML
-ViewInOriginalContext_t=Bekijk in oorspronkelijke context
-ViewWithLabels_t=Bekijk met labels
-ViewWithoutLabels_t=Bekijk zonder labels
 ViewingRelatedItems_t=U bekijkt gerelateerde items
-YouHaveSearchFor_t=U heeft gezocht naar
 _action.add.annotation=null
 _action.add.tag=Voeg een tag toe
 _action.advanced.search=Uitgebreid zoeken
@@ -147,7 +92,21 @@ _action.alt.more.info=Klik voor meer informatie
 _action.alt.next.page=Klik hier voor volgende pagina van resultaten
 _action.alt.previous.page=Klik hier voor vorige pagina van resultaten
 _action.alt.table.view=Tabelweergave
+_action.personalpage=Mijn Europeana
+_action.previous=Vorige
+_action.refine.your.search=Zoekopdracht verfijnen
+_action.return.to.results=Terug naar resultaten
+_action.save.this.search=Bewaar deze zoekopdracht
+_action.save.to.mine=Bewaar in Mijn Europeana
+_action.search=Zoek
+_action.seeallrelateditems=Bekijk alle gerelateerde items
+_action.send=Verstuur
+_action.share.with.friend=Deel met een vriend
+_action.videos=Videos
+_action.view.in.original.context=Bekijk in oorspronkelijke context
 _boolean.and=en
+_boolean.not=niet
+_boolean.or=of
 _facet.by.collection=Per collectie
 _facet.by.country=Per land
 _facet.by.date=Per datum
@@ -156,14 +115,34 @@ _facet.by.provider=Per aanbieder
 _facet.by.type=Per soort object
 _facet.by.user.tag=Per gebruikers tag
 _facet.by.year=Per jaar
+_failure.search.saved=Zoekopdracht opslaan mislukt
 _header.actions=Acties
+_header.relatedcontent=Gerelateerde content
 _mine.date.saved=Datum opgeslagen
 _mine.delete=Verwijder
+_mine.saved.items=Bewaarde items
+_mine.saved.searches=Bewaarde zoekopdrachten
+_mine.saved.tags=Bewaarde tags
+_mine.user.information=Gebruikersinformatie
+_mine.username=Gebruikersnaam
 _option.any.field=Elk veld
 _prompt.email.address=Email adres
+_prompt.provider=Aanbieder
 _register.email.has.been.sent=Een email is verzonden naar het volgende adres
+_register.password.choose=Kies een wachtwoord
+_register.password.explain=Wachtwoorden dienen 6-30 karakters lang te zijn
+_register.pick.user.name=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
+_register.please.follow.link=Volg de link in de email om de registratie af te ronden
+_register.register=Registreren
+_register.registration.failed=Een fout is opgetreden tijdens het verwerken van uw registratie. Probeert het opnieuw
+_register.repeat.password=Herhaal wachtwoord
+_register.username.choose=Kies een gebruikersnaam
+_register.username.explain=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
 _search.field.creator=Auteur
 _search.field.date=Datum
+_search.option.subject=Onderwerp
+_search.option.title=Titel
+_success.search.saved=Zoekopdracht bewaard
 _unused.about.us=Over ons
 _unused.accessibility=Toegang
 _unused.add=Toevoegen
@@ -171,6 +150,27 @@ _unused.aggregator.explain=* Een aggregator verzamelt materiaal van een scala va
 _unused.altprint=Print deze pagina
 _unused.aplacetoshareideas=een plaats voor inspiratie en ideeën. Doorzoek de culturele collecties van Europa, volg het pad van andere gebruikers en deel je ontdekkingen.
 _unused.browse.through.time=Browse door de tijd
+_unused.privacy=Privacy
+_unused.remember.me=Onthoud mij op deze computer
+_unused.remove=Verwijder
+_unused.send.feedback=Stuur ons feedback
+_unused.share.your.ideas=Deel jouw ideeën
+_unused.show.all=Toon alles
+_unused.sign.in=Log in
+_unused.site.map=Sitemap
+_unused.sound=Geluid
+_unused.tag.added=Tags toevoegen
+_unused.tag.addition.failed=Tag toevoegen mislukt
+_unused.tagging=Tagging
+_unused.terms.and.conditions=Algemene voorwaarden
+_unused.text=Teksten
+_unused.username.in.use=Is in gebruik. Kies een andere gebruikernaam
+_unused.usertags=Gebruikerstag(s)
+_unused.using.europeana=Gebruik Europeana
+_unused.view.as.xml=Bekijk als XML
+_unused.view.with.labels=Bekijk met labels
+_unused.view.without.labels=Bekijk zonder labels
+_unused.you.have.search.for=U heeft gezocht naar
 albania_t=Albanië
 armenia_t=Armenië
 austria_t=Oosterijk
