--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Brak zachowanych dokumentów
 NoSavedSearches_t=Brak zachowanych wyszukiwań
 NoSavedTags_t=Brak zachowanych tagów
 NoScript_t=Aktywacja JavaScript poprawia działanie strony
-NotBoolean_t=nie
 Of_t=z
 OpensInNewWindow_t=Otwiera się w nowym oknie
-OrBoolean_t=lub
 Page_t=Strona
 PartnerExplain_t=Lista partnerów, którzy współpracowali przy budowie Europeany i reprezentują ją w poszczególnych krajach i w organizacjach zawodowych.
 Partner_t=Partner
 Partners_t=Partnerzy
-PasswordChoose_t=Wybierz hasło
-PasswordExplain_t=Hasło musi mieć długość od 6 do znaków
 Password_t=Hasło
 PeopleAreCurrentlyThinkingAbout_t=Ludzie teraz myślą o
-PersonalPage=Moja Europeana
-PickUserName_t=Nazwa użytkownika zostanie wyświetlona po zalogowaniu
-PleaseFollowTheLinkProvided_t=Prosimy użyć linku znajdującego się w emailu i dokończyć proces rejestracji
-Previous_t=Poprzedni
-Privacy_t=Prywatność
-Provider_t=Instytucja
-RefineYourSearch_t=Ogranicz wyszukiwanie
 RegisterAgain_t=Ponowna rejestracja
-Register_t=Rejestracja
-RegistrationFailed_t=Podczas przetwarzania rejestracji wystąpił błąd. Proszę ponowić próbę
-RelatedContent_t=Powiązana zawartość
-RememberMe_t=Zapamiętaj mnie na tym komputerze
-Remove_t=Usuń
-RepeatPassword_t=Powtórz hasło
 RequiredField_t=To pole jest wymagane
 Reset_t=Wyczyść
 Results_t=Wyniki
-ReturnToResults_t=Powrót do wyników
-SaveThisSearch_t=Zachowaj wyszukiwanie
-SaveToPersonalPage=Zachowaj w Moja Europeana
-SavedItems_t=Zachowane dokumenty
-SavedSearches_t=Zachowane wyszukiwania
-SavedTags_t=Zachowane tagi
-SearchSavedFailed_t=Zachowanie wyszukiwania nie powiodło się
-SearchSaved_t=Zapamiętane wyszukiwania
-Search_t=Szukaj
 Sector_t=Sektor
-SeeAllRelatedItems_t=Zobacz wszystkie powiązane dokumenty
-SendUsFeedback_t=Przyślij opinię
-Send_t=Wyślij
-ShareWithAFriend_t=Poinformuj znajomego
-ShareYourIdeas_t=Podziel się pomysłami
-ShowAll_t=Pokaż wszystko
-SignIn_t=Zarejestruj się
-Sitemap_t=Mapa serwisu
-Sound_t=Nagranie dźwiękowe
 Sounds_t=Nagrania dźwiękowe
 StrorylineCredits_t=Storyline and credits
-Subject_t=Temat
-TagAdded_t=Tag dodany
-TagAdditionFailed_t=Dodanie tagu nie powiodło się
-Tagging_t=Tagowanie
-TermsAndConditions_t=Zasady i warunki
-Text_t=Tekst
 Texts_t=Teksty
 ThisIsEuropeana_t=To jest Europeana
 ThoughtLab_t=Laboratorium myśli
 TimelineNavigator_t=Nawigator osi czasu
 Timeline_t=Oś czasu
-Title_t=Tytuł
 UserConductAgree_t=Przyjmuję do wiadomości, że Moja Europeana daje mi sposobność tworzenia tagów dla dowolnych obiektów cyfrowych. Zgadzam się na nietworzenie tagów, które mogłyby być zrozumiane jako oszczercze, krzywdzące, zawierające pogróżki, bezprawne, szkalujące, naruszające prawo, obelżywe, podżegające, nękające, pornograficzne, nieprzyzwoite, fałszywe, zakłócające prawo do prywatności lub reklamy, nienawistne lub budzące sprzeciw ze względów rasowych, etnicznych lub innych. Kliknięcie okienka oznacza zgadę na przestrzeganie tego regulaminu i rozumiem, że jego złamanie oznaczać będzie wygaśnięcie mojego członkostwa. KLIKNIJ BY POTWIERDZIĆ
 UserConduct_t=Regulamin użytkownika
-UserInformation_t=Informacja o użytkowniku
-UserNameChoose_t=Wybierz nazwę użytkownika
-UserNameExplain_t=Nazwa użytkownika będzie wyświetlana po zalogowaniu
-UserTags_t=Tagi użytkowników
-UsernameInUse_t=już wykorzystywana. Proszę wybrać inną nazwę użytkownika
-Username_t=Nazwa użytkownika
-UsingEuropeana_t=Korzystanie z Europeany
 Video_t=Film wideo
-Videos_t=Filmy wideo
-ViewAsXML_t=Widok XML
-ViewInOriginalContext_t=Zobacz w kontekście oryginalnym
-ViewWithLabels_t=Widok z etykietami
-ViewWithoutLabels_t=Widok bez etykiet
 ViewingRelatedItems_t=Oglądasz powiązane dokumenty
-YouHaveSearchFor_t=Szukasz
 _action.add.annotation=null
 _action.add.tag=Dodaj tag
 _action.advanced.search=Wyszukiwanie zaawansowane
@@ -146,7 +91,21 @@ _action.alt.more.info=Kliknij by uzyskać więcej informacji
 _action.alt.next.page=Kliknij by przejść do następnej strony
 _action.alt.previous.page=Kliknij by przejść do poprzedniej strony
 _action.alt.table.view=Widok tabeli
+_action.personalpage=Moja Europeana
+_action.previous=Poprzedni
+_action.refine.your.search=Ogranicz wyszukiwanie
+_action.return.to.results=Powrót do wyników
+_action.save.this.search=Zachowaj wyszukiwanie
+_action.save.to.mine=Zachowaj w Moja Europeana
+_action.search=Szukaj
+_action.seeallrelateditems=Zobacz wszystkie powiązane dokumenty
+_action.send=Wyślij
+_action.share.with.friend=Poinformuj znajomego
+_action.videos=Filmy wideo
+_action.view.in.original.context=Zobacz w kontekście oryginalnym
 _boolean.and=i
+_boolean.not=nie
+_boolean.or=lub
 _facet.by.collection=null
 _facet.by.country=Według kraju
 _facet.by.date=Według daty
@@ -155,14 +114,34 @@ _facet.by.provider=Według instytucji
 _facet.by.type=Według typu
 _facet.by.user.tag=Według tagu użytkownika
 _facet.by.year=null
+_failure.search.saved=Zachowanie wyszukiwania nie powiodło się
 _header.actions=Działania
+_header.relatedcontent=Powiązana zawartość
 _mine.date.saved=Data zachowana
 _mine.delete=Usuń
+_mine.saved.items=Zachowane dokumenty
+_mine.saved.searches=Zachowane wyszukiwania
+_mine.saved.tags=Zachowane tagi
+_mine.user.information=Informacja o użytkowniku
+_mine.username=Nazwa użytkownika
 _option.any.field=Dowolne pole
 _prompt.email.address=Adres email
+_prompt.provider=Instytucja
 _register.email.has.been.sent=Email został wysłany pod następujący adres
+_register.password.choose=Wybierz hasło
+_register.password.explain=Hasło musi mieć długość od 6 do znaków
+_register.pick.user.name=Nazwa użytkownika zostanie wyświetlona po zalogowaniu
+_register.please.follow.link=Prosimy użyć linku znajdującego się w emailu i dokończyć proces rejestracji
+_register.register=Rejestracja
+_register.registration.failed=Podczas przetwarzania rejestracji wystąpił błąd. Proszę ponowić próbę
+_register.repeat.password=Powtórz hasło
+_register.username.choose=Wybierz nazwę użytkownika
+_register.username.explain=Nazwa użytkownika będzie wyświetlana po zalogowaniu
 _search.field.creator=Twórca
 _search.field.date=Data
+_search.option.subject=Temat
+_search.option.title=Tytuł
+_success.search.saved=Zapamiętane wyszukiwania
 _unused.about.us=O nas
 _unused.accessibility=Dostępność
 _unused.add=Dodaj
@@ -170,6 +149,27 @@ _unused.aggregator.explain=Agregator to instytucja, która gromadzi zasoby cyfro
 _unused.altprint=Drukuj stronę
 _unused.aplacetoshareideas=miejsce inspiracji i pomysłów. Przeszukuj kolekcje europejskiego dziedzictwa kulturowego, współpracuj z innymi użytkownikami i dziel się swoimi odkryciami.
 _unused.browse.through.time=Przeglądaj oś czasu
+_unused.privacy=Prywatność
+_unused.remember.me=Zapamiętaj mnie na tym komputerze
+_unused.remove=Usuń
+_unused.send.feedback=Przyślij opinię
+_unused.share.your.ideas=Podziel się pomysłami
+_unused.show.all=Pokaż wszystko
+_unused.sign.in=Zarejestruj się
+_unused.site.map=Mapa serwisu
+_unused.sound=Nagranie dźwiękowe
+_unused.tag.added=Tag dodany
+_unused.tag.addition.failed=Dodanie tagu nie powiodło się
+_unused.tagging=Tagowanie
+_unused.terms.and.conditions=Zasady i warunki
+_unused.text=Tekst
+_unused.username.in.use=już wykorzystywana. Proszę wybrać inną nazwę użytkownika
+_unused.usertags=Tagi użytkowników
+_unused.using.europeana=Korzystanie z Europeany
+_unused.view.as.xml=Widok XML
+_unused.view.with.labels=Widok z etykietami
+_unused.view.without.labels=Widok bez etykiet
+_unused.you.have.search.for=Szukasz
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Austria
