--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Nu s-au salvat resurse
 NoSavedSearches_t=Nu s-au salvat interogări
 NoSavedTags_t=Nu s-au salvat descriptori
 NoScript_t=Pentru o utilizare optimală a acestui sait, e necesar să aveți JavaScript activat.
-NotBoolean_t=nu
 Of_t=a(l)/ai/ale
 OpensInNewWindow_t=Se deschide într-o fereastră nouă
-OrBoolean_t=sau
 Page_t=Pagină
 PartnerExplain_t=Aceasta este o rețea de parteneri care au colaborat pentru a înfăptui Europeana, și care au reprezentat Europeana în țările lor și în asociațiile lor profesionale.
 Partner_t=Partener
 Partners_t=Parteneri
-PasswordChoose_t=Alegeţi o parolă
-PasswordExplain_t=Parola trebuie să aibă o lungime de 6 - 30 de caractere
 Password_t=Parola
 PeopleAreCurrentlyThinkingAbout_t=Lumea se gândeşte acum la
-PersonalPage=My Personal Page
-PickUserName_t=Numele dvs. utilizator va fi afişat când sunteţi logat
-PleaseFollowTheLinkProvided_t=Vă rog urmaţi link-ul furnizat în meil şi finalizaţi procedura de înregistrare
-Previous_t=Precedentul
-Privacy_t=Confidenţialitate
-Provider_t=Furnizor
-RefineYourSearch_t=Rafinaţi-vă interogarea
 RegisterAgain_t=Înregistraţi-vă din nou
-Register_t=Înregistraţi-vă
-RegistrationFailed_t=O eroare s-a strecurat în timpul procesării înregistrării dvs. Vă rog să încercaţi din nou
-RelatedContent_t=Conţinut asociat
-RememberMe_t=Ţine-mă minte pe acest computer
-Remove_t=Elimină
-RepeatPassword_t=Repetaţi parola
 RequiredField_t=Acesta este un câmp obligatoriu
 Reset_t=Resetează
 Results_t=rezultate
-ReturnToResults_t=Retur la rezultate
-SaveThisSearch_t=Salvează această interogare
-SaveToPersonalPage=Salvează în My Personal Page
-SavedItems_t=Resurse salvate
-SavedSearches_t=Interogări salvate
-SavedTags_t=Descriptori salvaţi
-SearchSavedFailed_t=Salvarea interogării a eşuat
-SearchSaved_t=Interogare salvată
-Search_t=Caută
 Sector_t=Sector
-SeeAllRelatedItems_t=Vezi toate resursele asociate
-SendUsFeedback_t=Trimiteţi-ne reacţii
-Send_t=Trimite
-ShareWithAFriend_t=Partajează cu un prieten
-ShareYourIdeas_t=Împărtăşiţi-vă ideile
-ShowAll_t=Arată tot
-SignIn_t=Logaţi-vă
-Sitemap_t=Harta saitului
-Sound_t=Sonor
 Sounds_t=Sonor
 StrorylineCredits_t=Text și responsabilități
-Subject_t=Subiect
-TagAdded_t=Descriptor adăugat
-TagAdditionFailed_t=Adăugarea descriptorului a eşuat
-Tagging_t=Asignare de descriptori
-TermsAndConditions_t=Termeni şi condiţii
-Text_t=Text
 Texts_t=Texte
 ThisIsEuropeana_t=Aceasta este Europeana
 ThoughtLab_t=Laboratorul de reflecţie
 TimelineNavigator_t=Navigator pe scala cronologică
 Timeline_t=Scala cronologică
-Title_t=Titlu
 UserConductAgree_t=Înțeleg că My Personal Page îmi oferă oportunitatea de a crea descriptori (taguri) care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată. CLICK PENTRU CONSIMȚĂMÂNT
 UserConduct_t=Conduita utilizatorului
-UserInformation_t=Informaţii despre utilizator
-UserNameChoose_t=Alegeţi un nume-utilizator
-UserNameExplain_t=Numele dvs. utilizator va fi afişat cînd sunteţi logat
-UserTags_t=Descriptori-utilizator
-UsernameInUse_t=este deja utilizat. Vă rog să alegeţi un alt nume-utilizator
-Username_t=Uneme-utilizator
-UsingEuropeana_t=Cum se foloseşte Europeana
 Video_t=Video
-Videos_t=Clipuri video
-ViewAsXML_t=Prezentare în format XML
-ViewInOriginalContext_t=Prezentare în contextul original
-ViewWithLabels_t=Prezentare cu etichete
-ViewWithoutLabels_t=Prezentare fără etichete
 ViewingRelatedItems_t=Vedeţi toate resursele asociate
-YouHaveSearchFor_t=Aţi căutat
 _action.add.annotation=null
 _action.add.tag=Adaugă un descriptor
 _action.advanced.search=Căutare avansată
@@ -146,7 +91,21 @@ _action.alt.more.info=Click pentru a obţine mai multă informaţie
 _action.alt.next.page=Click aici pentru următoarea pagină cu rezultate
 _action.alt.previous.page=Click aici pentru precedenta pagină cu rezultate
 _action.alt.table.view=Prezentare tabelară
+_action.personalpage=My Personal Page
+_action.previous=Precedentul
+_action.refine.your.search=Rafinaţi-vă interogarea
+_action.return.to.results=Retur la rezultate
+_action.save.this.search=Salvează această interogare
+_action.save.to.mine=Salvează în My Personal Page
+_action.search=Caută
+_action.seeallrelateditems=Vezi toate resursele asociate
+_action.send=Trimite
+_action.share.with.friend=Partajează cu un prieten
+_action.videos=Clipuri video
+_action.view.in.original.context=Prezentare în contextul original
 _boolean.and=şi
+_boolean.not=nu
+_boolean.or=sau
 _facet.by.collection=null
 _facet.by.country=După ţară
 _facet.by.date=După dată
@@ -155,14 +114,34 @@ _facet.by.provider=După furnizor
 _facet.by.type=După tip
 _facet.by.user.tag=După descriptori-utilizator
 _facet.by.year=null
+_failure.search.saved=Salvarea interogării a eşuat
 _header.actions=Acţiuni
+_header.relatedcontent=Conţinut asociat
 _mine.date.saved=Dată salvată
 _mine.delete=Şterge
+_mine.saved.items=Resurse salvate
+_mine.saved.searches=Interogări salvate
+_mine.saved.tags=Descriptori salvaţi
+_mine.user.information=Informaţii despre utilizator
+_mine.username=Uneme-utilizator
 _option.any.field=Oricare câmp
 _prompt.email.address=Adresa de meil
+_prompt.provider=Furnizor
 _register.email.has.been.sent=Un meil a fost expediat la următoarea adresă
+_register.password.choose=Alegeţi o parolă
+_register.password.explain=Parola trebuie să aibă o lungime de 6 - 30 de caractere
+_register.pick.user.name=Numele dvs. utilizator va fi afişat când sunteţi logat
+_register.please.follow.link=Vă rog urmaţi link-ul furnizat în meil şi finalizaţi procedura de înregistrare
+_register.register=Înregistraţi-vă
+_register.registration.failed=O eroare s-a strecurat în timpul procesării înregistrării dvs. Vă rog să încercaţi din nou
+_register.repeat.password=Repetaţi parola
+_register.username.choose=Alegeţi un nume-utilizator
+_register.username.explain=Numele dvs. utilizator va fi afişat cînd sunteţi logat
 _search.field.creator=Creator
 _search.field.date=Data
+_search.option.subject=Subiect
+_search.option.title=Titlu
+_success.search.saved=Interogare salvată
 _unused.about.us=Despre noi
 _unused.accessibility=Accesibilitate
 _unused.add=Adăugaţi
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Un agregator colectează material de la alți contri
 _unused.altprint=Imprimă această pagină
 _unused.aplacetoshareideas=un loc al inspiraţiei şi al ideilor. Căutaţi prin colecţiile culturale ale Europei, intersectaţi-vă cu alţi utilizatori şi partajaţi-vă descoperirile.
 _unused.browse.through.time=Baleiază cronologic
+_unused.privacy=Confidenţialitate
+_unused.remember.me=Ţine-mă minte pe acest computer
+_unused.remove=Elimină
+_unused.send.feedback=Trimiteţi-ne reacţii
+_unused.share.your.ideas=Împărtăşiţi-vă ideile
+_unused.show.all=Arată tot
+_unused.sign.in=Logaţi-vă
+_unused.site.map=Harta saitului
+_unused.sound=Sonor
+_unused.tag.added=Descriptor adăugat
+_unused.tag.addition.failed=Adăugarea descriptorului a eşuat
+_unused.tagging=Asignare de descriptori
+_unused.terms.and.conditions=Termeni şi condiţii
+_unused.text=Text
+_unused.username.in.use=este deja utilizat. Vă rog să alegeţi un alt nume-utilizator
+_unused.usertags=Descriptori-utilizator
+_unused.using.europeana=Cum se foloseşte Europeana
+_unused.view.as.xml=Prezentare în format XML
+_unused.view.with.labels=Prezentare cu etichete
+_unused.view.without.labels=Prezentare fără etichete
+_unused.you.have.search.for=Aţi căutat
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Austria
