--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Žiadne uložené položky
 NoSavedSearches_t=Žiadne uložené vyhľadávania
 NoSavedTags_t=Žiadne uložené tagy
 NoScript_t=Na optimálne využitie tohto webového sídla musíte mať aktivovaný JavaScript
-NotBoolean_t=nie
 Of_t=z
 OpensInNewWindow_t=Otvorí sa v novom okne
-OrBoolean_t=alebo
 Page_t=Strana
 PartnerExplain_t=Toto je sieť partnerov, ktorí spolupracovali na realizácii Europeany a ktorí reprezentujú Europeanu vo svojich krajinách a profesionálnych združeniach.
 Partner_t=Partner
 Partners_t=Partneri
-PasswordChoose_t=Vyberte si heslo
-PasswordExplain_t=Heslo musí mať 6 až 30 znakov
 Password_t=Heslo
 PeopleAreCurrentlyThinkingAbout_t=Ľudia práve premýšľajú o tomto...
-PersonalPage=Moja Europeana
-PickUserName_t=Vaše používateľské meno sa zobrazí po prihlásení
-PleaseFollowTheLinkProvided_t=Kliknite prosím na linku uvedenú v e-mailovej správe a dokončite proces registrácie
-Previous_t=Predchádzajúce
-Privacy_t=Ochrana súkromia
-Provider_t=Poskytovateľ
-RefineYourSearch_t=Spresnite Vaše vyhľadávanie
 RegisterAgain_t=Opätovná registrácia
-Register_t=Registrácia
-RegistrationFailed_t=Počas pokusu o spracovanie Vašej registrácie sa vyskytla chyba. Skúste to prosím znova
-RelatedContent_t=Súvisiaci obsah
-RememberMe_t=Zapämätať si ma na tomto počítači
-Remove_t=Odstrániť
-RepeatPassword_t=Zopakujte heslo
 RequiredField_t=Toto pole je povinné
 Reset_t=Vynulovať
 Results_t=Výsledky
-ReturnToResults_t=Vrátiť sa k výsledkom
-SaveThisSearch_t=Uložiť toto vyhľadávanie
-SaveToPersonalPage=Uložiť do Moja Europeana
-SavedItems_t=Uložené položky
-SavedSearches_t=Uložené vyhľadávania
-SavedTags_t=Uložené tagy
-SearchSavedFailed_t=Uloženie vyhľadávania zlyhalo
-SearchSaved_t=Uložené vyhľadávanie
-Search_t=Vyhľadávanie
 Sector_t=Sektor
-SeeAllRelatedItems_t=Pozrite si všetky súvisiace položky
-SendUsFeedback_t=Pošlite nám spätnú väzbu
-Send_t=Poslať
-ShareWithAFriend_t=Pošlite známemu
-ShareYourIdeas_t=Podeľte sa o svoje nápady
-ShowAll_t=Zobraziť všetko
-SignIn_t=Prihlásenie
-Sitemap_t=Mapa www sídla
-Sound_t=Zvuk
 Sounds_t=Zvuk
 StrorylineCredits_t=Pozadie a zásluhy
-Subject_t=Predmet
-TagAdded_t=Pridané tagy
-TagAdditionFailed_t=Pridanie tagu zlyhalo
-Tagging_t=Pridávanie tagov
-TermsAndConditions_t=Zmluvné podmienky
-Text_t=Text
 Texts_t=Texty
 ThisIsEuropeana_t=Toto je Europeana
 ThoughtLab_t=Laboratórium myšlienok
 TimelineNavigator_t=Navigátor po časovej osi
 Timeline_t=Časová os
-Title_t=Názov
 UserConductAgree_t=Rozumiem, že Moja Europeana mi dáva možnosť vytvárať vlastné označenia (tagy) pre ktorýkoľvek objekt, ktorý chcem. Súhlasím s tým, že nebudem vytvárať tagy, ktoré sa môžu považovať za hanlivé, škodlivé, výhražné, nezákonné, nactiutŕhačské, narušujúce práva, vulgárne, poburujúce, obťažujúce, pornografické, obscénne, ľstivé, útočiace na súkromie alebo právo na publicitu, nenávistné alebo neprípustné z rasových, etnických alebo iných dôvodov. Kliknutím na toto okienko súhlasím, že sa budem riadiť touto dohodou a chápem, že v opačnom prípade bude moje členstvo v Mojej Europeane ukončené. KLIKNITE, AK SÚHLASÍTE
 UserConduct_t=Pravidlá správania sa používateľov
-UserInformation_t=Informácie o používateľovi
-UserNameChoose_t=Vyberte si meno používateľa
-UserNameExplain_t=Vaše meno používateľa sa zobrazí po prihlásení
-UserTags_t=Používateľské tagy
-UsernameInUse_t=sa používa. Vyberte si prosím iné meno.
-Username_t=Meno používateľa
-UsingEuropeana_t=Používanie Europeany
 Video_t=Video
-Videos_t=Videá
-ViewAsXML_t=Zobraziť ako XML
-ViewInOriginalContext_t=Pozrieť si v pôvodnom kontexte
-ViewWithLabels_t=Zobraziť s návestiami
-ViewWithoutLabels_t=Zobraziť bez návestí
 ViewingRelatedItems_t=Prezeráte si súvisiace položky
-YouHaveSearchFor_t=Hľadali ste
 _action.add.annotation=null
 _action.add.tag=Pridať tag
 _action.advanced.search=Rozšírené vyhľadávanie
@@ -146,7 +91,21 @@ _action.alt.more.info=Kliknite, ak chcete viac informácií
 _action.alt.next.page=kliknite sem na zobrazenie nasledujúcej stránky s výsledkami
 _action.alt.previous.page=kliknite sem na zobrazenie predchádzajúcej stránky s výsledkami
 _action.alt.table.view=Zobrazenie v tabuľke
+_action.personalpage=Moja Europeana
+_action.previous=Predchádzajúce
+_action.refine.your.search=Spresnite Vaše vyhľadávanie
+_action.return.to.results=Vrátiť sa k výsledkom
+_action.save.this.search=Uložiť toto vyhľadávanie
+_action.save.to.mine=Uložiť do Moja Europeana
+_action.search=Vyhľadávanie
+_action.seeallrelateditems=Pozrite si všetky súvisiace položky
+_action.send=Poslať
+_action.share.with.friend=Pošlite známemu
+_action.videos=Videá
+_action.view.in.original.context=Pozrieť si v pôvodnom kontexte
 _boolean.and=a
+_boolean.not=nie
+_boolean.or=alebo
 _facet.by.collection=null
 _facet.by.country=Podľa krajiny
 _facet.by.date=Podľa dátumu
@@ -155,14 +114,34 @@ _facet.by.provider=Podľa poskytovateľa
 _facet.by.type=podľa typu
 _facet.by.user.tag=Podľa tagu používateľa
 _facet.by.year=null
+_failure.search.saved=Uloženie vyhľadávania zlyhalo
 _header.actions=Akcie
+_header.relatedcontent=Súvisiaci obsah
 _mine.date.saved=Dátum uloženia
 _mine.delete=Vymazať
+_mine.saved.items=Uložené položky
+_mine.saved.searches=Uložené vyhľadávania
+_mine.saved.tags=Uložené tagy
+_mine.user.information=Informácie o používateľovi
+_mine.username=Meno používateľa
 _option.any.field=Akékoľvek pole
 _prompt.email.address=E-mailová adresa:
+_prompt.provider=Poskytovateľ
 _register.email.has.been.sent=E-mailová spráca bola odoslaná na túto adresu
+_register.password.choose=Vyberte si heslo
+_register.password.explain=Heslo musí mať 6 až 30 znakov
+_register.pick.user.name=Vaše používateľské meno sa zobrazí po prihlásení
+_register.please.follow.link=Kliknite prosím na linku uvedenú v e-mailovej správe a dokončite proces registrácie
+_register.register=Registrácia
+_register.registration.failed=Počas pokusu o spracovanie Vašej registrácie sa vyskytla chyba. Skúste to prosím znova
+_register.repeat.password=Zopakujte heslo
+_register.username.choose=Vyberte si meno používateľa
+_register.username.explain=Vaše meno používateľa sa zobrazí po prihlásení
 _search.field.creator=Tvorca
 _search.field.date=Dátum
+_search.option.subject=Predmet
+_search.option.title=Názov
+_success.search.saved=Uložené vyhľadávanie
 _unused.about.us=O nás
 _unused.accessibility=Prístupnosť
 _unused.add=Pridať
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Agregátor zhromažďuje materiál od niekoľkých p
 _unused.altprint=Tlačiť túto stranu
 _unused.aplacetoshareideas=miesto pre inšpiráciu a nápady. Vyhľadávajte v kultúrnych zbierkach Európy, napojte sa na iné používateľské cesty a podeľte sa o svoje objavy.
 _unused.browse.through.time=Prezeranie v čase
+_unused.privacy=Ochrana súkromia
+_unused.remember.me=Zapämätať si ma na tomto počítači
+_unused.remove=Odstrániť
+_unused.send.feedback=Pošlite nám spätnú väzbu
+_unused.share.your.ideas=Podeľte sa o svoje nápady
+_unused.show.all=Zobraziť všetko
+_unused.sign.in=Prihlásenie
+_unused.site.map=Mapa www sídla
+_unused.sound=Zvuk
+_unused.tag.added=Pridané tagy
+_unused.tag.addition.failed=Pridanie tagu zlyhalo
+_unused.tagging=Pridávanie tagov
+_unused.terms.and.conditions=Zmluvné podmienky
+_unused.text=Text
+_unused.username.in.use=sa používa. Vyberte si prosím iné meno.
+_unused.usertags=Používateľské tagy
+_unused.using.europeana=Používanie Europeany
+_unused.view.as.xml=Zobraziť ako XML
+_unused.view.with.labels=Zobraziť s návestiami
+_unused.view.without.labels=Zobraziť bez návestí
+_unused.you.have.search.for=Hľadali ste
 albania_t=Albánsko
 armenia_t=Arménsko
 austria_t=Rakúsko
