--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Ni shranjenih predmetov
 NoSavedSearches_t=Ni shranjenih iskanj
 NoSavedTags_t=Ni shranjenih zaznamkov
 NoScript_t=Stran deluje najbolje, če je JavaScript aktiviran
-NotBoolean_t=in ne
 Of_t=od
 OpensInNewWindow_t=Odpre se v novem oknu
-OrBoolean_t=ali
 Page_t=Stran
 PartnerExplain_t=Spodaj je mreža partnerjev, ki so sodelovali pri ustvarjanju Europeane in jo zastopajo v svojih državah in strokovnih združenjih
 Partner_t=Partner
 Partners_t=Partnerji
-PasswordChoose_t=Izberite geslo
-PasswordExplain_t=Geslo mora biti dolgo od 6 do 30 črk.
 Password_t=Geslo
 PeopleAreCurrentlyThinkingAbout_t=Ljudje trenutno mislijo na
-PersonalPage=Moja Europeana
-PickUserName_t=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
-PleaseFollowTheLinkProvided_t=Za zaključek registracije prosimo sledite povezavi v sporočilu
-Previous_t=Nazaj
-Privacy_t=Zasebnost
-Provider_t=Ponudnik
-RefineYourSearch_t=Napredno iskanje
 RegisterAgain_t=Ponovna registracija
-Register_t=Registracija
-RegistrationFailed_t=Med obdelavo vaše registracije je prišlo do napake. Prosimo, poskusite znova
-RelatedContent_t=Sorodne vsebine
-RememberMe_t=Zapomni si me na tem računalniku
-Remove_t=Odstrani
-RepeatPassword_t=Ponovno vnesite geslo
 RequiredField_t=To polje je obvezno
 Reset_t=Ponastavi
 Results_t=Rezultati
-ReturnToResults_t=Nazaj na rezultate
-SaveThisSearch_t=Shrani iskanje
-SaveToPersonalPage=Shrani v Mojo Europeano
-SavedItems_t=Shranjeni predmeti
-SavedSearches_t=Shranjena iskanja
-SavedTags_t=Shranjeni zaznamki
-SearchSavedFailed_t=Shranjevanje iskanja ni uspelo
-SearchSaved_t=Išči po shranjenih iskanjih
-Search_t=Išči
 Sector_t=Področje
-SeeAllRelatedItems_t=Prikaži vse sorodne vsebine
-SendUsFeedback_t=Pošljite svoje mnenje
-Send_t=Pošlji
-ShareWithAFriend_t=Pošlji prijatelju
-ShareYourIdeas_t=Posredujte svoje ideje
-ShowAll_t=Prikaži vse
-SignIn_t=Prijava
-Sitemap_t=Zemljevid strani
-Sound_t=Zvok
 Sounds_t=Zvoki
 StrorylineCredits_t=Ozadje in zahvale
-Subject_t=Predmet
-TagAdded_t=Zaznamek dodan
-TagAdditionFailed_t=Dodajanje zaznamka ni uspelo
-Tagging_t=Zaznamki
-TermsAndConditions_t=Pogoji uporabe
-Text_t=Besedilo
 Texts_t=Besedila
 ThisIsEuropeana_t=To je Europeana
 ThoughtLab_t=Valilnica idej
 TimelineNavigator_t=Časovni navigator
 Timeline_t=Časovni okvir
-Title_t=Naslov
 UserConductAgree_t=Storitev Moja Europeana mi omogoča ustvarjanje zaznamkov za kateri koli predmet. Zavedam se, da ustvarjanje zaznamkov z namenom klevetanja, oškodovanja, groženja, obrekovanja, žaljenja, podžiganja rasnih, etničnih ali drugih predsodkov, nadlegovanja, goljufanja, širjenja neprimernih vsebin, kršenja osebnih ali drugih pravic, oziroma kakršne koli druge zlorabe storitve ni dovoljeno. S klikom na spodnji gumb izražam svoje soglasje k zgornjim pogojem; strinjam se tudi, da se mi, v kolikor navedenih pogojev ne bom spoštoval, članstvo lahko ukine. STRINJAM SE
 UserConduct_t=Pravila ravnanja
-UserInformation_t=Podatki o uporabniku
-UserNameChoose_t=Izberite uporabniško ime
-UserNameExplain_t=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
-UserTags_t=Uporabniški zaznamki
-UsernameInUse_t=je že uporabljeno. Prosimo, izberite drugo uporabniško ime
-Username_t=Uporabniško ime
-UsingEuropeana_t=Uporaba Europeane
 Video_t=Video
-Videos_t=Video
-ViewAsXML_t=Poglej kot XML
-ViewInOriginalContext_t=Prikaži v izvirnem kontekstu
-ViewWithLabels_t=Pogled z oznakami
-ViewWithoutLabels_t=Pogled brez oznak
 ViewingRelatedItems_t=Pregledujete sorodne predmete
-YouHaveSearchFor_t=Iskali ste
 _action.add.annotation=null
 _action.add.tag=Dodaj zaznamek
 _action.advanced.search=Napredno iskanje
@@ -146,7 +91,21 @@ _action.alt.more.info=Za več informacij kliknite tukaj
 _action.alt.next.page=Za prikaz naslednje strani z rezultati kliknite tukaj
 _action.alt.previous.page=za prikaz prejšnje strani z rezultati kliknite tukaj
 _action.alt.table.view=Poglej kot tabelo
+_action.personalpage=Moja Europeana
+_action.previous=Nazaj
+_action.refine.your.search=Napredno iskanje
+_action.return.to.results=Nazaj na rezultate
+_action.save.this.search=Shrani iskanje
+_action.save.to.mine=Shrani v Mojo Europeano
+_action.search=Išči
+_action.seeallrelateditems=Prikaži vse sorodne vsebine
+_action.send=Pošlji
+_action.share.with.friend=Pošlji prijatelju
+_action.videos=Video
+_action.view.in.original.context=Prikaži v izvirnem kontekstu
 _boolean.and=in
+_boolean.not=in ne
+_boolean.or=ali
 _facet.by.collection=null
 _facet.by.country=Po državi
 _facet.by.date=Po datumu
@@ -155,14 +114,34 @@ _facet.by.provider=Po ponudniku
 _facet.by.type=Po tipu
 _facet.by.user.tag=Po zaznamkih uporabnikov
 _facet.by.year=null
+_failure.search.saved=Shranjevanje iskanja ni uspelo
 _header.actions=Možnosti
+_header.relatedcontent=Sorodne vsebine
 _mine.date.saved=Datum
 _mine.delete=Izbriši
+_mine.saved.items=Shranjeni predmeti
+_mine.saved.searches=Shranjena iskanja
+_mine.saved.tags=Shranjeni zaznamki
+_mine.user.information=Podatki o uporabniku
+_mine.username=Uporabniško ime
 _option.any.field=Vsa polja
 _prompt.email.address=Elektronski naslov
+_prompt.provider=Ponudnik
 _register.email.has.been.sent=Na navedeni naslov smo poslali sporočilo
+_register.password.choose=Izberite geslo
+_register.password.explain=Geslo mora biti dolgo od 6 do 30 črk.
+_register.pick.user.name=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
+_register.please.follow.link=Za zaključek registracije prosimo sledite povezavi v sporočilu
+_register.register=Registracija
+_register.registration.failed=Med obdelavo vaše registracije je prišlo do napake. Prosimo, poskusite znova
+_register.repeat.password=Ponovno vnesite geslo
+_register.username.choose=Izberite uporabniško ime
+_register.username.explain=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
 _search.field.creator=Avtor
 _search.field.date=Datum
+_search.option.subject=Predmet
+_search.option.title=Naslov
+_success.search.saved=Išči po shranjenih iskanjih
 _unused.about.us=O nas
 _unused.accessibility=Dostopnost
 _unused.add=Dodaj
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Zbirni center združuje gradivo, ki so ga prispevali
 _unused.altprint=Natisnite stran
 _unused.aplacetoshareideas=vir navdiha in novih idej. Iščite po kulturnih zbirkah Evrope, povežite se z drugimi uporabniki in delite svoja odkritja.
 _unused.browse.through.time=Brskajte po času
+_unused.privacy=Zasebnost
+_unused.remember.me=Zapomni si me na tem računalniku
+_unused.remove=Odstrani
+_unused.send.feedback=Pošljite svoje mnenje
+_unused.share.your.ideas=Posredujte svoje ideje
+_unused.show.all=Prikaži vse
+_unused.sign.in=Prijava
+_unused.site.map=Zemljevid strani
+_unused.sound=Zvok
+_unused.tag.added=Zaznamek dodan
+_unused.tag.addition.failed=Dodajanje zaznamka ni uspelo
+_unused.tagging=Zaznamki
+_unused.terms.and.conditions=Pogoji uporabe
+_unused.text=Besedilo
+_unused.username.in.use=je že uporabljeno. Prosimo, izberite drugo uporabniško ime
+_unused.usertags=Uporabniški zaznamki
+_unused.using.europeana=Uporaba Europeane
+_unused.view.as.xml=Poglej kot XML
+_unused.view.with.labels=Pogled z oznakami
+_unused.view.without.labels=Pogled brez oznak
+_unused.you.have.search.for=Iskali ste
 albania_t=Albanija
 armenia_t=Armenija
 austria_t=Avstrija
