--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Inga sparade objekt
 NoSavedSearches_t=Inga sparade sökningar
 NoSavedTags_t=Inga sparade märkningar
 NoScript_t=Om du vill kunna använda den här webbplatsen fullt ut måste JavaScript vara aktiverat
-NotBoolean_t=inte
 Of_t=av
 OpensInNewWindow_t=Öppna i ett nytt fönster
-OrBoolean_t=eller
 Page_t=Sida
 PartnerExplain_t=Det här är nätverket med partner som har samarbetat för att genomföra Europeana, och som representerar Europeana i sina länder och yrkesföreningar.
 Partner_t=Partner
 Partners_t=Partner
-PasswordChoose_t=Välj ett lösenord
-PasswordExplain_t=Lösenord får vara 6-30 ord långa
 Password_t=Lösenord
 PeopleAreCurrentlyThinkingAbout_t=Människor tänker just nu på
-PersonalPage=Mitt Europeana
-PickUserName_t=Ditt användarnamn visas när du har loggat in
-PleaseFollowTheLinkProvided_t=Klicka på länken i e-postmeddelandet och gör klart registreringen
-Previous_t=Föregående
-Privacy_t=Sekretess
-Provider_t=Leverantör
-RefineYourSearch_t=Förfina din sökning
 RegisterAgain_t=Registrera på nytt
-Register_t=Registrera
-RegistrationFailed_t=Ett fel uppstod vid behandlingen av din registrering. Försök igen
-RelatedContent_t=Liknande material
-RememberMe_t=Kom ihåg mig på den här datorn
-Remove_t=Ta bort
-RepeatPassword_t=Upprepa lösenordet
 RequiredField_t=Detta är ett obligatoriskt fält
 Reset_t=Återställ
 Results_t=Resultat
-ReturnToResults_t=Återvänd till resultaten
-SaveThisSearch_t=Spara denna sökning
-SaveToPersonalPage=Spara på Mitt Europeana
-SavedItems_t=Sparade objekt
-SavedSearches_t=Sparade sökningar
-SavedTags_t=Sparade märkningar
-SearchSavedFailed_t=Det gick inte att spara sökningen
-SearchSaved_t=Sök bland sparade sökningar
-Search_t=Sök
 Sector_t=Område
-SeeAllRelatedItems_t=Visa alla liknande objekt
-SendUsFeedback_t=Skicka feedback
-Send_t=Skicka
-ShareWithAFriend_t=Tipsa en vän
-ShareYourIdeas_t=Dela med dig av dina idéer
-ShowAll_t=Visa alla
-SignIn_t=Logga in
-Sitemap_t=Webbplatsöversikt
-Sound_t=Ljud
 Sounds_t=Ljud
 StrorylineCredits_t=Handling och medverkande
-Subject_t=Ämne
-TagAdded_t=Märkningen har lagts till
-TagAdditionFailed_t=Det gick inte att lägga till märkningen
-Tagging_t=Märkning
-TermsAndConditions_t=Bestämmelser och villkor
-Text_t=Text
 Texts_t=Texter
 ThisIsEuropeana_t=Detta är Europeana
 ThoughtLab_t=Idélabb
 TimelineNavigator_t=Tidslinjenavigerare
 Timeline_t=Tidslinje
-Title_t=Titel
 UserConductAgree_t=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Personal Page annars avslutas. KLICKA FÖR ATT ACCEPTERA
 UserConduct_t=Användarregler
-UserInformation_t=Användaruppgifter
-UserNameChoose_t=Välj ett användarnamn
-UserNameExplain_t=Ditt användarnamn visas när du har loggat in
-UserTags_t=Användarmärkning
-UsernameInUse_t=används redan. Välj ett annat användarnamn
-Username_t=Användarnamn
-UsingEuropeana_t=Använda Europeana
 Video_t=Video
-Videos_t=Videor
-ViewAsXML_t=Visa som XML
-ViewInOriginalContext_t=Visa i ursprungssammanhang
-ViewWithLabels_t=Visa med etiketter
-ViewWithoutLabels_t=Visa utan etiketter
 ViewingRelatedItems_t=Du visar liknande objekt
-YouHaveSearchFor_t=Du sökte efter
 _action.add.annotation=null
 _action.add.tag=Lägg till en märkning
 _action.advanced.search=Avancerad sökning
@@ -146,7 +91,21 @@ _action.alt.more.info=Klicka här för mer information
 _action.alt.next.page=Klicka här för nästa sida bland resultaten
 _action.alt.previous.page=Klicka här för föregående sida bland resultaten
 _action.alt.table.view=Tabellvisning
+_action.personalpage=Mitt Europeana
+_action.previous=Föregående
+_action.refine.your.search=Förfina din sökning
+_action.return.to.results=Återvänd till resultaten
+_action.save.this.search=Spara denna sökning
+_action.save.to.mine=Spara på Mitt Europeana
+_action.search=Sök
+_action.seeallrelateditems=Visa alla liknande objekt
+_action.send=Skicka
+_action.share.with.friend=Tipsa en vän
+_action.videos=Videor
+_action.view.in.original.context=Visa i ursprungssammanhang
 _boolean.and=och
+_boolean.not=inte
+_boolean.or=eller
 _facet.by.collection=null
 _facet.by.country=Efter land
 _facet.by.date=Efter datum
@@ -155,14 +114,34 @@ _facet.by.provider=Efter leverantör
 _facet.by.type=Efter typ
 _facet.by.user.tag=Efter användarmärkning
 _facet.by.year=null
+_failure.search.saved=Det gick inte att spara sökningen
 _header.actions=Åtgärder
+_header.relatedcontent=Liknande material
 _mine.date.saved=Informationen har sparats
 _mine.delete=Ta bort
+_mine.saved.items=Sparade objekt
+_mine.saved.searches=Sparade sökningar
+_mine.saved.tags=Sparade märkningar
+_mine.user.information=Användaruppgifter
+_mine.username=Användarnamn
 _option.any.field=Alla fält
 _prompt.email.address=E-postadress
+_prompt.provider=Leverantör
 _register.email.has.been.sent=E-post har skickats till följande adress
+_register.password.choose=Välj ett lösenord
+_register.password.explain=Lösenord får vara 6-30 ord långa
+_register.pick.user.name=Ditt användarnamn visas när du har loggat in
+_register.please.follow.link=Klicka på länken i e-postmeddelandet och gör klart registreringen
+_register.register=Registrera
+_register.registration.failed=Ett fel uppstod vid behandlingen av din registrering. Försök igen
+_register.repeat.password=Upprepa lösenordet
+_register.username.choose=Välj ett användarnamn
+_register.username.explain=Ditt användarnamn visas när du har loggat in
 _search.field.creator=Upphovsperson
 _search.field.date=Datum
+_search.option.subject=Ämne
+_search.option.title=Titel
+_success.search.saved=Sök bland sparade sökningar
 _unused.about.us=Om oss
 _unused.accessibility=Hjälpmedel
 _unused.add=Lägg till
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*En aggregator samlar in material från en mängd oli
 _unused.altprint=Skriv ut den här sidan
 _unused.aplacetoshareideas=en plats för inspiration och idéer. Sök bland Europas kulturella samlingar, upptäck andras favoriter och dela med dig av dina upptäckter.
 _unused.browse.through.time=Bläddra bland alla tider
+_unused.privacy=Sekretess
+_unused.remember.me=Kom ihåg mig på den här datorn
+_unused.remove=Ta bort
+_unused.send.feedback=Skicka feedback
+_unused.share.your.ideas=Dela med dig av dina idéer
+_unused.show.all=Visa alla
+_unused.sign.in=Logga in
+_unused.site.map=Webbplatsöversikt
+_unused.sound=Ljud
+_unused.tag.added=Märkningen har lagts till
+_unused.tag.addition.failed=Det gick inte att lägga till märkningen
+_unused.tagging=Märkning
+_unused.terms.and.conditions=Bestämmelser och villkor
+_unused.text=Text
+_unused.username.in.use=används redan. Välj ett annat användarnamn
+_unused.usertags=Användarmärkning
+_unused.using.europeana=Använda Europeana
+_unused.view.as.xml=Visa som XML
+_unused.view.with.labels=Visa med etiketter
+_unused.view.without.labels=Visa utan etiketter
+_unused.you.have.search.for=Du sökte efter
 albania_t=Albanien
 armenia_t=Armenien
 austria_t=Österrike
