--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Ingen gemte referencer
 NoSavedSearches_t=Ingen gemte søgninger
 NoSavedTags_t=Ingen gemte nøgleord
 NoScript_t=FOr optimal brug af dette website skal du have installeret JavaScript
-NotBoolean_t=ikke
 Of_t=af
 OpensInNewWindow_t=Åbn i nyt vindue
-OrBoolean_t=eller
 Page_t=Side
 PartnerExplain_t=Netværket af partnere, som samarbejdede om Europeanas tilblivelse og som repræsenterer Europeana i deres lande og faglige sammenhænge
 Partner_t=Partner
 Partners_t=Partnere
-PasswordChoose_t=Vælg et password
-PasswordExplain_t=Passwords skal være på mindst 6 og max. 30 bogstaver
 Password_t=Password
 PeopleAreCurrentlyThinkingAbout_t=For øjeblikket søges der på
-PersonalPage=Mit Europeana
-PickUserName_t=Dit brugernavn bliver vist når du har logget på
-PleaseFollowTheLinkProvided_t=Følg venligst linket i e-mailen og afslut registreringen
-Previous_t=Forrige
-Privacy_t=Beskyttelse af persondata
-Provider_t=Leverandør
-RefineYourSearch_t=Præcisér din søgning
 RegisterAgain_t=Registrer dig igen
-Register_t=Registrer
-RegistrationFailed_t=En fejl opstod i forbindelse med din registrering. Prøv igen.
-RelatedContent_t=Lignende indhold
-RememberMe_t=Husk mig på denne pc
-Remove_t=Fjern
-RepeatPassword_t=Gentag password
 RequiredField_t=Feltet skal udfyldes
 Reset_t=Nulstil
 Results_t=Resultater
-ReturnToResults_t=Til resultatlisten
-SaveThisSearch_t=Gem denne søgning
-SaveToPersonalPage=Gem i Mit Europeana
-SavedItems_t=Gemte referencer
-SavedSearches_t=Gemte søgninger
-SavedTags_t=Gemte nøgleord
-SearchSavedFailed_t=Gem søgning mislykkedes
-SearchSaved_t=Søgning gemt
-Search_t=Søg
 Sector_t=Sektor
-SeeAllRelatedItems_t=Se alle lignende referencer
-SendUsFeedback_t=Send feedback
-Send_t=Send
-ShareWithAFriend_t=Del med en ven
-ShareYourIdeas_t=Del dine idéer
-ShowAll_t=Vis alle
-SignIn_t=Indskriv dig
-Sitemap_t=Oversigt over sitet
-Sound_t=Lyd
 Sounds_t=Lyd
 StrorylineCredits_t=Handling og fortekster
-Subject_t=Emne
-TagAdded_t=Nøgleord tilføjet
-TagAdditionFailed_t=Tilføjelse af nøgleord mislykkedes
-Tagging_t=Giv nøgleord
-TermsAndConditions_t=Vilkår og betingelser
-Text_t=Tekst
 Texts_t=Tekster
 ThisIsEuropeana_t=Velkommen til Europeana
 ThoughtLab_t=Idé-rum
 TimelineNavigator_t=Tidslinje
 Timeline_t=Tidslinje
-Title_t=Titel
 UserConductAgree_t=Jeg har forstået at Europeana giver mig mulighed for at tagge de genstande jeg ønsker. Jer erklærer mig indforstået med at jeg ikke vil tilføje tags, der på nogen måde er eller kan opfattes ærekrænkende, skadelige,truende,ulovlige, injurierende, rettighedskrænkende, fornærmende,provokerende,chikanerende,pornografisk,uanstændig,svigagtig,overtræder private eller offentlige rettigheder,hadefuld,diskriminerende,umoralsk eller på anden måde stødende eller forkastelig. Ved at hakke af her, lover jeg at rette mig efter denne erklæring og forstår at, hvis jeg ikke gør det, vil jeg blive udelukket fra Mit Europeana. KLIK HER FOR AT BEKRÆFTE
 UserConduct_t=Brugeradfærd
-UserInformation_t=Brugerinformation
-UserNameChoose_t=Vælg et brugernavn
-UserNameExplain_t=Dit brugernavn vil blive vist når du er logget på
-UserTags_t=Nøgleord tilføjet af brugere
-UsernameInUse_t=Vælg et andet brugernavn
-Username_t=Brugernavn
-UsingEuropeana_t=Om brugen af Europeana
 Video_t=Video
-Videos_t=Videoer
-ViewAsXML_t=Vis som XML
-ViewInOriginalContext_t=Se i den oprindelige sammenhæng
-ViewWithLabels_t=Vis med feltnavne
-ViewWithoutLabels_t=Vis uden feltnavne
 ViewingRelatedItems_t=Se lignende referencer
-YouHaveSearchFor_t=Du søgte efter
 _action.add.annotation=null
 _action.add.tag=Tilføj et nøgleord
 _action.advanced.search=Avanceret søgning
@@ -146,7 +91,21 @@ _action.alt.more.info=Klik for yderligere information
 _action.alt.next.page=Næste resultatliste
 _action.alt.previous.page=klik her for forrige resultatliste
 _action.alt.table.view=Tabeloversigt
+_action.personalpage=Mit Europeana
+_action.previous=Forrige
+_action.refine.your.search=Præcisér din søgning
+_action.return.to.results=Til resultatlisten
+_action.save.this.search=Gem denne søgning
+_action.save.to.mine=Gem i Mit Europeana
+_action.search=Søg
+_action.seeallrelateditems=Se alle lignende referencer
+_action.send=Send
+_action.share.with.friend=Del med en ven
+_action.videos=Videoer
+_action.view.in.original.context=Se i den oprindelige sammenhæng
 _boolean.and=og
+_boolean.not=ikke
+_boolean.or=eller
 _facet.by.collection=null
 _facet.by.country=Efter land
 _facet.by.date=Efter årstal
@@ -155,14 +114,34 @@ _facet.by.provider=Efter leverandør
 _facet.by.type=Efter type
 _facet.by.user.tag=Efter andre brugeres nøgleord
 _facet.by.year=null
+_failure.search.saved=Gem søgning mislykkedes
 _header.actions=Handlinger
+_header.relatedcontent=Lignende indhold
 _mine.date.saved=Årstal gemt
 _mine.delete=Slet
+_mine.saved.items=Gemte referencer
+_mine.saved.searches=Gemte søgninger
+_mine.saved.tags=Gemte nøgleord
+_mine.user.information=Brugerinformation
+_mine.username=Brugernavn
 _option.any.field=Alle felter
 _prompt.email.address=E-mail-adresse
+_prompt.provider=Leverandør
 _register.email.has.been.sent=Der er afsendt en e-mail til adressen
+_register.password.choose=Vælg et password
+_register.password.explain=Passwords skal være på mindst 6 og max. 30 bogstaver
+_register.pick.user.name=Dit brugernavn bliver vist når du har logget på
+_register.please.follow.link=Følg venligst linket i e-mailen og afslut registreringen
+_register.register=Registrer
+_register.registration.failed=En fejl opstod i forbindelse med din registrering. Prøv igen.
+_register.repeat.password=Gentag password
+_register.username.choose=Vælg et brugernavn
+_register.username.explain=Dit brugernavn vil blive vist når du er logget på
 _search.field.creator=Kunstner
 _search.field.date=Årstal
+_search.option.subject=Emne
+_search.option.title=Titel
+_success.search.saved=Søgning gemt
 _unused.about.us=Om os
 _unused.accessibility=Tilgængelighed
 _unused.add=Tilføj
@@ -170,6 +149,27 @@ _unused.aggregator.explain=En aggregator samler materiale fra en række andre le
 _unused.altprint=Print denne side
 _unused.aplacetoshareideas=et sted at hente inspiration og idéer. Søg i Europas kultursamlinger, se hvad andre har fundet og del dine egne opdagelser
 _unused.browse.through.time=Vælg et årstal
+_unused.privacy=Beskyttelse af persondata
+_unused.remember.me=Husk mig på denne pc
+_unused.remove=Fjern
+_unused.send.feedback=Send feedback
+_unused.share.your.ideas=Del dine idéer
+_unused.show.all=Vis alle
+_unused.sign.in=Indskriv dig
+_unused.site.map=Oversigt over sitet
+_unused.sound=Lyd
+_unused.tag.added=Nøgleord tilføjet
+_unused.tag.addition.failed=Tilføjelse af nøgleord mislykkedes
+_unused.tagging=Giv nøgleord
+_unused.terms.and.conditions=Vilkår og betingelser
+_unused.text=Tekst
+_unused.username.in.use=Vælg et andet brugernavn
+_unused.usertags=Nøgleord tilføjet af brugere
+_unused.using.europeana=Om brugen af Europeana
+_unused.view.as.xml=Vis som XML
+_unused.view.with.labels=Vis med feltnavne
+_unused.view.without.labels=Vis uden feltnavne
+_unused.you.have.search.for=Du søgte efter
 albania_t=Albanien
 armenia_t=Armenien
 austria_t=Østrig
