--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=No saved items
 NoSavedSearches_t=No saved searches
 NoSavedTags_t=No saved tags
 NoScript_t=To make optimal use of this website you need to have JavaScript activated
-NotBoolean_t=not
 Of_t=of
 OpensInNewWindow_t=Opens in a new window
-OrBoolean_t=or
 Page_t=Page
 PartnerExplain_t=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
 Partner_t=Partner
 Partners_t=Partners
-PasswordChoose_t=Choose a password
-PasswordExplain_t=Passwords must be 6-30 characters in length
 Password_t=Password
 PeopleAreCurrentlyThinkingAbout_t=People are currently thinking about
-PersonalPage=My Personal Page
-PickUserName_t=Your username will be displayed when you have logged in
-PleaseFollowTheLinkProvided_t=Please follow the link provided in the email and finish the registration process
-Previous_t=Previous
-Privacy_t=Privacy
-Provider_t=Provider
-RefineYourSearch_t=Refine your search
 RegisterAgain_t=Register again
-Register_t=Register
-RegistrationFailed_t=An error occurred while trying to process your registration. Please try again
-RelatedContent_t=Related content
-RememberMe_t=Remember me on this computer
-Remove_t=Remove
-RepeatPassword_t=Repeat password
 RequiredField_t=This is a required field
 Reset_t=Reset
 Results_t=Results
-ReturnToResults_t=Return to results
-SaveThisSearch_t=Save this search
-SaveToPersonalPage=Save to My Personal Page
-SavedItems_t=Saved items
-SavedSearches_t=Saved searches
-SavedTags_t=Saved tags
-SearchSavedFailed_t=Saving search failed
-SearchSaved_t=Search saved
-Search_t=Search
 Sector_t=Sector
-SeeAllRelatedItems_t=See all related items
-SendUsFeedback_t=Send us feedback
-Send_t=Send
-ShareWithAFriend_t=Share with a friend
-ShareYourIdeas_t=Share your ideas
-ShowAll_t=Show all
-SignIn_t=Sign in
-Sitemap_t=Sitemap
-Sound_t=Sound
 Sounds_t=Sounds
 StrorylineCredits_t=Storyline and credits
-Subject_t=Subject
-TagAdded_t=Tag added
-TagAdditionFailed_t=Tag addition failed
-Tagging_t=Tagging
-TermsAndConditions_t=Terms and conditions
-Text_t=Text
 Texts_t=Texts
 ThisIsEuropeana_t=This is Europeana
 ThoughtLab_t=Thought lab
 TimelineNavigator_t=Timeline navigator
 Timeline_t=Timeline
-Title_t=Title
 UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
 UserConduct_t=User Conduct
-UserInformation_t=User information
-UserNameChoose_t=Choose a username
-UserNameExplain_t=Your username will be displayed when you have logged in
-UserTags_t=User tags
-UsernameInUse_t=is in use. Please choose another username
-Username_t=Username
-UsingEuropeana_t=Using Europeana
 Video_t=Video
-Videos_t=Videos
-ViewAsXML_t=View as XML
-ViewInOriginalContext_t=View in original context
-ViewWithLabels_t=View with labels
-ViewWithoutLabels_t=View without labels
 ViewingRelatedItems_t=You are viewing related items
-YouHaveSearchFor_t=You have searched for
 _action.add.annotation=Add annotation
 _action.add.tag=Add a tag
 _action.advanced.search=Advanced search
@@ -146,7 +91,21 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
+_action.personalpage=My Personal Page
+_action.previous=Previous
+_action.refine.your.search=Refine your search
+_action.return.to.results=Return to results
+_action.save.this.search=Save this search
+_action.save.to.mine=Save to My Personal Page
+_action.search=Search
+_action.seeallrelateditems=See all related items
+_action.send=Send
+_action.share.with.friend=Share with a friend
+_action.videos=Videos
+_action.view.in.original.context=View in original context
 _boolean.and=and
+_boolean.not=not
+_boolean.or=or
 _facet.by.collection=By collection
 _facet.by.country=By country
 _facet.by.date=By date
@@ -155,14 +114,34 @@ _facet.by.provider=By provider
 _facet.by.type=By type
 _facet.by.user.tag=By user tag
 _facet.by.year=null
+_failure.search.saved=Saving search failed
 _header.actions=Actions
+_header.relatedcontent=Related content
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.saved.items=Saved items
+_mine.saved.searches=Saved searches
+_mine.saved.tags=Saved tags
+_mine.user.information=User information
+_mine.username=Username
 _option.any.field=Any field
 _prompt.email.address=Email address
+_prompt.provider=Provider
 _register.email.has.been.sent=An email has been sent to the following address
+_register.password.choose=Choose a password
+_register.password.explain=Passwords must be 6-30 characters in length
+_register.pick.user.name=Your username will be displayed when you have logged in
+_register.please.follow.link=Please follow the link provided in the email and finish the registration process
+_register.register=Register
+_register.registration.failed=An error occurred while trying to process your registration. Please try again
+_register.repeat.password=Repeat password
+_register.username.choose=Choose a username
+_register.username.explain=Your username will be displayed when you have logged in
 _search.field.creator=Creator
 _search.field.date=Date
+_search.option.subject=Subject
+_search.option.title=Title
+_success.search.saved=Search saved
 _unused.about.us=About us
 _unused.accessibility=Accessibility
 _unused.add=Add
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*An aggregator collects material from a range of othe
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
 _unused.browse.through.time=Browse through time
+_unused.privacy=Privacy
+_unused.remember.me=Remember me on this computer
+_unused.remove=Remove
+_unused.send.feedback=Send us feedback
+_unused.share.your.ideas=Share your ideas
+_unused.show.all=Show all
+_unused.sign.in=Sign in
+_unused.site.map=Sitemap
+_unused.sound=Sound
+_unused.tag.added=Tag added
+_unused.tag.addition.failed=Tag addition failed
+_unused.tagging=Tagging
+_unused.terms.and.conditions=Terms and conditions
+_unused.text=Text
+_unused.username.in.use=is in use. Please choose another username
+_unused.usertags=User tags
+_unused.using.europeana=Using Europeana
+_unused.view.as.xml=View as XML
+_unused.view.with.labels=View with labels
+_unused.view.without.labels=View without labels
+_unused.you.have.search.for=You have searched for
 abm_contentProvider_t=Provider
 abm_county_t=County
 abm_dataprovider_t=Provider
