--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=No hay documentos guardados
 NoSavedSearches_t=No hay busquedas guardadas
 NoSavedTags_t=Etiquetas no guardadas
 NoScript_t=Para disfrutrar de un óptimo acceso a esta web, necesita tener activado el JavaScript
-NotBoolean_t=No
 Of_t=de
 OpensInNewWindow_t=Abrir en una nueva ventana
-OrBoolean_t=O
 Page_t=Página
 PartnerExplain_t=Ésta es la red de miembros que ayudaron a crear Europeana, y que representan a Europeana en sus países y asociaciones profesionales
 Partner_t=Socio
 Partners_t=Miembros
-PasswordChoose_t=Elija una contraseña
-PasswordExplain_t=La contraseña debe tener entre 6 y 30 caracteres
 Password_t=Contraseña
 PeopleAreCurrentlyThinkingAbout_t=Otros usuarios han propuesto lo siguiente
-PersonalPage=Mi Europeana
-PickUserName_t=Su nombre de usuario aparecerá cuando
-PleaseFollowTheLinkProvided_t=Por favor, pinche en el enlace enviado a su correo para finalizar con el proceso de registro
-Previous_t=Anterior
-Privacy_t=Privacidad
-Provider_t=Proveedor
-RefineYourSearch_t=Refine su búsqueda
 RegisterAgain_t=Registrarse de nuevo
-Register_t=Registrarse
-RegistrationFailed_t=Ha ocurrido un error durante el proceso de registro. Por favor, inténtelo de nuevo
-RelatedContent_t=Contenido relacionado
-RememberMe_t=Recordarme en este equipo
-Remove_t=Quitar
-RepeatPassword_t=Repita la contraseña
 RequiredField_t=Este es un campo obligatorio
 Reset_t=reiniciar
 Results_t=Resultados
-ReturnToResults_t=Volver a resultados
-SaveThisSearch_t=Guardar esta búsqueda
-SaveToPersonalPage=Guardar en Mi Europeana
-SavedItems_t=Elementos guardados
-SavedSearches_t=Búsquedas guardadas
-SavedTags_t=Etiquetas guardadas
-SearchSavedFailed_t=Fallo en la grabación de la búsqueda
-SearchSaved_t=Búsqueda guardada
-Search_t=Búsqueda
 Sector_t=Sector
-SeeAllRelatedItems_t=Ver todos los elementos relacionados
-SendUsFeedback_t=Envíenos sus sugerencias
-Send_t=Enviado
-ShareWithAFriend_t=Compartir con un amigo
-ShareYourIdeas_t=Comparta sus ideas
-ShowAll_t=Mostrar todos
-SignIn_t=Iniciar sesión
-Sitemap_t=Mapa del sitio
-Sound_t=Sonido
 Sounds_t=Sonidos
 StrorylineCredits_t=Guión y créditos.
-Subject_t=Materia
-TagAdded_t=Etiqueta añadida
-TagAdditionFailed_t=Fallo al añadir etiqueta
-Tagging_t=Etiquetado
-TermsAndConditions_t=Términos y Condiciones
-Text_t=Texto
 Texts_t=Textos
 ThisIsEuropeana_t=Esto es Europeana
 ThoughtLab_t=Laboratorio de ideas
 TimelineNavigator_t=Navegador de la cronología
 Timeline_t=Cronología
-Title_t=Título
 UserConductAgree_t=Entiendo que Mi Europeana ofrece la oportunidad de realizar comentarios sobre los objetos de consulta. Acepto que no realizaré comentarios que puedan ser considerados una difamación, puedan herir, ser ilegales, amenazadores, constitutivos de abuso, acoso, pornográficos, obscenos, fraudulentos, que invadan el derecho a la intimidad, viertan odio a personas por razón de raza, etnia u otro motivo que pudiese alegarse. Acepto las condiciones de este acuerdo y entiendo que si lo incumplo, mi registro en Mi Europeana quedará anulado. PINCHE AQUÍ PARA ACEPTAR
 UserConduct_t=Conducta de los/as usuarios/as
-UserInformation_t=Información de usuario
-UserNameChoose_t=Elija un nombre de usuario
-UserNameExplain_t=Su nombre de usuario se mostrará cuando esté conectado
-UserTags_t=Etiquetas de usuario
-UsernameInUse_t=ya está en uso. Por favor, elija otro nombre de usuario
-Username_t=Nombre de usuario
-UsingEuropeana_t=Cómo utilizar Europeana
 Video_t=Vídeo
-Videos_t=Vídeos
-ViewAsXML_t=Vista en XML
-ViewInOriginalContext_t=Visualizar en el contexto original
-ViewWithLabels_t=Vista con etiqueta
-ViewWithoutLabels_t=Vista sin etiquetas
 ViewingRelatedItems_t=Se muestran los elementos relacionados
-YouHaveSearchFor_t=Usted ha buscado por
 _action.add.annotation=null
 _action.add.tag=Añadir etiqueta
 _action.advanced.search=Búsqueda avanzada
@@ -146,7 +91,21 @@ _action.alt.more.info=Pinche aquí para más información
 _action.alt.next.page=pinche aquí para ir a los resultados de la página siguiente
 _action.alt.previous.page=pinche aquí para volver a los resultados de la página anterior
 _action.alt.table.view=Visualización en Tabla
+_action.personalpage=Mi Europeana
+_action.previous=Anterior
+_action.refine.your.search=Refine su búsqueda
+_action.return.to.results=Volver a resultados
+_action.save.this.search=Guardar esta búsqueda
+_action.save.to.mine=Guardar en Mi Europeana
+_action.search=Búsqueda
+_action.seeallrelateditems=Ver todos los elementos relacionados
+_action.send=Enviado
+_action.share.with.friend=Compartir con un amigo
+_action.videos=Vídeos
+_action.view.in.original.context=Visualizar en el contexto original
 _boolean.and=Y
+_boolean.not=No
+_boolean.or=O
 _facet.by.collection=null
 _facet.by.country=Por país
 _facet.by.date=Por fecha
@@ -155,14 +114,34 @@ _facet.by.provider=Por proveedor
 _facet.by.type=Por tipo
 _facet.by.user.tag=Por etiqueta de usuario
 _facet.by.year=null
+_failure.search.saved=Fallo en la grabación de la búsqueda
 _header.actions=Acciones
+_header.relatedcontent=Contenido relacionado
 _mine.date.saved=Fecha guardada
 _mine.delete=Borrar
+_mine.saved.items=Elementos guardados
+_mine.saved.searches=Búsquedas guardadas
+_mine.saved.tags=Etiquetas guardadas
+_mine.user.information=Información de usuario
+_mine.username=Nombre de usuario
 _option.any.field=Cualquier campo
 _prompt.email.address=Dirección de correo electrónico
+_prompt.provider=Proveedor
 _register.email.has.been.sent=Se ha enviado un correo electrónico a la siguiente dirección
+_register.password.choose=Elija una contraseña
+_register.password.explain=La contraseña debe tener entre 6 y 30 caracteres
+_register.pick.user.name=Su nombre de usuario aparecerá cuando
+_register.please.follow.link=Por favor, pinche en el enlace enviado a su correo para finalizar con el proceso de registro
+_register.register=Registrarse
+_register.registration.failed=Ha ocurrido un error durante el proceso de registro. Por favor, inténtelo de nuevo
+_register.repeat.password=Repita la contraseña
+_register.username.choose=Elija un nombre de usuario
+_register.username.explain=Su nombre de usuario se mostrará cuando esté conectado
 _search.field.creator=Creador
 _search.field.date=Fecha
+_search.option.subject=Materia
+_search.option.title=Título
+_success.search.saved=Búsqueda guardada
 _unused.about.us=Quiénes somos
 _unused.accessibility=Accesibilidad
 _unused.add=Añadir
@@ -170,6 +149,27 @@ _unused.aggregator.explain=Un proveedor recoge material de otros que pueden cont
 _unused.altprint=Imprimir esta página
 _unused.aplacetoshareideas=un lugar para la inspiración y las ideas. Realice su búsqueda por las colecciones de Europa, únase al recorrido de otros usuarios y comparta sus descubrimientos.
 _unused.browse.through.time=Navegue a través del tiempo
+_unused.privacy=Privacidad
+_unused.remember.me=Recordarme en este equipo
+_unused.remove=Quitar
+_unused.send.feedback=Envíenos sus sugerencias
+_unused.share.your.ideas=Comparta sus ideas
+_unused.show.all=Mostrar todos
+_unused.sign.in=Iniciar sesión
+_unused.site.map=Mapa del sitio
+_unused.sound=Sonido
+_unused.tag.added=Etiqueta añadida
+_unused.tag.addition.failed=Fallo al añadir etiqueta
+_unused.tagging=Etiquetado
+_unused.terms.and.conditions=Términos y Condiciones
+_unused.text=Texto
+_unused.username.in.use=ya está en uso. Por favor, elija otro nombre de usuario
+_unused.usertags=Etiquetas de usuario
+_unused.using.europeana=Cómo utilizar Europeana
+_unused.view.as.xml=Vista en XML
+_unused.view.with.labels=Vista con etiqueta
+_unused.view.without.labels=Vista sin etiquetas
+_unused.you.have.search.for=Usted ha buscado por
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Austria
