--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Pas d'objet sauvegardé
 NoSavedSearches_t=Pas de recherche sauvegardée
 NoSavedTags_t=Pas d'étiquette sauvegardée
 NoScript_t=Pour avoir une utilisation optimale du site web, vous avez besoin d'activer Javascript
-NotBoolean_t=sauf
 Of_t=de
 OpensInNewWindow_t=Ouvrir dans une nouvelle fenêtre
-OrBoolean_t=ou
 Page_t=Page
 PartnerExplain_t=C'est le réseau des partenaires qui ont collaboré à créer Europeana et qui représentent Europeana dans leur pays et dans les associations professionnelles.
 Partner_t=Partenaire
 Partners_t=Partenaires
-PasswordChoose_t=Choisir un mot de passe
-PasswordExplain_t=La longueur du mot de passe doit être entre 6-30 caractères
 Password_t=Mot de passe
 PeopleAreCurrentlyThinkingAbout_t=On pense actuellement à
-PersonalPage=Mon Europeana
-PickUserName_t=Votre nom d'utilisateur s'affichera une fois connecté
-PleaseFollowTheLinkProvided_t=Veuillez suivre le lien envoyé sur votre adresse mél pour finir votre enregistrement.
-Previous_t=Précédent
-Privacy_t=Confidentialité
-Provider_t=Fournisseur
-RefineYourSearch_t=Affiner votre recherche
 RegisterAgain_t=S'enregister à nouveau
-Register_t=S´enregistrer
-RegistrationFailed_t=Une erreur s'est produite lors de votre enregistrement. Veuillez recommencer
-RelatedContent_t=Contenu en relation
-RememberMe_t=Voulez-vous que Europeana retienne ce mot de passe
-Remove_t=Retirer
-RepeatPassword_t=Répéter le mot de passe
 RequiredField_t=C'est un champ requis
 Reset_t=Réinitialiser
 Results_t=Résultats
-ReturnToResults_t=Retourner aux résultats
-SaveThisSearch_t=Sauvegarder cette recherche
-SaveToPersonalPage=Sauver Mon Europeana
-SavedItems_t=Objets sauvegardés
-SavedSearches_t=Recherches sauvegardées
-SavedTags_t=Etiquettes sauvegardées
-SearchSavedFailed_t=Sauvegarde de la recherche échouée
-SearchSaved_t=Recherche sauvegardée
-Search_t=Rechercher
 Sector_t=Secteur
-SeeAllRelatedItems_t=Voir tous les objets en relation
-SendUsFeedback_t=Envoyez-nous vos remarques
-Send_t=Envoyer
-ShareWithAFriend_t=Partager avec un ami
-ShareYourIdeas_t=Partager vos idées
-ShowAll_t=Afficher tout
-SignIn_t=S'inscrire
-Sitemap_t=Plan du site
-Sound_t=Son
 Sounds_t=Sons
 StrorylineCredits_t=Plan et crédits
-Subject_t=Sujet
-TagAdded_t=Etiquette ajoutée
-TagAdditionFailed_t=Echec de l'ajout de l'étiquette
-Tagging_t=Ajout d'une étiquette
-TermsAndConditions_t=Termes et conditions
-Text_t=Texte
 Texts_t=Textes
 ThisIsEuropeana_t=Europeana
 ThoughtLab_t=Laboratoire d'idées
 TimelineNavigator_t=Barre de navigation de la frise chronologique
 Timeline_t=Frise chronologique
-Title_t=Titre
 UserConductAgree_t=J’accepte les conditions sous lesquelles je crée les étiquettes pour les objets que j’aurai choisis. J'accepte de ne pas créer d'étiquette qui pourrait être considérée comme diffamatoire, dommageable, préjudiciable, illégale, calomnieuse, incorrecte, injurieuse, provocatrice, gênante, pornographique, obscène, malhonnête, haineuse ou raciale d'un point de vue ethnique ou de toute autre manière qui pourrait être considérée comme choquante. J’accepte de ne pas créer d’étiquette qui serait susceptible de porter atteinte au respect de la vie privée ou qui ne pourrait être diffusé. En cliquant sur cette case, j'accepte de respecter les termes de l'accord. Dans le cas contraire, mon inscription à Europeana sera interrompue. CLIQUER POUR ACCEPTER
 UserConduct_t=Code d'utilisation
-UserInformation_t=Information pour l'utilisateur
-UserNameChoose_t=Choisir un nom d'utilisateur
-UserNameExplain_t=Votre nom d'utilisateur s'affichera une fois connecté
-UserTags_t=Les étiquettes de l'utilisateur
-UsernameInUse_t=déjà utilisé. Veuillez choisir un autre nom d'utilisateur
-Username_t=Nom d'utilisateur
-UsingEuropeana_t=Utiliser Europeana
 Video_t=Video
-Videos_t=Videos
-ViewAsXML_t=Voir en XML
-ViewInOriginalContext_t=Voir dans le contexte d'origine
-ViewWithLabels_t=Voir avec les labels
-ViewWithoutLabels_t=Voir sans les labels
 ViewingRelatedItems_t=Visualiser les objets en relation
-YouHaveSearchFor_t=Vous avez recherché sur
 _action.add.annotation=null
 _action.add.tag=Ajouter une étiquette
 _action.advanced.search=Recherche avancée
@@ -146,7 +91,21 @@ _action.alt.more.info=Cliquer ici pour plus d'information
 _action.alt.next.page=Cliquer ici pour visualiser les résultats de la page suivante
 _action.alt.previous.page=Cliquer ici pour visualiser les résultats de la page précédente
 _action.alt.table.view=Voir le tableau
+_action.personalpage=Mon Europeana
+_action.previous=Précédent
+_action.refine.your.search=Affiner votre recherche
+_action.return.to.results=Retourner aux résultats
+_action.save.this.search=Sauvegarder cette recherche
+_action.save.to.mine=Sauver Mon Europeana
+_action.search=Rechercher
+_action.seeallrelateditems=Voir tous les objets en relation
+_action.send=Envoyer
+_action.share.with.friend=Partager avec un ami
+_action.videos=Videos
+_action.view.in.original.context=Voir dans le contexte d'origine
 _boolean.and=et
+_boolean.not=sauf
+_boolean.or=ou
 _facet.by.collection=null
 _facet.by.country=Par pays
 _facet.by.date=Par date
@@ -155,14 +114,34 @@ _facet.by.provider=Par fournisseur
 _facet.by.type=Par type
 _facet.by.user.tag=Par étiquette d'utilisateur
 _facet.by.year=null
+_failure.search.saved=Sauvegarde de la recherche échouée
 _header.actions=Actions
+_header.relatedcontent=Contenu en relation
 _mine.date.saved=Date sauvegardée
 _mine.delete=Détruire
+_mine.saved.items=Objets sauvegardés
+_mine.saved.searches=Recherches sauvegardées
+_mine.saved.tags=Etiquettes sauvegardées
+_mine.user.information=Information pour l'utilisateur
+_mine.username=Nom d'utilisateur
 _option.any.field=N'importe quel champ
 _prompt.email.address=Adresse mél.
+_prompt.provider=Fournisseur
 _register.email.has.been.sent=Un mél. a été envoyé à l'adresse suivante
+_register.password.choose=Choisir un mot de passe
+_register.password.explain=La longueur du mot de passe doit être entre 6-30 caractères
+_register.pick.user.name=Votre nom d'utilisateur s'affichera une fois connecté
+_register.please.follow.link=Veuillez suivre le lien envoyé sur votre adresse mél pour finir votre enregistrement.
+_register.register=S´enregistrer
+_register.registration.failed=Une erreur s'est produite lors de votre enregistrement. Veuillez recommencer
+_register.repeat.password=Répéter le mot de passe
+_register.username.choose=Choisir un nom d'utilisateur
+_register.username.explain=Votre nom d'utilisateur s'affichera une fois connecté
 _search.field.creator=Createur
 _search.field.date=Date
+_search.option.subject=Sujet
+_search.option.title=Titre
+_success.search.saved=Recherche sauvegardée
 _unused.about.us=A propos
 _unused.accessibility=Accessibilité
 _unused.add=Ajouter
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Un agrégateur collecte du contenu provenant d'un é
 _unused.altprint=Imprimer cette page
 _unused.aplacetoshareideas=Une source d'inspiration et d'idées. Recherchez dans le patrimoine culturel de l'Europe et partagez vos découvertes.
 _unused.browse.through.time=Feuilleter dans le temps
+_unused.privacy=Confidentialité
+_unused.remember.me=Voulez-vous que Europeana retienne ce mot de passe
+_unused.remove=Retirer
+_unused.send.feedback=Envoyez-nous vos remarques
+_unused.share.your.ideas=Partager vos idées
+_unused.show.all=Afficher tout
+_unused.sign.in=S'inscrire
+_unused.site.map=Plan du site
+_unused.sound=Son
+_unused.tag.added=Etiquette ajoutée
+_unused.tag.addition.failed=Echec de l'ajout de l'étiquette
+_unused.tagging=Ajout d'une étiquette
+_unused.terms.and.conditions=Termes et conditions
+_unused.text=Texte
+_unused.username.in.use=déjà utilisé. Veuillez choisir un autre nom d'utilisateur
+_unused.usertags=Les étiquettes de l'utilisateur
+_unused.using.europeana=Utiliser Europeana
+_unused.view.as.xml=Voir en XML
+_unused.view.with.labels=Voir avec les labels
+_unused.view.without.labels=Voir sans les labels
+_unused.you.have.search.for=Vous avez recherché sur
 albania_t=Albanie
 armenia_t=Arménie
 austria_t=Autriche
