--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Níl aon mhíreanna sábháilte
 NoSavedSearches_t=Níl aon chuardaigh shábháilte
 NoSavedTags_t=Níl aon chlibeanna sábháilte
 NoScript_t=To make optimal use of this website you need to have JavaScript activated
-NotBoolean_t=ni
 Of_t=de
 OpensInNewWindow_t=Osclaíonn i bhfuinneog nua
-OrBoolean_t=nó
 Page_t=Leathanach
 PartnerExplain_t=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
 Partner_t=Comhpháirtí
 Partners_t=Comhpháirtithe
-PasswordChoose_t=Roghnaigh pasfhocal
-PasswordExplain_t=Caithfear pasfhocail a bheith idir 6 agus 30 carachtar ar fad
 Password_t=Pasfhocal
 PeopleAreCurrentlyThinkingAbout_t=Faoi láthair tá daoine ag smaoineamh ar
-PersonalPage=My Personal Page
-PickUserName_t=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáílte isteach
-PleaseFollowTheLinkProvided_t=Lean an nasc atá san r-phost le do thoil chun an próiseas cláraithe a chríochnú
-Previous_t=Roimhe
-Privacy_t=Príobháideacht
-Provider_t=Soláthróir
-RefineYourSearch_t=Beachtaigh do chuardach
 RegisterAgain_t=Cláraigh arís
-Register_t=Cláraigh
-RegistrationFailed_t=Tharla earráid agus do chlárú á phróiseáil. Triail arís é le do thoil
-RelatedContent_t=Ábhar gaolmhar
-RememberMe_t=Cuimhnigh orm ar an ríomhaire seo
-Remove_t=Bain
-RepeatPassword_t=Athscríobh an pasfhocal
 RequiredField_t=Is réimse riachtanach é seo
 Reset_t=Athshocraigh
 Results_t=Torthaí
-ReturnToResults_t=Fill ar na torthaí
-SaveThisSearch_t=Sábháil an cuardach seo
-SaveToPersonalPage=Sábháil chuig My Personal Page
-SavedItems_t=Míreanna sábhailte
-SavedSearches_t=Cuardaigh shábháilte
-SavedTags_t=Clibeanna sábhailte
-SearchSavedFailed_t=Sábháil cuardach teipthe
-SearchSaved_t=Cuardach sábháilte
-Search_t=Cuardaigh
 Sector_t=Earnáil
-SeeAllRelatedItems_t=Féach ar na míreanna gaolmhara
-SendUsFeedback_t=Seol aiseolas chugainn
-Send_t=Seol
-ShareWithAFriend_t=Roinn le cara
-ShareYourIdeas_t=Roinn do chuid smaointe
-ShowAll_t=Taispeáin gach rud
-SignIn_t=Sínigh isteach
-Sitemap_t=Mapa suímh
-Sound_t=Fuaim
 Sounds_t=Fuaimeanna
 StrorylineCredits_t=Storyline and credits
-Subject_t=Ábhar
-TagAdded_t=Clib curtha leis seo
-TagAdditionFailed_t=Theip ort an chlib a chur leis seo
-Tagging_t=Clibeáil
-TermsAndConditions_t=Téarmaí agus coinníollacha
-Text_t=Téacs
 Texts_t=Téacsanna
 ThisIsEuropeana_t=Seo é Europeana
 ThoughtLab_t=Smaoineamhlann
 TimelineNavigator_t=Nascleantóir amlíne
 Timeline_t=Amlíne
-Title_t=Teideal
 UserConductAgree_t=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. CLICK TO AGREE
 UserConduct_t=User Conduct
-UserInformation_t=Eolas úsáideora
-UserNameChoose_t=Roghnaigh ainm úsáideora
-UserNameExplain_t=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáilte isteach
-UserTags_t=Clibeanna úsáideora
-UsernameInUse_t=in úsáid. Roghnaigh ainm úsáideora eile le do thoil
-Username_t=Ainm úsáideora
-UsingEuropeana_t=Ag úsáid Europeana
 Video_t=Físeán
-Videos_t=Físeáin
-ViewAsXML_t=Amharc mar XML
-ViewInOriginalContext_t=Amharc sa chomhthécs bunaidh
-ViewWithLabels_t=Amharc le lipéid
-ViewWithoutLabels_t=Amharc gan lipéidd
 ViewingRelatedItems_t=Tá tú ag féachaint ar mhíreanna gaolmhara
-YouHaveSearchFor_t=Chuardaigh tú
 _action.add.annotation=null
 _action.add.tag=Cuir clib leis seo
 _action.advanced.search=Cuardach casta
@@ -146,7 +91,21 @@ _action.alt.more.info=Cliceáil anseo le haghaidh tuilleadh eolais
 _action.alt.next.page=cliceáil anseo le haghaidh an chéad leathanaigh torthaí eile
 _action.alt.previous.page=cliceáil anseo le haghaidh leathanch na dtorthaí roimhe seo
 _action.alt.table.view=Amharc tábla
+_action.personalpage=My Personal Page
+_action.previous=Roimhe
+_action.refine.your.search=Beachtaigh do chuardach
+_action.return.to.results=Fill ar na torthaí
+_action.save.this.search=Sábháil an cuardach seo
+_action.save.to.mine=Sábháil chuig My Personal Page
+_action.search=Cuardaigh
+_action.seeallrelateditems=Féach ar na míreanna gaolmhara
+_action.send=Seol
+_action.share.with.friend=Roinn le cara
+_action.videos=Físeáin
+_action.view.in.original.context=Amharc sa chomhthécs bunaidh
 _boolean.and=agus
+_boolean.not=ni
+_boolean.or=nó
 _facet.by.collection=null
 _facet.by.country=De réir tíre
 _facet.by.date=De réir dáta
@@ -155,14 +114,34 @@ _facet.by.provider=De réir soláthróra
 _facet.by.type=De réir sóirt
 _facet.by.user.tag=De réir clib úsáideora
 _facet.by.year=null
+_failure.search.saved=Sábháil cuardach teipthe
 _header.actions=Gníomhartha
+_header.relatedcontent=Ábhar gaolmhar
 _mine.date.saved=Dáta sábháilte
 _mine.delete=Scrios
+_mine.saved.items=Míreanna sábhailte
+_mine.saved.searches=Cuardaigh shábháilte
+_mine.saved.tags=Clibeanna sábhailte
+_mine.user.information=Eolas úsáideora
+_mine.username=Ainm úsáideora
 _option.any.field=Réimse ar bith
 _prompt.email.address=Seoladh r-phoist
+_prompt.provider=Soláthróir
 _register.email.has.been.sent=Seoladh r-phost chuig an seoladh seo leanas
+_register.password.choose=Roghnaigh pasfhocal
+_register.password.explain=Caithfear pasfhocail a bheith idir 6 agus 30 carachtar ar fad
+_register.pick.user.name=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáílte isteach
+_register.please.follow.link=Lean an nasc atá san r-phost le do thoil chun an próiseas cláraithe a chríochnú
+_register.register=Cláraigh
+_register.registration.failed=Tharla earráid agus do chlárú á phróiseáil. Triail arís é le do thoil
+_register.repeat.password=Athscríobh an pasfhocal
+_register.username.choose=Roghnaigh ainm úsáideora
+_register.username.explain=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáilte isteach
 _search.field.creator=Cruthaitheoir
 _search.field.date=Dáta
+_search.option.subject=Ábhar
+_search.option.title=Teideal
+_success.search.saved=Cuardach sábháilte
 _unused.about.us=Cé sinne
 _unused.accessibility=Inrochtain
 _unused.add=Suimigh
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*An aggregator collects material from a range of othe
 _unused.altprint=Priontáil an leathanach seo
 _unused.aplacetoshareideas=áit spreagtha agus smaointe. Déan cuardach ar bhailiúcháin chultúrtha na hEorpa, nasc le cosáin úsáideora eile agus roinn do chuid fionnahtana
 _unused.browse.through.time=Brabhsáil trí am
+_unused.privacy=Príobháideacht
+_unused.remember.me=Cuimhnigh orm ar an ríomhaire seo
+_unused.remove=Bain
+_unused.send.feedback=Seol aiseolas chugainn
+_unused.share.your.ideas=Roinn do chuid smaointe
+_unused.show.all=Taispeáin gach rud
+_unused.sign.in=Sínigh isteach
+_unused.site.map=Mapa suímh
+_unused.sound=Fuaim
+_unused.tag.added=Clib curtha leis seo
+_unused.tag.addition.failed=Theip ort an chlib a chur leis seo
+_unused.tagging=Clibeáil
+_unused.terms.and.conditions=Téarmaí agus coinníollacha
+_unused.text=Téacs
+_unused.username.in.use=in úsáid. Roghnaigh ainm úsáideora eile le do thoil
+_unused.usertags=Clibeanna úsáideora
+_unused.using.europeana=Ag úsáid Europeana
+_unused.view.as.xml=Amharc mar XML
+_unused.view.with.labels=Amharc le lipéid
+_unused.view.without.labels=Amharc gan lipéidd
+_unused.you.have.search.for=Chuardaigh tú
 albania_t=An Albáin
 armenia_t=An Airméin
 austria_t=An Ostair
