--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Ingen lagrede objekter
 NoSavedSearches_t=Ingen lagrede søk
 NoSavedTags_t=Ingen lagrede tags
 NoScript_t=Best bruk av dette nettstedet fordrer bruk av Javaskript
-NotBoolean_t=ikke
 Of_t=av
 OpensInNewWindow_t=Åpne i nytt vindu
-OrBoolean_t=eller
 Page_t=Side
 PartnerExplain_t=Dette er pertnernettverket som saamarbeidet for å virkeliggjøre Norvegiana, og som representerer Norvegiana i deres land og profesjonelle institusjoner.
 Partner_t=Partner
 Partners_t=Partnere
-PasswordChoose_t=Velg passord
-PasswordExplain_t=Passordet må være 6-30 karakterer langt
 Password_t=Passord
 PeopleAreCurrentlyThinkingAbout_t=Folk tenker for tiden på
-PersonalPage=Mitt Norvegiana
-PickUserName_t=Ditt brukernavn vil vises etter pålogging
-PleaseFollowTheLinkProvided_t=Vær vennlig å følg lenken som følger i emailen og ferdigstill registreringen
-Previous_t=Forrige
-Privacy_t=Privatvern
-Provider_t=Tilbyder
-RefineYourSearch_t=Begrens søket
 RegisterAgain_t=Registrer deg igjen
-Register_t=Registrer
-RegistrationFailed_t=Det oppsto en feil i forbindelse med registreringen. Prøv igjen.
-RelatedContent_t=Relatert innhold
-RememberMe_t=Husk meg på denne maskina
-Remove_t=Fjern
-RepeatPassword_t=Gjenta passord
 RequiredField_t=Dette er et oblogatorisk felt
 Reset_t=Reset
 Results_t=Resultater
-ReturnToResults_t=Gå til resultater
-SaveThisSearch_t=Lagre dette søket
-SaveToPersonalPage=Lagre i Mitt Norvegiana
-SavedItems_t=Lagrede objekter
-SavedSearches_t=Lagrede søk
-SavedTags_t=Lagrede tags
-SearchSavedFailed_t=Lagring av søk feilet
-SearchSaved_t=Søk lagret
-Search_t=Søk
 Sector_t=Sektor
-SeeAllRelatedItems_t=Se alle relaterte objekter
-SendUsFeedback_t=Send oss tilbakemeldinger
-Send_t=Send
-ShareWithAFriend_t=Del med en venn
-ShareYourIdeas_t=Del dine ideer
-ShowAll_t=Vis alle
-SignIn_t=Logg inn
-Sitemap_t=Nettkart
-Sound_t=Lyd
 Sounds_t=Lyder
 StrorylineCredits_t=Storyline og kredittering
-Subject_t=Tema
-TagAdded_t=Tag lagt til
-TagAdditionFailed_t=Tag kunne ikke legges til
-Tagging_t=Tagging
-TermsAndConditions_t=Betingelser og vilkår
-Text_t=Tekst
 Texts_t=Tekster
 ThisIsEuropeana_t=Dette er Norvegiana
 ThoughtLab_t=Tankelaboratorium
 TimelineNavigator_t=Tidslinjenavigator
 Timeline_t=Tidslinje
-Title_t=Tittel
 UserConductAgree_t=Jeg er inneforstått med at Mitt Norvegiana gir meg muligheter til å tagge et hvert objekt. Jeg vil ikke generere noen tag som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Gjennom å klikke på denne boksen sier jeg meg enig i å følge disse reglren, og er inneforståått med at brudd kan avslutte mitt medlemskap i Mitt uropeana. KLIKK FOR ENIGHET:
 UserConduct_t=Brukeroppførsel
-UserInformation_t=Brukerinfo
-UserNameChoose_t=Velg brukernavn
-UserNameExplain_t=Brukernavnet vill vises når du har logget på
-UserTags_t=Brukertags
-UsernameInUse_t=er i bruk. Velg et annet brukernavn
-Username_t=Brukernavn
-UsingEuropeana_t=Bruk av Norvegiana
 Video_t=Video
-Videos_t=Videoer
-ViewAsXML_t=Se som XML
-ViewInOriginalContext_t=Se i opprinnelig kontekst
-ViewWithLabels_t=Se med labels
-ViewWithoutLabels_t=Se uten labels
 ViewingRelatedItems_t=Du ser relatert innhold
-YouHaveSearchFor_t=Du har søkt på
 _action.add.annotation=null
 _action.add.tag=Legg til en tag
 _action.advanced.search=Avansert søk
@@ -146,7 +91,21 @@ _action.alt.more.info=Klikk her for mere info
 _action.alt.next.page=Klikk her for neste resultatside
 _action.alt.previous.page=Klikk her for forrige resultatside
 _action.alt.table.view=Tabellvisning
+_action.personalpage=Mitt Norvegiana
+_action.previous=Forrige
+_action.refine.your.search=Begrens søket
+_action.return.to.results=Gå til resultater
+_action.save.this.search=Lagre dette søket
+_action.save.to.mine=Lagre i Mitt Norvegiana
+_action.search=Søk
+_action.seeallrelateditems=Se alle relaterte objekter
+_action.send=Send
+_action.share.with.friend=Del med en venn
+_action.videos=Videoer
+_action.view.in.original.context=Se i opprinnelig kontekst
 _boolean.and=og
+_boolean.not=ikke
+_boolean.or=eller
 _facet.by.collection=null
 _facet.by.country=via land
 _facet.by.date=via dato
@@ -155,14 +114,34 @@ _facet.by.provider=via tilbyder
 _facet.by.type=via type
 _facet.by.user.tag=via brukertags
 _facet.by.year=null
+_failure.search.saved=Lagring av søk feilet
 _header.actions=via hendelser
+_header.relatedcontent=Relatert innhold
 _mine.date.saved=Dato lagret
 _mine.delete=Slett
+_mine.saved.items=Lagrede objekter
+_mine.saved.searches=Lagrede søk
+_mine.saved.tags=Lagrede tags
+_mine.user.information=Brukerinfo
+_mine.username=Brukernavn
 _option.any.field=Alle felt
 _prompt.email.address=Emailadresse
+_prompt.provider=Tilbyder
 _register.email.has.been.sent=En email er blitt sendt til denne adressen
+_register.password.choose=Velg passord
+_register.password.explain=Passordet må være 6-30 karakterer langt
+_register.pick.user.name=Ditt brukernavn vil vises etter pålogging
+_register.please.follow.link=Vær vennlig å følg lenken som følger i emailen og ferdigstill registreringen
+_register.register=Registrer
+_register.registration.failed=Det oppsto en feil i forbindelse med registreringen. Prøv igjen.
+_register.repeat.password=Gjenta passord
+_register.username.choose=Velg brukernavn
+_register.username.explain=Brukernavnet vill vises når du har logget på
 _search.field.creator=Produsent
 _search.field.date=Dato
+_search.option.subject=Tema
+_search.option.title=Tittel
+_success.search.saved=Søk lagret
 _unused.about.us=Om oss
 _unused.accessibility=Tilgjengelighet
 _unused.add=Legg til
@@ -170,6 +149,27 @@ _unused.aggregator.explain=En portal samler materiale fra en rekke andre bidrags
 _unused.altprint=Skriv ut denne siden
 _unused.aplacetoshareideas=et sted for inspirasjon og ideer. Søk i de kulturelle samlingene i Europa, finn nye brukerveier og del dine funn
 _unused.browse.through.time=Browse via tidslinje
+_unused.privacy=Privatvern
+_unused.remember.me=Husk meg på denne maskina
+_unused.remove=Fjern
+_unused.send.feedback=Send oss tilbakemeldinger
+_unused.share.your.ideas=Del dine ideer
+_unused.show.all=Vis alle
+_unused.sign.in=Logg inn
+_unused.site.map=Nettkart
+_unused.sound=Lyd
+_unused.tag.added=Tag lagt til
+_unused.tag.addition.failed=Tag kunne ikke legges til
+_unused.tagging=Tagging
+_unused.terms.and.conditions=Betingelser og vilkår
+_unused.text=Tekst
+_unused.username.in.use=er i bruk. Velg et annet brukernavn
+_unused.usertags=Brukertags
+_unused.using.europeana=Bruk av Norvegiana
+_unused.view.as.xml=Se som XML
+_unused.view.with.labels=Se med labels
+_unused.view.without.labels=Se uten labels
+_unused.you.have.search.for=Du har søkt på
 abm_contentProvider_t=Institusjon
 abm_county_t=Fylke
 abm_municipality_t=Kommune
