--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=Sem items guardados
 NoSavedSearches_t=Sem pesquisas guardadas
 NoSavedTags_t=Sem etiquetas adicionadas
 NoScript_t=Para optimizar a sua utilização deste sítio Web necessita de ter JavaScript activado
-NotBoolean_t=excepto
 Of_t=de
 OpensInNewWindow_t=Abre uma nova janela
-OrBoolean_t=ou
 Page_t=Página
 PartnerExplain_t=Esta é a rede de parceiros que colaboraram na concretização da Europeana e que representam a Europeana nos seus países e associações profissionais
 Partner_t=Parceiro
 Partners_t=Parceiros
-PasswordChoose_t=Escolha uma palavra-passe
-PasswordExplain_t=As palavras-passe devem ter entre 6-30 caracteres
 Password_t=Palavra-passe
 PeopleAreCurrentlyThinkingAbout_t=Actualmente, as pessoas pensam em
-PersonalPage=Minha Europeana
-PickUserName_t=O seu nome de utilizador será apresentado quando tiver feito login
-PleaseFollowTheLinkProvided_t=Por favor, siga a ligação que surge no email e termine o processo de registo
-Previous_t=Anterior
-Privacy_t=Privacidade
-Provider_t=Fornecedor
-RefineYourSearch_t=Refine a sua pesquisa
 RegisterAgain_t=Registar novamente
-Register_t=Registo
-RegistrationFailed_t=Ocorreu um erro no processamente do seu registo. Por favor tente novamente
-RelatedContent_t=Conteúdo relacionado
-RememberMe_t=Lembrar-me neste computador
-Remove_t=Remover
-RepeatPassword_t=Repetir palavra-passe
 RequiredField_t=Este campo é obrigatório
 Reset_t=Limpar
 Results_t=Resultados
-ReturnToResults_t=Voltar aos resultados
-SaveThisSearch_t=Guardar esta pesquisa
-SaveToPersonalPage=Guardar em Minha Europeana
-SavedItems_t=Items guardados
-SavedSearches_t=Pesquisas guardadas
-SavedTags_t=Etiquetas guardadas
-SearchSavedFailed_t=Guardar a pesquisa falhou
-SearchSaved_t=Pesquisa guardada
-Search_t=Pesquisa
 Sector_t=Sector
-SeeAllRelatedItems_t=Ver todos os items relacionados
-SendUsFeedback_t=Envie-nos as suas sugestões
-Send_t=Enviado
-ShareWithAFriend_t=Partilhe com um amigo
-ShareYourIdeas_t=Partilhe as suas ideias
-ShowAll_t=Mostrar todos
-SignIn_t=Entrar
-Sitemap_t=Mapa do sítio
-Sound_t=Som
 Sounds_t=Sons
 StrorylineCredits_t=Guião e créditos
-Subject_t=Assunto
-TagAdded_t=Etiqueta adicionada
-TagAdditionFailed_t=Adicionar etiqueta falhou
-Tagging_t=Etiquetar
-TermsAndConditions_t=Termos e condições
-Text_t=Texto
 Texts_t=Textos
 ThisIsEuropeana_t=Isto é a Europeana
 ThoughtLab_t=Laboratório de ideias
 TimelineNavigator_t=Navegador cronológico
 Timeline_t=Cronologia
-Title_t=Título
 UserConductAgree_t=Tenho conhecimento de que a Minha Europeana me dá oportunidade de criar etiquetas para qualquer item que queira. Comprometo-me a não criar quaisquer etiquetas que possam ser consideradas caluniosas, ofensivas, ameaçadoras, ilegítimas, difamatórias, infractoras, abusivas, provocadoras, persecutórias, pornográficas, obscenas, fraudulentas, invasivas de direitos de privacidade e publicidade, inspiradoras de ódio ou de algum modo reprováveis em termos raciais ou étnicos. Ao clicar neste botão, aceito cumprir este acordo e que, se o não cumprir, o meu registo na Minha Europeana será terminado. CLIQUE PARA ACEITAR
 UserConduct_t=Conduta do utilizador
-UserInformation_t=Informação do utilizador
-UserNameChoose_t=Escolha um nome de utilizador
-UserNameExplain_t=O seu nome de utilizador surgirá no écran ao entrar
-UserTags_t=Etiquetas de utilizador
-UsernameInUse_t=está a ser utilizado. Por favor escolha outro nome de utilizador
-Username_t=Nome de utilizador
-UsingEuropeana_t=A usar Europeana
 Video_t=Vídeo
-Videos_t=Vídeos
-ViewAsXML_t=Ver em XML
-ViewInOriginalContext_t=Ver no contexto original
-ViewWithLabels_t=Ver com etiquetas
-ViewWithoutLabels_t=Ver sem etiquetas
 ViewingRelatedItems_t=Está a visualizar items relacionados
-YouHaveSearchFor_t=Pesquisou por
 _action.add.annotation=null
 _action.add.tag=Adicionar uma etiqueta
 _action.advanced.search=Pesquisa avançada
@@ -146,7 +91,21 @@ _action.alt.more.info=Clique para mais informação
 _action.alt.next.page=Cloque aqui para a página de resultados seguinte
 _action.alt.previous.page=clique aqui para a página de resultados anterior
 _action.alt.table.view=Apresentação de tabela
+_action.personalpage=Minha Europeana
+_action.previous=Anterior
+_action.refine.your.search=Refine a sua pesquisa
+_action.return.to.results=Voltar aos resultados
+_action.save.this.search=Guardar esta pesquisa
+_action.save.to.mine=Guardar em Minha Europeana
+_action.search=Pesquisa
+_action.seeallrelateditems=Ver todos os items relacionados
+_action.send=Enviado
+_action.share.with.friend=Partilhe com um amigo
+_action.videos=Vídeos
+_action.view.in.original.context=Ver no contexto original
 _boolean.and=e
+_boolean.not=excepto
+_boolean.or=ou
 _facet.by.collection=null
 _facet.by.country=Por país
 _facet.by.date=Por data
@@ -155,14 +114,34 @@ _facet.by.provider=Por fornecedor
 _facet.by.type=Por tipo
 _facet.by.user.tag=Por etiqueta de utilizador
 _facet.by.year=null
+_failure.search.saved=Guardar a pesquisa falhou
 _header.actions=Acções
+_header.relatedcontent=Conteúdo relacionado
 _mine.date.saved=Guardado em (data)
 _mine.delete=Apagar
+_mine.saved.items=Items guardados
+_mine.saved.searches=Pesquisas guardadas
+_mine.saved.tags=Etiquetas guardadas
+_mine.user.information=Informação do utilizador
+_mine.username=Nome de utilizador
 _option.any.field=Qualquer campo
 _prompt.email.address=Endereço de email
+_prompt.provider=Fornecedor
 _register.email.has.been.sent=Foi-lhe enviado um email para o seguinte endereço
+_register.password.choose=Escolha uma palavra-passe
+_register.password.explain=As palavras-passe devem ter entre 6-30 caracteres
+_register.pick.user.name=O seu nome de utilizador será apresentado quando tiver feito login
+_register.please.follow.link=Por favor, siga a ligação que surge no email e termine o processo de registo
+_register.register=Registo
+_register.registration.failed=Ocorreu um erro no processamente do seu registo. Por favor tente novamente
+_register.repeat.password=Repetir palavra-passe
+_register.username.choose=Escolha um nome de utilizador
+_register.username.explain=O seu nome de utilizador surgirá no écran ao entrar
 _search.field.creator=Criador
 _search.field.date=Data
+_search.option.subject=Assunto
+_search.option.title=Título
+_success.search.saved=Pesquisa guardada
 _unused.about.us=Sobre nós
 _unused.accessibility=Acessibilidade
 _unused.add=Adicionar
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*Um agregador junta material de uma série de outros 
 _unused.altprint=Imprimir esta página
 _unused.aplacetoshareideas=um lugar de inspiração e ideias. Pesquise através das colecções culturais da Europa, ligue-se aos percursos de outros utilizadores e partilhe as suas descobertas.
 _unused.browse.through.time=Percorra atrvés do tempo
+_unused.privacy=Privacidade
+_unused.remember.me=Lembrar-me neste computador
+_unused.remove=Remover
+_unused.send.feedback=Envie-nos as suas sugestões
+_unused.share.your.ideas=Partilhe as suas ideias
+_unused.show.all=Mostrar todos
+_unused.sign.in=Entrar
+_unused.site.map=Mapa do sítio
+_unused.sound=Som
+_unused.tag.added=Etiqueta adicionada
+_unused.tag.addition.failed=Adicionar etiqueta falhou
+_unused.tagging=Etiquetar
+_unused.terms.and.conditions=Termos e condições
+_unused.text=Texto
+_unused.username.in.use=está a ser utilizado. Por favor escolha outro nome de utilizador
+_unused.usertags=Etiquetas de utilizador
+_unused.using.europeana=A usar Europeana
+_unused.view.as.xml=Ver em XML
+_unused.view.with.labels=Ver com etiquetas
+_unused.view.without.labels=Ver sem etiquetas
+_unused.you.have.search.for=Pesquisou por
 albania_t=Albânia
 armenia_t=Arménia
 austria_t=Austria
