--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -59,85 +59,30 @@ NoSavedItems_t=XXXXXX
 NoSavedSearches_t=XXXXXX
 NoSavedTags_t=XXXXXX
 NoScript_t=XXXXXX
-NotBoolean_t=XXXXXX
 Of_t=XXXXXX
 OpensInNewWindow_t=XXXXXX
-OrBoolean_t=XXXXXX
 Page_t=XXXXXX
 PartnerExplain_t=This is the network of partners who collaborated to make Europeana happen, and who represent Europeana in their countries and professional associations.
 Partner_t=XXXXXX
 Partners_t=XXXXXX
-PasswordChoose_t=XXXXXX
-PasswordExplain_t=XXXXXX
 Password_t=XXXXXX
 PeopleAreCurrentlyThinkingAbout_t=XXXXXX
-PersonalPage=XXXXXX
-PickUserName_t=XXXXXX
-PleaseFollowTheLinkProvided_t=XXXXXX
-Previous_t=XXXXXX
-Privacy_t=XXXXXX
-Provider_t=XXXXXX
-RefineYourSearch_t=XXXXXX
 RegisterAgain_t=XXXXXX
-Register_t=XXXXXX
-RegistrationFailed_t=XXXXXX
-RelatedContent_t=XXXXXX
-RememberMe_t=XXXXXX
-Remove_t=XXXXXX
-RepeatPassword_t=XXXXXX
 RequiredField_t=XXXXXX
 Reset_t=XXXXXX
 Results_t=XXXXXX
-ReturnToResults_t=XXXXXX
-SaveThisSearch_t=XXXXXX
-SaveToPersonalPage=XXXXXX
-SavedItems_t=XXXXXX
-SavedSearches_t=XXXXXX
-SavedTags_t=XXXXXX
-SearchSavedFailed_t=XXXXXX
-SearchSaved_t=XXXXXX
-Search_t=XXXXXX
 Sector_t=XXXXXX
-SeeAllRelatedItems_t=XXXXXX
-SendUsFeedback_t=XXXXXX
-Send_t=XXXXXX
-ShareWithAFriend_t=XXXXXX
-ShareYourIdeas_t=XXXXXX
-ShowAll_t=XXXXXX
-SignIn_t=XXXXXX
-Sitemap_t=XXXXXX
-Sound_t=XXXXXX
 Sounds_t=XXXXXX
 StrorylineCredits_t=XXXXXX
-Subject_t=XXXXXX
-TagAdded_t=XXXXXX
-TagAdditionFailed_t=XXXXXX
-Tagging_t=XXXXXX
-TermsAndConditions_t=XXXXXX
-Text_t=XXXXXX
 Texts_t=XXXXXX
 ThisIsEuropeana_t=XXXXXX
 ThoughtLab_t=XXXXXX
 TimelineNavigator_t=XXXXXX
 Timeline_t=XXXXXX
-Title_t=XXXXXX
 UserConductAgree_t=XXXXXX
 UserConduct_t=XXXXXX
-UserInformation_t=XXXXXX
-UserNameChoose_t=XXXXXX
-UserNameExplain_t=XXXXXX
-UserTags_t=XXXXXX
-UsernameInUse_t=XXXXXX
-Username_t=XXXXXX
-UsingEuropeana_t=XXXXXX
 Video_t=XXXXXX
-Videos_t=XXXXXX
-ViewAsXML_t=XXXXXX
-ViewInOriginalContext_t=XXXXXX
-ViewWithLabels_t=XXXXXX
-ViewWithoutLabels_t=XXXXXX
 ViewingRelatedItems_t=XXXXXX
-YouHaveSearchFor_t=XXXXXX
 _action.add.annotation=null
 _action.add.tag=XXXXXX
 _action.advanced.search=XXXXXX
@@ -146,7 +91,21 @@ _action.alt.more.info=XXXXXX
 _action.alt.next.page=XXXXXX
 _action.alt.previous.page=XXXXXX
 _action.alt.table.view=XXXXXX
+_action.personalpage=XXXXXX
+_action.previous=XXXXXX
+_action.refine.your.search=XXXXXX
+_action.return.to.results=XXXXXX
+_action.save.this.search=XXXXXX
+_action.save.to.mine=XXXXXX
+_action.search=XXXXXX
+_action.seeallrelateditems=XXXXXX
+_action.send=XXXXXX
+_action.share.with.friend=XXXXXX
+_action.videos=XXXXXX
+_action.view.in.original.context=XXXXXX
 _boolean.and=XXXXXX
+_boolean.not=XXXXXX
+_boolean.or=XXXXXX
 _facet.by.collection=null
 _facet.by.country=XXXXXX
 _facet.by.date=XXXXXX
@@ -155,14 +114,34 @@ _facet.by.provider=XXXXXX
 _facet.by.type=XXXXXX
 _facet.by.user.tag=XXXXXX
 _facet.by.year=null
+_failure.search.saved=XXXXXX
 _header.actions=XXXXXX
+_header.relatedcontent=XXXXXX
 _mine.date.saved=XXXXXX
 _mine.delete=XXXXXX
+_mine.saved.items=XXXXXX
+_mine.saved.searches=XXXXXX
+_mine.saved.tags=XXXXXX
+_mine.user.information=XXXXXX
+_mine.username=XXXXXX
 _option.any.field=XXXXXX
 _prompt.email.address=XXXXXX
+_prompt.provider=XXXXXX
 _register.email.has.been.sent=XXXXXX
+_register.password.choose=XXXXXX
+_register.password.explain=XXXXXX
+_register.pick.user.name=XXXXXX
+_register.please.follow.link=XXXXXX
+_register.register=XXXXXX
+_register.registration.failed=XXXXXX
+_register.repeat.password=XXXXXX
+_register.username.choose=XXXXXX
+_register.username.explain=XXXXXX
 _search.field.creator=XXXXXX
 _search.field.date=XXXXXX
+_search.option.subject=XXXXXX
+_search.option.title=XXXXXX
+_success.search.saved=XXXXXX
 _unused.about.us=XXXXXX
 _unused.accessibility=XXXXXX
 _unused.add=XXXXXX
@@ -170,6 +149,27 @@ _unused.aggregator.explain=*An aggregator collects material from a range of othe
 _unused.altprint=XXXXXX
 _unused.aplacetoshareideas=XXXXXX
 _unused.browse.through.time=XXXXXX
+_unused.privacy=XXXXXX
+_unused.remember.me=XXXXXX
+_unused.remove=XXXXXX
+_unused.send.feedback=XXXXXX
+_unused.share.your.ideas=XXXXXX
+_unused.show.all=XXXXXX
+_unused.sign.in=XXXXXX
+_unused.site.map=XXXXXX
+_unused.sound=XXXXXX
+_unused.tag.added=XXXXXX
+_unused.tag.addition.failed=XXXXXX
+_unused.tagging=XXXXXX
+_unused.terms.and.conditions=XXXXXX
+_unused.text=XXXXXX
+_unused.username.in.use=XXXXXX
+_unused.usertags=XXXXXX
+_unused.using.europeana=XXXXXX
+_unused.view.as.xml=XXXXXX
+_unused.view.with.labels=XXXXXX
+_unused.view.without.labels=XXXXXX
+_unused.you.have.search.for=XXXXXX
 albania_t=XXXXXX
 armenia_t=XXXXXX
 austria_t=XXXXXX
